@@ -1,19 +1,19 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi,
  * Yahoo! Inc., Erik Ramfelt, Tom Huybrechts
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -22,10 +22,20 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson;
 
-import com.google.common.collect.ImmutableSet;
+import static hudson.PluginWrapper.PluginDisableStatus.ALREADY_DISABLED;
+import static hudson.PluginWrapper.PluginDisableStatus.DISABLED;
+import static hudson.PluginWrapper.PluginDisableStatus.ERROR_DISABLING;
+import static hudson.PluginWrapper.PluginDisableStatus.NOT_DISABLED_DEPENDANTS;
+import static hudson.PluginWrapper.PluginDisableStatus.NO_SUCH_PLUGIN;
+import static java.util.logging.Level.WARNING;
+import static org.apache.commons.io.FilenameUtils.getBaseName;
+
 import com.google.common.collect.Sets;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.PluginManager.PluginInstanceStore;
 import hudson.model.AdministrativeMonitor;
 import hudson.model.Api;
@@ -33,34 +43,15 @@ import hudson.model.ModelObject;
 import hudson.model.UpdateCenter;
 import hudson.model.UpdateSite;
 import hudson.util.VersionNumber;
-import io.jenkins.lib.versionnumber.JavaSpecificationVersion;
-import jenkins.YesNoMaybe;
-import jenkins.model.Jenkins;
-import jenkins.util.java.JavaUtils;
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.logging.LogFactory;
-import org.kohsuke.accmod.Restricted;
-import org.kohsuke.accmod.restrictions.DoNotUse;
-import org.kohsuke.accmod.restrictions.NoExternalUse;
-import org.kohsuke.stapler.HttpResponse;
-import org.kohsuke.stapler.HttpResponses;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.export.Exported;
-import org.kohsuke.stapler.export.ExportedBean;
-import org.kohsuke.stapler.interceptor.RequirePOST;
-
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URL;
+import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
@@ -77,15 +68,23 @@ import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-
-import static hudson.PluginWrapper.PluginDisableStatus.ALREADY_DISABLED;
-import static hudson.PluginWrapper.PluginDisableStatus.DISABLED;
-import static hudson.PluginWrapper.PluginDisableStatus.ERROR_DISABLING;
-import static hudson.PluginWrapper.PluginDisableStatus.NOT_DISABLED_DEPENDANTS;
-import static hudson.PluginWrapper.PluginDisableStatus.NO_SUCH_PLUGIN;
-import static java.util.logging.Level.WARNING;
+import jenkins.YesNoMaybe;
+import jenkins.model.Jenkins;
 import jenkins.plugins.DetachedPluginsUtil;
-import static org.apache.commons.io.FilenameUtils.getBaseName;
+import jenkins.security.UpdateSiteWarningsMonitor;
+import jenkins.util.URLClassLoader2;
+import org.apache.commons.logging.LogFactory;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.Beta;
+import org.kohsuke.accmod.restrictions.DoNotUse;
+import org.kohsuke.accmod.restrictions.NoExternalUse;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.HttpResponses;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
+import org.kohsuke.stapler.export.Exported;
+import org.kohsuke.stapler.export.ExportedBean;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 
 /**
  * Represents a Jenkins plug-in and associated control information
@@ -111,11 +110,12 @@ import static org.apache.commons.io.FilenameUtils.getBaseName;
  */
 @ExportedBean
 public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
+
     /**
      * A plugin won't be loaded unless his declared dependencies are present and match the required minimal version.
      * This can be set to false to disable the version check (legacy behaviour)
      */
-    private static final boolean ENABLE_PLUGIN_DEPENDENCIES_VERSION_CHECK = Boolean.parseBoolean(System.getProperty(PluginWrapper.class.getName()+"." + "dependenciesVersionCheck.enabled", "true"));
+    private static final boolean ENABLE_PLUGIN_DEPENDENCIES_VERSION_CHECK = Boolean.parseBoolean(System.getProperty(PluginWrapper.class.getName() + "." + "dependenciesVersionCheck.enabled", "true"));
 
     /**
      * {@link PluginManager} to which this belongs to.
@@ -165,14 +165,14 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * The snapshot of {@code disableFile.exists()} as of the start up.
      */
     private final boolean active;
-    
+
     private boolean hasCycleDependency = false;
 
     private final List<Dependency> dependencies;
     private final List<Dependency> optionalDependencies;
 
     public List<String> getDependencyErrors() {
-        return Collections.unmodifiableList(new ArrayList<>(dependencyErrors.keySet()));
+        return List.copyOf(dependencyErrors.keySet());
     }
 
     @Restricted(NoExternalUse.class) // Jelly use
@@ -220,13 +220,15 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * The core can depend on a plugin if it is bundled. Sometimes it's the only thing that
      * depends on the plugin e.g. UI support library bundle plugin.
      */
-    private static Set<String> CORE_ONLY_DEPENDANT = ImmutableSet.copyOf(Arrays.asList("jenkins-core"));
+    private static Set<String> CORE_ONLY_DEPENDANT = Set.of("jenkins-core");
+
+    private Integer healthScore;
 
     /**
      * Set the list of components that depend on this plugin.
      * @param dependents The list of components that depend on this plugin.
      */
-    public void setDependents(@Nonnull Set<String> dependents) {
+    public void setDependents(@NonNull Set<String> dependents) {
         this.dependents = dependents;
     }
 
@@ -234,7 +236,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * @deprecated Please use {@link #setDependents}.
      */
     @Deprecated
-    public void setDependants(@Nonnull Set<String> dependents) {
+    public void setDependants(@NonNull Set<String> dependents) {
         setDependents(dependents);
     }
 
@@ -242,7 +244,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * Set the list of components that depend optionally on this plugin.
      * @param optionalDependents The list of components that depend optionally on this plugin.
      */
-    public void setOptionalDependents(@Nonnull Set<String> optionalDependents) {
+    public void setOptionalDependents(@NonNull Set<String> optionalDependents) {
         this.optionalDependents = optionalDependents;
     }
 
@@ -250,7 +252,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * @deprecated Please use {@link #setOptionalDependents}.
      */
     @Deprecated
-    public void setOptionalDependants(@Nonnull Set<String> optionalDependents) {
+    public void setOptionalDependants(@NonNull Set<String> optionalDependents) {
         setOptionalDependents(dependents);
     }
 
@@ -259,7 +261,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * Note that the list will include elements of {@link #getOptionalDependents}.
      * @return The list of components that depend on this plugin.
      */
-    public @Nonnull Set<String> getDependents() {
+    public @NonNull Set<String> getDependents() {
         if (isBundled && dependents.isEmpty()) {
             return CORE_ONLY_DEPENDANT;
         } else {
@@ -271,7 +273,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * @deprecated Please use {@link #getDependents}.
      */
     @Deprecated
-    public @Nonnull Set<String> getDependants() {
+    public @NonNull Set<String> getDependants() {
         return getDependents();
     }
 
@@ -279,7 +281,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * Like {@link #getDependents} but excluding optional dependencies.
      * @since 2.181
      */
-    public @Nonnull Set<String> getMandatoryDependents() {
+    public @NonNull Set<String> getMandatoryDependents() {
         Set<String> s = new HashSet<>(dependents);
         s.removeAll(optionalDependents);
         return s;
@@ -288,7 +290,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     /**
      * @return The list of components that depend optionally on this plugin.
      */
-    public @Nonnull Set<String> getOptionalDependents() {
+    public @NonNull Set<String> getOptionalDependents() {
         return optionalDependents;
     }
 
@@ -296,7 +298,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * @deprecated Please use {@link #getOptionalDependents}.
      */
     @Deprecated
-    public @Nonnull Set<String> getOptionalDependants() {
+    public @NonNull Set<String> getOptionalDependants() {
         return getOptionalDependents();
     }
 
@@ -307,7 +309,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * plugin, otherwise {@code false}.
      */
     public boolean hasDependents() {
-        return (isBundled || !dependents.isEmpty());
+        return isBundled || !dependents.isEmpty();
     }
 
     /**
@@ -363,6 +365,92 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         return dependencies.stream().anyMatch(d -> !d.optional);
     }
 
+    /**
+     * Is this plugin deprecated?
+     *
+     * @return {@code true} if and only if an update site reports deprecations for this plugin.
+     * @since 2.246
+     */
+    @Restricted(NoExternalUse.class)
+    public boolean isDeprecated() {
+        /*
+        While better handled in UpdateSite.Plugin that only exists for plugins actively being published.
+        We have no good model for plugin metadata from update sites for plugins not being published.
+         */
+        return !getDeprecations().isEmpty();
+    }
+
+    /**
+     * Inject the specified jar file(s) to the plugins classpath.
+     * <p><strong>Warning:</strong> This is advanced usage that you should not be needed in 99.9% of all cases, any jar insertion
+     * should happen early into the plugins lifecycle to prevent classloading issues in dependent plugins.
+     * </p><p>
+     * Rather than use this functionality it is to have co-operative behaviour between any consumer of the libraries and load the classes in a separate {@link ClassLoader}.
+     * you can expose third-party libraries from a dynamic location in various ways, such as:
+     *
+     * <ul>
+     * <li>You could split your plugin into two modules:
+     * <ul>
+     * <li>regular Jenkins plugin code, plus some interface encapsulating access to the lib via a minimal, simplified
+     * API
+     * <li>an implementation of that interface which compiles against a provided static reference copy of the library,
+     * and which is packaged in your plugin as a resource (not in WEB-INF/lib/*.jar)
+     * </ul>
+     * <li>with coordination:
+     * <ul>
+     * <li>dynamically find some JAR(s) on the controller (or perhaps even agent)
+     * <li>find the bridge JAR in your plugin’s resources area
+     * <li>create some {@link URLClassLoader} loading them both, parented to the plugin {@link ClassLoader}
+     * <li>use reflection to load &amp; instantiate the class of the bridge implementation, casting to the interface from
+     * the plugin
+     * </ul>
+     * </ul>
+     * For a concrete example see the <a href=
+     * "https://github.com/jenkinsci/database-plugin/blob/117.va2009e38b882/src/main/java/org/jenkinsci/plugins/database/GenericDatabase.java#L129-L142">database
+     * plugin</a>. *
+     *
+     * @throws Exception if the File could not be inserted into the classpath for some reason.
+     * @since 2.313
+     */
+    @Restricted(Beta.class)
+    public void injectJarsToClasspath(File... jars) throws Exception {
+        if (classLoader instanceof URLClassLoader2) {
+            for (File f : jars) {
+                LOGGER.log(Level.CONFIG, () -> "Inserting " + f + " into " + shortName + " plugin's classpath");
+                ((URLClassLoader2) classLoader).addURL(f.toURI().toURL());
+            }
+        } else {
+            throw new AssertionError("PluginWrapper classloader has changed type, but this code has not been updated accordingly");
+        }
+
+    }
+
+    @Restricted(NoExternalUse.class) // Jelly use only
+    public Integer getHealthScore() {
+        if (this.healthScore == null) {
+            this.healthScore = getInfoFromAllSites().stream()
+                    .filter(Objects::nonNull)
+                    .filter(p -> p.healthScore != null)
+                    .findFirst()
+                    .map(plugin -> plugin.healthScore)
+                    .orElse(null);
+        }
+        return this.healthScore;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public static String getHealthScoreClassForScore(int score) {
+        if (score > 80) return "top";
+        if (score > 60) return "middle";
+        return "bottom";
+    }
+
+    @Restricted(NoExternalUse.class) // Jelly use only
+    public String getHealthScoreClass() {
+        if (this.healthScore == null) return null;
+        return getHealthScoreClassForScore(this.healthScore);
+    }
+
     @ExportedBean
     public static final class Dependency {
         @Exported
@@ -374,10 +462,10 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
         public Dependency(String s) {
             int idx = s.indexOf(':');
-            if(idx==-1)
-                throw new IllegalArgumentException("Illegal dependency specifier "+s);
-            this.shortName = Util.intern(s.substring(0,idx));
-            String version = Util.intern(s.substring(idx+1));
+            if (idx == -1)
+                throw new IllegalArgumentException("Illegal dependency specifier " + s);
+            this.shortName = Util.intern(s.substring(0, idx));
+            String version = Util.intern(s.substring(idx + 1));
 
             boolean isOptional = false;
             String[] osgiProperties = version.split("[;]");
@@ -399,47 +487,53 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         @Override
         public String toString() {
             return shortName + " (" + version + ")" + (optional ? " optional" : "");
-        }        
+        }
     }
 
     /**
      * @param archive
      *      A .jpi archive file jar file, or a .jpl linked plugin.
      *  @param manifest
-     *  	The manifest for the plugin
+     *      The manifest for the plugin
      *  @param baseResourceURL
-     *  	A URL pointing to the resources for this plugin
+     *      A URL pointing to the resources for this plugin
      *  @param classLoader
-     *  	a classloader that loads classes from this plugin and its dependencies
+     *      a classloader that loads classes from this plugin and its dependencies
      *  @param disableFile
-     *  	if this file exists on startup, the plugin will not be activated
+     *      if this file exists on startup, the plugin will not be activated
      *  @param dependencies a list of mandatory dependencies
      *  @param optionalDependencies a list of optional dependencies
      */
-    public PluginWrapper(PluginManager parent, File archive, Manifest manifest, URL baseResourceURL, 
-			ClassLoader classLoader, File disableFile, 
-			List<Dependency> dependencies, List<Dependency> optionalDependencies) {
+    public PluginWrapper(PluginManager parent, File archive, Manifest manifest, URL baseResourceURL,
+            ClassLoader classLoader, File disableFile,
+            List<Dependency> dependencies, List<Dependency> optionalDependencies) {
         this.parent = parent;
-		this.manifest = manifest;
-		this.shortName = Util.intern(computeShortName(manifest, archive.getName()));
-		this.baseResourceURL = baseResourceURL;
-		this.classLoader = classLoader;
-		this.disableFile = disableFile;
-		this.active = !disableFile.exists();
-		this.dependencies = dependencies;
-		this.optionalDependencies = optionalDependencies;
+        this.manifest = manifest;
+        this.shortName = Util.intern(computeShortName(manifest, archive.getName()));
+        this.baseResourceURL = baseResourceURL;
+        this.classLoader = classLoader;
+        this.disableFile = disableFile;
+        this.active = !disableFile.exists();
+        this.dependencies = dependencies;
+        this.optionalDependencies = optionalDependencies;
         for (Dependency d : optionalDependencies) {
             assert d.optional : d + " included among optionalDependencies of " + shortName + " but was not marked optional";
         }
         this.archive = archive;
     }
 
+    @Override
     public String getDisplayName() {
-        return StringUtils.removeStart(getLongName(), "Jenkins ");
+        String displayName = getLongName();
+        String removePrefix = "Jenkins ";
+        if (displayName != null && displayName.startsWith(removePrefix)) {
+            return displayName.substring(removePrefix.length());
+        }
+        return displayName;
     }
 
     public Api getApi() {
-        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkAnyPermission(Jenkins.SYSTEM_READ, Jenkins.MANAGE);
         return new Api(this);
     }
 
@@ -464,11 +558,11 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         // use the name captured in the manifest, as often plugins
         // depend on the specific short name in its URLs.
         String n = manifest.getMainAttributes().getValue("Short-Name");
-        if(n!=null)     return n;
+        if (n != null)     return n;
 
         // maven seems to put this automatically, so good fallback to check.
         n = manifest.getMainAttributes().getValue("Extension-Name");
-        if(n!=null)     return n;
+        if (n != null)     return n;
 
         // otherwise infer from the file name, since older plugins don't have
         // this entry.
@@ -508,10 +602,23 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     /**
      * Gets the instance of {@link Plugin} contributed by this plugin.
+     * @return Plugin instace or {@code null} if it is not present in the plugin instance store.
      */
     public @CheckForNull Plugin getPlugin() {
         PluginInstanceStore pis = Jenkins.lookup(PluginInstanceStore.class);
         return pis != null ? pis.store.get(this) : null;
+    }
+
+    /**
+     * Gets the instance of {@link Plugin} contributed by this plugin.
+     * @throws Exception no plugin in the {@link PluginInstanceStore}
+     */
+    public @NonNull Plugin getPluginOrFail() throws Exception {
+        Plugin plugin = getPlugin();
+        if (plugin == null) {
+            throw new Exception("Cannot find the plugin instance: " + shortName);
+        }
+        return plugin;
     }
 
     /**
@@ -526,7 +633,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         List<UpdateSite.Plugin> siteMetadataList = getInfoFromAllSites();
         String firstSiteUrl = null;
         if (!siteMetadataList.isEmpty()) {
-        	firstSiteUrl = siteMetadataList.get(0).wiki;
+            firstSiteUrl = siteMetadataList.get(0).wiki;
             if (allUrlsMatch(firstSiteUrl, siteMetadataList)) {
                 return firstSiteUrl;
             }
@@ -536,7 +643,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         // use manifest (since maven-hpi-plugin 1.30)
         String url = manifest.getMainAttributes().getValue("Url");
         if (url != null) {
-        	return url;
+            return url;
         }
         return firstSiteUrl;
     }
@@ -545,18 +652,21 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         return uiList.stream().allMatch(k -> k.wiki != null && k.wiki.equals(url));
     }
 
-	@Override
+    @Override
     public String toString() {
         return "Plugin:" + getShortName();
     }
 
     /**
      * Returns a one-line descriptive name of this plugin.
+     *
+     * @deprecated For most purposes, use {@link #getDisplayName()}.
      */
     @Exported
+    @Deprecated
     public String getLongName() {
         String name = manifest.getMainAttributes().getValue("Long-Name");
-        if(name!=null)      return name;
+        if (name != null)      return name;
         return shortName;
     }
 
@@ -566,7 +676,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @Exported
     public YesNoMaybe supportsDynamicLoad() {
         String v = manifest.getMainAttributes().getValue("Support-Dynamic-Loading");
-        if (v==null) return YesNoMaybe.MAYBE;
+        if (v == null) return YesNoMaybe.MAYBE;
         return Boolean.parseBoolean(v) ? YesNoMaybe.YES : YesNoMaybe.NO;
     }
 
@@ -580,11 +690,11 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     private String getVersionOf(Manifest manifest) {
         String v = manifest.getMainAttributes().getValue("Plugin-Version");
-        if(v!=null)      return v;
+        if (v != null)      return v;
 
         // plugins generated before maven-hpi-plugin 1.3 should still have this attribute
         v = manifest.getMainAttributes().getValue("Implementation-Version");
-        if(v!=null)      return v;
+        if (v != null)      return v;
 
         return "???";
     }
@@ -597,25 +707,11 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @Exported
     public @CheckForNull String getRequiredCoreVersion() {
         String v = manifest.getMainAttributes().getValue("Jenkins-Version");
-        if (v!= null) return v;
+        if (v != null) return v;
 
         v = manifest.getMainAttributes().getValue("Hudson-Version");
-        if (v!= null) return v;
+        if (v != null) return v;
         return null;
-    }
-
-    /**
-     * Returns the minimum Java version of this plugin, as specified in the plugin metadata.
-     * Generally coming from the {@code java.level} extracted as MANIFEST's metadata with
-     * <a href="https://github.com/jenkinsci/plugin-pom/pull/134">this addition on the plugins' parent pom</a>.
-     *
-     * @see <a href="https://github.com/jenkinsci/maven-hpi-plugin/pull/75">maven-hpi-plugin#PR-75</a>.
-     *
-     * @since 2.158
-     */
-    @Exported
-    public @CheckForNull String getMinimumJavaVersion() {
-        return manifest.getMainAttributes().getValue("Minimum-Java-Version");
     }
 
     /**
@@ -633,7 +729,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             return getVersionNumber().compareTo(v) < 0;
         } catch (IllegalArgumentException e) {
             // if we can't figure out our current version, it probably means it's very old,
-            // since the version information is missing only from the very old plugins 
+            // since the version information is missing only from the very old plugins
             return true;
         }
     }
@@ -663,7 +759,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             try {
                 ((Closeable) classLoader).close();
             } catch (IOException e) {
-                LOGGER.log(WARNING, "Failed to shut down classloader",e);
+                LOGGER.log(WARNING, "Failed to shut down classloader", e);
             }
     }
 
@@ -675,27 +771,26 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             LOGGER.log(Level.FINEST, "Plugin {0} has been already enabled. Skipping the enable() operation", getShortName());
             return;
         }
-        if(!disableFile.delete())
-            throw new IOException("Failed to delete "+disableFile);
+        if (!disableFile.delete())
+            throw new IOException("Failed to delete " + disableFile);
     }
 
     /**
      * Disables this plugin next time Jenkins runs. As it doesn't check anything, it's recommended to use the method
      * {@link #disable(PluginDisableStrategy)}
+     * @deprecated use {@link #disable(PluginDisableStrategy)}
      */
-    @Deprecated //see https://issues.jenkins-ci.org/browse/JENKINS-27177
+    @Deprecated //see https://issues.jenkins.io/browse/JENKINS-27177
     public void disable() throws IOException {
         disableWithoutCheck();
     }
 
     /**
      * Disable a plugin wihout checking any dependency. Only add the disable file.
-     * @throws IOException
      */
     private void disableWithoutCheck() throws IOException {
-        // creates an empty file
         try (OutputStream os = Files.newOutputStream(disableFile.toPath())) {
-            os.close();
+            // creates an empty file
         } catch (InvalidPathException e) {
             throw new IOException(e);
         }
@@ -706,7 +801,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * @param strategy strategy to use
      * @return an object representing the result of the disablement of this plugin and its dependents plugins.
      */
-    public @Nonnull PluginDisableResult disable(@Nonnull PluginDisableStrategy strategy) {
+    public @NonNull PluginDisableResult disable(@NonNull PluginDisableStrategy strategy) {
         PluginDisableResult result = new PluginDisableResult(shortName);
 
         if (!this.isEnabled()) {
@@ -805,12 +900,12 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     public boolean isActive() {
         return active && !hasCycleDependency();
     }
-    
-    public boolean hasCycleDependency(){
+
+    public boolean hasCycleDependency() {
         return hasCycleDependency;
     }
 
-    public void setHasCycleDependency(boolean hasCycle){
+    public void setHasCycleDependency(boolean hasCycle) {
         hasCycleDependency = hasCycle;
     }
 
@@ -838,7 +933,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     }
 
     public void setPlugin(Plugin plugin) {
-        Jenkins.lookup(PluginInstanceStore.class).store.put(this,plugin);
+        Jenkins.lookup(PluginInstanceStore.class).store.put(this, plugin);
         plugin.wrapper = this;
     }
 
@@ -848,7 +943,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     public boolean hasLicensesXml() {
         try {
-            new URL(baseResourceURL,"WEB-INF/licenses.xml").openStream().close();
+            new URL(baseResourceURL, "WEB-INF/licenses.xml").openStream().close();
             return true;
         } catch (IOException e) {
             return false;
@@ -873,14 +968,6 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
                     versionDependencyError(Messages.PluginWrapper_obsoleteCore(Jenkins.getVersion().toString(), requiredCoreVersion), Jenkins.getVersion().toString(), requiredCoreVersion);
                 }
             }
-
-            String minimumJavaVersion = getMinimumJavaVersion();
-            if (minimumJavaVersion != null) {
-                JavaSpecificationVersion actualVersion = JavaUtils.getCurrentJavaRuntimeVersionNumber();
-                if (actualVersion.isOlderThan(new JavaSpecificationVersion(minimumJavaVersion))) {
-                    versionDependencyError(Messages.PluginWrapper_obsoleteJava(actualVersion.toString(), minimumJavaVersion), actualVersion.toString(), minimumJavaVersion);
-                }
-            }
         }
         // make sure dependencies exist
         for (Dependency d : dependencies) {
@@ -888,7 +975,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             if (dependency == null) {
                 PluginWrapper failedDependency = NOTICE.getPlugin(d.shortName);
                 if (failedDependency != null) {
-                    dependencyErrors.put(Messages.PluginWrapper_failed_to_load_dependency(failedDependency.getLongName(), failedDependency.getVersion()), true);
+                    dependencyErrors.put(Messages.PluginWrapper_failed_to_load_dependency_2(failedDependency.getLongName(), failedDependency.getShortName(), failedDependency.getVersion()), true);
                     break;
                 } else {
                     dependencyErrors.put(Messages.PluginWrapper_missing(d.shortName, d.version), false);
@@ -896,13 +983,13 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             } else {
                 if (dependency.isActive()) {
                     if (isDependencyObsolete(d, dependency)) {
-                        versionDependencyError(Messages.PluginWrapper_obsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                        versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                     }
                 } else {
                     if (isDependencyObsolete(d, dependency)) {
-                        versionDependencyError(Messages.PluginWrapper_disabledAndObsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                        versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                     } else {
-                        dependencyErrors.put(Messages.PluginWrapper_disabled(dependency.getLongName()), false);
+                        dependencyErrors.put(Messages.PluginWrapper_disabled_2(dependency.getLongName(), dependency.getShortName()), false);
                     }
                 }
 
@@ -913,7 +1000,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             PluginWrapper dependency = parent.getPlugin(d.shortName);
             if (dependency != null && dependency.isActive()) {
                 if (isDependencyObsolete(d, dependency)) {
-                    versionDependencyError(Messages.PluginWrapper_obsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                    versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                 } else {
                     dependencies.add(d);
                 }
@@ -922,7 +1009,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         if (!dependencyErrors.isEmpty()) {
             NOTICE.addPlugin(this);
             StringBuilder messageBuilder = new StringBuilder();
-            messageBuilder.append(Messages.PluginWrapper_failed_to_load_plugin(getLongName(), getVersion())).append(System.lineSeparator());
+            messageBuilder.append(Messages.PluginWrapper_failed_to_load_plugin_2(getLongName(), getShortName(), getVersion())).append(System.lineSeparator());
             for (Iterator<String> iterator = dependencyErrors.keySet().iterator(); iterator.hasNext(); ) {
                 String dependencyError = iterator.next();
                 messageBuilder.append(" - ").append(dependencyError);
@@ -945,7 +1032,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     private void versionDependencyError(String message, String actual, String minimum) {
         if (isSnapshot(actual) || isSnapshot(minimum)) {
-            LOGGER.log(WARNING, "Suppressing dependency error in {0} v{1}: {2}", new Object[] {getLongName(), getVersion(), message});
+            LOGGER.log(WARNING, "Suppressing dependency error in {0} v{1}: {2}", new Object[] {getShortName(), getVersion(), message});
         } else {
             dependencyErrors.put(message, false);
         }
@@ -954,7 +1041,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     /**
      * Similar to {@code org.apache.maven.artifact.ArtifactUtils.isSnapshot}.
      */
-    static boolean isSnapshot(@Nonnull String version) {
+    static boolean isSnapshot(@NonNull String version) {
         return version.contains("-SNAPSHOT") || version.matches(".+-[0-9]{8}.[0-9]{6}-[0-9]+");
     }
 
@@ -969,10 +1056,10 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     public UpdateSite.Plugin getUpdateInfo() {
         UpdateCenter uc = Jenkins.get().getUpdateCenter();
         UpdateSite.Plugin p = uc.getPlugin(getShortName(), getVersionNumber());
-        if(p!=null && p.isNewerThan(getVersion())) return p;
+        if (p != null && p.isNewerThan(getVersion())) return p;
         return null;
     }
-    
+
     /**
      * returns the {@link hudson.model.UpdateSite.Plugin} object, or null.
      */
@@ -997,9 +1084,9 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     @Exported
     public boolean hasUpdate() {
-        return getUpdateInfo()!=null;
+        return getUpdateInfo() != null;
     }
-    
+
     @Exported
     @Deprecated // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
     public boolean isPinned() {
@@ -1025,9 +1112,46 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         return DetachedPluginsUtil.isDetachedPlugin(shortName);
     }
 
+    @Restricted(NoExternalUse.class)
+    public boolean hasImpliedDependents() {
+        if (!isDetached()) {
+            return false;
+        }
+        for (PluginWrapper p : Jenkins.get().getPluginManager().getPlugins()) {
+            for (Dependency dependency : DetachedPluginsUtil.getImpliedDependencies(p.shortName, p.getRequiredCoreVersion())) {
+                if (dependency.shortName.equals(shortName)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    /**
+     * Get list of implied dependencies.
+     * @since 2.296
+     */
+    @Restricted(NoExternalUse.class)
+    public @NonNull Set<String> getImpliedDependents() {
+        if (!isDetached()) {
+            return Collections.emptySet();
+        }
+
+        Set<String> implied = new HashSet<>();
+        for (PluginWrapper p : Jenkins.get().getPluginManager().getPlugins()) {
+            for (Dependency dependency : DetachedPluginsUtil.getImpliedDependencies(p.shortName, p.getRequiredCoreVersion())) {
+                if (dependency.shortName.equals(shortName)) {
+                    implied.add(p.shortName);
+                }
+            }
+        }
+        return implied;
+    }
+
     /**
      * Sort by short name.
      */
+    @Override
     public int compareTo(PluginWrapper pw) {
         return shortName.compareToIgnoreCase(pw.shortName);
     }
@@ -1044,7 +1168,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * Where is the backup file?
      */
     public File getBackupFile() {
-        return new File(Jenkins.get().getRootDir(),"plugins/"+getShortName() + ".bak");
+        return new File(Jenkins.get().getRootDir(), "plugins/" + getShortName() + ".bak");
     }
 
     /**
@@ -1070,6 +1194,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     /**
      * Checks if this plugin is pinned and that's forcing us to use an older version than the bundled one.
+     * @deprecated removed without replacement
      */
     @Deprecated // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
     public boolean isPinningForcingOldVersion() {
@@ -1077,7 +1202,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     }
 
     @Extension
-    public final static PluginWrapperAdministrativeMonitor NOTICE = new PluginWrapperAdministrativeMonitor();
+    public static final PluginWrapperAdministrativeMonitor NOTICE = new PluginWrapperAdministrativeMonitor();
 
     /**
      * Administrative Monitor for failed plugins
@@ -1089,6 +1214,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             plugins.put(plugin.shortName, plugin);
         }
 
+        @Override
         public boolean isActivated() {
             return !plugins.isEmpty();
         }
@@ -1114,9 +1240,9 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         /**
          * Depending on whether the user said "dismiss" or "correct", send him to the right place.
          */
-        public void doAct(StaplerRequest req, StaplerResponse rsp) throws IOException {
-            if(req.hasParameter("correct")) {
-                rsp.sendRedirect(req.getContextPath()+"/pluginManager");
+        public void doAct(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
+            if (req.hasParameter("correct")) {
+                rsp.sendRedirect(req.getContextPath() + "/pluginManager");
 
             }
         }
@@ -1253,16 +1379,59 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @RequirePOST
     public HttpResponse doDoUninstall() throws IOException {
         Jenkins jenkins = Jenkins.get();
-        
+
         jenkins.checkPermission(Jenkins.ADMINISTER);
-        archive.delete();
+        Files.deleteIfExists(Util.fileToPath(archive));
+        Files.deleteIfExists(Util.fileToPath(disableFile));
 
         // Redo who depends on who.
         jenkins.getPluginManager().resolveDependentPlugins();
 
-        return HttpResponses.redirectViaContextPath("/pluginManager/installed");   // send back to plugin manager
+        return HttpResponses.redirectViaContextPath("/manage/pluginManager/installed");   // send back to plugin manager
     }
 
+    @Restricted(DoNotUse.class) // Jelly
+    public List<UpdateSite.Warning> getActiveWarnings() {
+        return ExtensionList.lookupSingleton(UpdateSiteWarningsMonitor.class).getActivePluginWarningsByPlugin().getOrDefault(this, Collections.emptyList());
+    }
+
+    @Restricted(NoExternalUse.class)
+    public List<UpdateSite.Deprecation> getDeprecations() {
+        /* Would be much nicer to go through getInfoFromAllSites but that only works for currently published plugins */
+        List<UpdateSite.Deprecation> deprecations = new ArrayList<>();
+        final UpdateCenter updateCenter = Jenkins.get().getUpdateCenter();
+        if (updateCenter.isSiteDataReady()) {
+            for (UpdateSite site : updateCenter.getSites()) {
+                final UpdateSite.Data data = site.getData();
+                if (data != null) {
+                    for (Map.Entry<String, UpdateSite.Deprecation> entry : data.getDeprecations().entrySet()) {
+                        if (entry.getKey().equals(this.shortName)) {
+                            deprecations.add(entry.getValue());
+                        }
+                    }
+                }
+            }
+        }
+        return deprecations;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public String getIssueTrackerReportUrl() {
+        final UpdateCenter updateCenter = Jenkins.get().getUpdateCenter();
+        if (updateCenter.isSiteDataReady()) {
+            for (UpdateSite site : updateCenter.getSites()) {
+                final UpdateSite.Plugin sitePlugin = site.getPlugin(this.shortName);
+                if (sitePlugin != null && sitePlugin.issueTrackers != null) {
+                    for (UpdateSite.IssueTracker issueTracker : sitePlugin.issueTrackers) {
+                        if (issueTracker.reportUrl != null) {
+                            return issueTracker.reportUrl;
+                        }
+                    }
+                }
+            }
+        }
+        return null;
+    }
 
     private static final Logger LOGGER = Logger.getLogger(PluginWrapper.class.getName());
 
