@@ -23,22 +23,28 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
+import static jakarta.servlet.http.HttpServletResponse.SC_BAD_REQUEST;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
+import edu.umd.cs.findbugs.annotations.OverrideMustInvoke;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.EnvVars;
 import hudson.Extension;
 import hudson.Launcher.ProcStarter;
-import hudson.slaves.Cloud;
-import jenkins.security.stapler.StaplerDispatchable;
 import hudson.Util;
 import hudson.cli.declarative.CLIResolver;
 import hudson.console.AnnotatedLargeText;
 import hudson.init.Initializer;
 import hudson.model.Descriptor.FormException;
-import hudson.model.Queue.FlyweightTask;
 import hudson.model.labels.LabelAtom;
 import hudson.model.queue.WorkUnit;
+import hudson.node_monitors.AbstractDiskSpaceMonitor;
+import hudson.node_monitors.DiskSpaceMonitorNodeProperty;
 import hudson.node_monitors.NodeMonitor;
 import hudson.remoting.Channel;
 import hudson.remoting.VirtualChannel;
@@ -51,77 +57,91 @@ import hudson.slaves.AbstractCloudSlave;
 import hudson.slaves.ComputerLauncher;
 import hudson.slaves.ComputerListener;
 import hudson.slaves.NodeProperty;
-import hudson.slaves.RetentionStrategy;
-import hudson.slaves.WorkspaceList;
 import hudson.slaves.OfflineCause;
 import hudson.slaves.OfflineCause.ByCLI;
+import hudson.slaves.RetentionStrategy;
+import hudson.slaves.WorkspaceList;
+import hudson.triggers.SafeTimerTask;
+import hudson.util.ClassLoaderSanityThreadFactory;
 import hudson.util.DaemonThreadFactory;
 import hudson.util.EditDistance;
 import hudson.util.ExceptionCatchingThreadFactory;
-import hudson.util.RemotingDiagnostics;
-import hudson.util.RemotingDiagnostics.HeapDump;
-import hudson.util.RunList;
+import hudson.util.FormApply;
 import hudson.util.Futures;
 import hudson.util.IOUtils;
 import hudson.util.NamingThreadFactory;
+import hudson.util.RemotingDiagnostics;
+import hudson.util.RemotingDiagnostics.HeapDump;
+import hudson.util.RunList;
+import jakarta.servlet.ServletException;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.net.Inet4Address;
+import java.net.InetAddress;
+import java.net.NetworkInterface;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.StandardCopyOption;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.logging.Level;
+import java.util.logging.LogRecord;
+import java.util.logging.Logger;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import jenkins.model.DisplayExecutor;
+import jenkins.model.IComputer;
+import jenkins.model.IDisplayExecutor;
 import jenkins.model.Jenkins;
-import jenkins.util.ContextResettingExecutorService;
-import jenkins.util.SystemProperties;
-import jenkins.security.MasterToSlaveCallable;
+import jenkins.search.SearchGroup;
+import jenkins.security.ExtendedReadRedaction;
 import jenkins.security.ImpersonatingExecutorService;
-
-import org.apache.commons.lang.StringUtils;
-import org.jenkins.ui.icon.Icon;
-import org.jenkins.ui.icon.IconSet;
+import jenkins.security.MasterToSlaveCallable;
+import jenkins.security.stapler.StaplerDispatchable;
+import jenkins.util.ContextResettingExecutorService;
+import jenkins.util.ErrorLoggingExecutorService;
+import jenkins.util.Listeners;
+import jenkins.util.SystemProperties;
+import jenkins.widgets.HasWidgets;
+import net.jcip.annotations.GuardedBy;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.args4j.Argument;
 import org.kohsuke.args4j.CmdLineException;
-import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.QueryParameter;
-import org.kohsuke.stapler.HttpResponses;
-import org.kohsuke.stapler.HttpResponse;
 import org.kohsuke.stapler.HttpRedirect;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.HttpResponses;
+import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.Stapler;
+import org.kohsuke.stapler.StaplerProxy;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.kohsuke.stapler.WebMethod;
 import org.kohsuke.stapler.export.Exported;
 import org.kohsuke.stapler.export.ExportedBean;
 import org.kohsuke.stapler.interceptor.RequirePOST;
 import org.kohsuke.stapler.verb.POST;
-
-import javax.annotation.OverridingMethodsMustInvokeSuper;
-import javax.annotation.concurrent.GuardedBy;
-import javax.servlet.ServletException;
-
-import java.io.File;
-import java.io.FilenameFilter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.PrintWriter;
-import java.io.StringWriter;
-import java.util.*;
-import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.ExecutionException;
-import java.util.logging.LogRecord;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import java.nio.charset.Charset;
-import java.net.InetAddress;
-import java.net.NetworkInterface;
-import java.net.Inet4Address;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-
-import static javax.servlet.http.HttpServletResponse.*;
 
 /**
  * Represents the running state of a remote computer that holds {@link Executor}s.
@@ -134,9 +154,9 @@ import static javax.servlet.http.HttpServletResponse.*;
  * This object is related to {@link Node} but they have some significant differences.
  * {@link Computer} primarily works as a holder of {@link Executor}s, so
  * if a {@link Node} is configured (probably temporarily) with 0 executors,
- * you won't have a {@link Computer} object for it (except for the master node,
+ * you won't have a {@link Computer} object for it (except for the built-in node,
  * which always gets its {@link Computer} in case we have no static executors and
- * we need to run a {@link FlyweightTask} - see JENKINS-7291 for more discussion.)
+ * we need to run a {@link Queue.FlyweightTask} - see JENKINS-7291 for more discussion.)
  *
  * Also, even if you remove a {@link Node}, it takes time for the corresponding
  * {@link Computer} to be removed, if some builds are already in progress on that
@@ -150,7 +170,7 @@ import static javax.servlet.http.HttpServletResponse.*;
  * @author Kohsuke Kawaguchi
  */
 @ExportedBean
-public /*transient*/ abstract class Computer extends Actionable implements AccessControlled, ExecutorListener, DescriptorByNameOwner {
+public /*transient*/ abstract class Computer extends Actionable implements AccessControlled, IComputer, ExecutorListener, DescriptorByNameOwner, StaplerProxy, HasWidgets {
 
     private final CopyOnWriteArrayList<Executor> executors = new CopyOnWriteArrayList<>();
     // TODO:
@@ -164,11 +184,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     protected volatile OfflineCause offlineCause;
 
     private long connectTime = 0;
-
-    /**
-     * True if Jenkins shouldn't start new builds on this node.
-     */
-    private boolean temporarilyOffline;
 
     /**
      * {@link Node} object may be created and deleted independently
@@ -194,13 +209,15 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
 
     protected final Object statusChangeLock = new Object();
 
+    private final Object logDirLock = new Object();
+
     /**
      * Keeps track of stack traces to track the termination requests for this computer.
      *
      * @since 1.607
      * @see Executor#resetWorkUnit(String)
      */
-    private transient final List<TerminationRequest> terminatedBy = Collections.synchronizedList(new ArrayList<>());
+    private final transient List<TerminationRequest> terminatedBy = Collections.synchronizedList(new ArrayList<>());
 
     /**
      * This method captures the information of a request to terminate a computer instance. Method is public as
@@ -211,7 +228,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @since 1.607
      */
     public void recordTermination() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             terminatedBy.add(new TerminationRequest(
                     String.format("Termination requested at %s by %s [id=%d] from HTTP request for %s",
@@ -245,14 +262,14 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return new ArrayList<>(terminatedBy);
     }
 
-    public Computer(Node node) {
+    protected Computer(Node node) {
         setNode(node);
     }
 
      /**
      * Returns list of all boxes {@link ComputerPanelBox}s.
      */
-    public List<ComputerPanelBox> getComputerPanelBoxs(){
+    public List<ComputerPanelBox> getComputerPanelBoxs() {
         return ComputerPanelBox.all(this);
     }
 
@@ -260,6 +277,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Returns the transient {@link Action}s associated with the computer.
      */
     @SuppressWarnings("deprecation")
+    @NonNull
+    @Override
     public List<Action> getActions() {
         List<Action> result = new ArrayList<>(super.getActions());
         synchronized (this) {
@@ -271,10 +290,9 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return Collections.unmodifiableList(result);
     }
 
-    @SuppressWarnings({"ConstantConditions","deprecation"})
-    @SuppressFBWarnings("RCN_REDUNDANT_NULLCHECK_OF_NONNULL_VALUE")
+    @SuppressWarnings({"ConstantConditions", "deprecation"})
     @Override
-    public void addAction(@Nonnull Action a) {
+    public void addAction(@NonNull Action a) {
         if (a == null) {
             throw new IllegalArgumentException("Action must be non-null");
         }
@@ -289,8 +307,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @see #getLogDir()
      * @see #relocateOldLogs()
      */
-    public @Nonnull File getLogFile() {
-        return new File(getLogDir(),"slave.log");
+    public @NonNull File getLogFile() {
+        return new File(getLogDir(), "slave.log");
     }
 
     /**
@@ -300,12 +318,14 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *
      * @since 1.613
      */
-    protected @Nonnull File getLogDir() {
-        File dir = new File(Jenkins.get().getRootDir(),"logs/slaves/"+nodeName);
-        try {
-            IOUtils.mkdirs(dir);
-        } catch (IOException x) {
-            LOGGER.log(Level.SEVERE, "Failed to create agent log directory " + dir, x);
+    protected @NonNull File getLogDir() {
+        File dir = new File(SafeTimerTask.getLogsRoot(), "slaves/" + nodeName);
+        synchronized (logDirLock) {
+            try {
+                IOUtils.mkdirs(dir);
+            } catch (IOException x) {
+                LOGGER.log(Level.SEVERE, "Failed to create agent log directory " + dir, x);
+            }
         }
         return dir;
     }
@@ -321,19 +341,15 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Gets the string representation of the agent log.
      */
     public String getLog() throws IOException {
-        return Util.loadFile(getLogFile());
+        return Util.loadFile(getLogFile(), /* TODO switch agent logs to UTF-8 */ Charset.defaultCharset());
     }
 
     /**
      * Used to URL-bind {@link AnnotatedLargeText}.
      */
     public AnnotatedLargeText<Computer> getLogText() {
-        checkPermission(CONNECT);
+        checkAnyPermission(CONNECT, EXTENDED_READ);
         return new AnnotatedLargeText<>(getLogFile(), Charset.defaultCharset(), false, this);
-    }
-
-    public ACL getACL() {
-        return Jenkins.get().getAuthorizationStrategy().getACL(this);
     }
 
     /**
@@ -344,31 +360,27 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *      null if the system was put offline without given a cause.
      */
     @Exported
+    @Override
     public OfflineCause getOfflineCause() {
+        var node = getNode();
+        if (node != null) {
+            var temporaryOfflineCause = node.getTemporaryOfflineCause();
+            if (temporaryOfflineCause != null) {
+                return temporaryOfflineCause;
+            }
+        }
         return offlineCause;
     }
 
-    /**
-     * If the computer was offline (either temporarily or not),
-     * this method will return the cause as a string (without user info).
-     *
-     * @return
-     *      empty string if the system was put offline without given a cause.
-     */
-    @Exported
-    public String getOfflineCauseReason() {
-        if (offlineCause == null) {
-            return "";
-        }
-        // fetch the localized string for "Disconnected By"
-        String gsub_base = hudson.slaves.Messages.SlaveComputer_DisconnectedBy("","");
-        // regex to remove commented reason base string
-        String gsub1 = "^" + gsub_base + "[\\w\\W]* \\: ";
-        // regex to remove non-commented reason base string
-        String gsub2 = "^" + gsub_base + "[\\w\\W]*";
+    @Override
+    public boolean hasOfflineCause() {
+        return offlineCause != null;
+    }
 
-        String newString = offlineCause.toString().replaceAll(gsub1, "");
-        return newString.replaceAll(gsub2, "");
+    @Exported
+    @Override
+    public String getOfflineCauseReason() {
+        return IComputer.super.getOfflineCauseReason();
     }
 
     /**
@@ -395,7 +407,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * If {@link #getChannel()}==null, attempts to relaunch the agent.
      */
-    public abstract void doLaunchSlaveAgent( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException;
+    public abstract void doLaunchSlaveAgent(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException;
 
     /**
      * @deprecated since 2009-01-06.  Use {@link #connect(boolean)}
@@ -406,7 +418,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * Do the same as {@link #doLaunchSlaveAgent(StaplerRequest, StaplerResponse)}
+     * Do the same as {@link #doLaunchSlaveAgent(StaplerRequest2, StaplerResponse2)}
      * but outside the context of serving a request.
      *
      * <p>
@@ -452,10 +464,11 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     protected abstract Future<?> _connect(boolean forceReconnect);
 
     /**
-     * @deprecated Implementation of CLI command "connect-node" moved to {@link hudson.cli.ConnectNodeCommand}.
      *
      * @param force
      *      If true cancel any currently pending connect operation and retry from scratch
+     *
+     * @deprecated Implementation of CLI command "connect-node" moved to {@link hudson.cli.ConnectNodeCommand}.
      */
     @Deprecated
     public void cliConnect(boolean force) throws ExecutionException, InterruptedException {
@@ -475,7 +488,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Disconnect this computer.
      *
-     * If this is the master, no-op. This method may return immediately
+     * If this is the built-in node, no-op. This method may return immediately
      * while the launch operation happens asynchronously.
      *
      * @param cause
@@ -489,10 +502,10 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     public Future<?> disconnect(OfflineCause cause) {
         recordTermination();
         offlineCause = cause;
-        if (Util.isOverridden(Computer.class,getClass(),"disconnect"))
+        if (Util.isOverridden(Computer.class, getClass(), "disconnect"))
             return disconnect();    // legacy subtypes that extend disconnect().
 
-        connectTime=0;
+        connectTime = 0;
         return Futures.precomputed(null);
     }
 
@@ -505,19 +518,19 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     @Deprecated
     public Future<?> disconnect() {
         recordTermination();
-        if (Util.isOverridden(Computer.class,getClass(),"disconnect",OfflineCause.class))
+        if (Util.isOverridden(Computer.class, getClass(), "disconnect", OfflineCause.class))
             // if the subtype already derives disconnect(OfflineCause), delegate to it
             return disconnect(null);
 
-        connectTime=0;
+        connectTime = 0;
         return Futures.precomputed(null);
     }
 
     /**
-     * @deprecated Implementation of CLI command "disconnect-node" moved to {@link hudson.cli.DisconnectNodeCommand}.
-     *
      * @param cause
      *      Record the note about why you are disconnecting this node
+     *
+     * @deprecated Implementation of CLI command "disconnect-node" moved to {@link hudson.cli.DisconnectNodeCommand}.
      */
     @Deprecated
     public void cliDisconnect(String cause) throws ExecutionException, InterruptedException {
@@ -526,15 +539,15 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * @deprecated  Implementation of CLI command "offline-node" moved to {@link hudson.cli.OfflineNodeCommand}.
-     *
      * @param cause
      *      Record the note about why you are disconnecting this node
+     *
+     * @deprecated  Implementation of CLI command "offline-node" moved to {@link hudson.cli.OfflineNodeCommand}.
      */
     @Deprecated
     public void cliOffline(String cause) throws ExecutionException, InterruptedException {
         checkPermission(DISCONNECT);
-        setTemporarilyOffline(true, new ByCLI(cause));
+        setTemporaryOfflineCause(new ByCLI(cause));
     }
 
     /**
@@ -543,7 +556,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     @Deprecated
     public void cliOnline() throws ExecutionException, InterruptedException {
         checkPermission(CONNECT);
-        setTemporarilyOffline(false, null);
+        setTemporaryOfflineCause(null);
     }
 
     /**
@@ -559,10 +572,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return numExecutors;
     }
 
-    /**
-     * Returns {@link Node#getNodeName() the name of the node}.
-     */
-    public @Nonnull String getName() {
+    public @NonNull String getName() {
         return nodeName != null ? nodeName : "";
     }
 
@@ -599,32 +609,33 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return LabelAtom.get(nodeName != null ? nodeName : Jenkins.get().getSelfLabel().toString()).loadStatistics;
     }
 
+    @Deprecated
+    @Restricted(DoNotUse.class)
     public BuildTimelineWidget getTimeline() {
         return new BuildTimelineWidget(getBuilds());
     }
 
-    @Override
-    public void taskAccepted(Executor executor, Queue.Task task) {
-        // dummy implementation
-    }
-
-    @Override
-    public void taskCompleted(Executor executor, Queue.Task task, long durationMS) {
-        // dummy implementation
-    }
-
-    @Override
-    public void taskCompletedWithProblems(Executor executor, Queue.Task task, long durationMS, Throwable problems) {
-        // dummy implementation
-    }
-
     @Exported
+    @Override
     public boolean isOffline() {
-        return temporarilyOffline || getChannel()==null;
+        return isTemporarilyOffline() || getChannel() == null;
     }
 
     public final boolean isOnline() {
         return !isOffline();
+    }
+
+    /**
+     * {@inheritDoc}
+     * <p>
+     * Uses {@link #getChannel()} to check the connection.
+     * A connected agent may still be offline for scheduling if marked temporarily offline.
+     * @return {@code true} if the agent is connected, {@code false} otherwise.
+     * @see #isOffline()
+     */
+    @Override
+    public boolean isConnected() {
+        return getChannel() != null;
     }
 
     /**
@@ -635,12 +646,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     public boolean isManualLaunchAllowed() {
         return getRetentionStrategy().isManualLaunchAllowed(this);
     }
-
-
-    /**
-     * Is a {@link #connect(boolean)} operation in progress?
-     */
-    public abstract boolean isConnecting();
 
     /**
      * Returns true if this computer is supposed to be launched via inbound protocol.
@@ -653,14 +658,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return false;
     }
 
-    /**
-     * Returns true if this computer can be launched by Hudson proactively and automatically.
-     *
-     * <p>
-     * For example, inbound agents return {@code false} from this, because the launch process
-     * needs to be initiated from the agent side.
-     */
     @Exported
+    @Override
     public boolean isLaunchSupported() {
         return true;
     }
@@ -681,88 +680,93 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     @Exported
     @Deprecated
     public boolean isTemporarilyOffline() {
-        return temporarilyOffline;
+        var node = getNode();
+        return node != null && node.isTemporarilyOffline();
+    }
+
+    /**
+     * Allows a caller to define an {@link OfflineCause} for a computer that has never been online.
+     * @since 2.483
+     */
+    public void setOfflineCause(OfflineCause cause) {
+        this.offlineCause = cause;
     }
 
     /**
      * @deprecated as of 1.320.
-     *      Use {@link #setTemporarilyOffline(boolean, OfflineCause)}
+     *      Use {@link #setTemporaryOfflineCause(OfflineCause)}
      */
     @Deprecated
     public void setTemporarilyOffline(boolean temporarilyOffline) {
-        setTemporarilyOffline(temporarilyOffline,null);
+        setTemporaryOfflineCause(temporarilyOffline ? new OfflineCause.LegacyOfflineCause() : null);
+    }
+
+    /**
+     * @deprecated
+     *      Use {@link #setTemporaryOfflineCause(OfflineCause)} instead.
+     */
+    @Deprecated(since = "2.482")
+    public void setTemporarilyOffline(boolean temporarilyOffline, OfflineCause cause) {
+        if (cause == null) {
+            setTemporarilyOffline(temporarilyOffline);
+        } else {
+            setTemporaryOfflineCause(temporarilyOffline ? cause : null);
+        }
     }
 
     /**
      * Marks the computer as temporarily offline. This retains the underlying
      * {@link Channel} connection, but prevent builds from executing.
      *
-     * @param cause
-     *      If the first argument is true, specify the reason why the node is being put
-     *      offline.
+     * @param temporaryOfflineCause The reason why the node is being put offline.
+     *                                If null, this cancels the status
+     * @since 2.482
      */
-    public void setTemporarilyOffline(boolean temporarilyOffline, OfflineCause cause) {
-        offlineCause = temporarilyOffline ? cause : null;
-        this.temporarilyOffline = temporarilyOffline;
-        Node node = getNode();
-        if (node != null) {
-            node.setTemporaryOfflineCause(offlineCause);
+    public void setTemporaryOfflineCause(@CheckForNull OfflineCause temporaryOfflineCause) {
+        var node = getNode();
+        if (node == null) {
+            throw new IllegalStateException("Can't set a temporary offline cause if the node has been removed");
         }
-        synchronized (statusChangeLock) {
-            statusChangeLock.notifyAll();
-        }
-        for (ComputerListener cl : ComputerListener.all()) {
-            if (temporarilyOffline)     cl.onTemporarilyOffline(this,cause);
-            else                        cl.onTemporarilyOnline(this);
-        }
+        node.setTemporaryOfflineCause(temporaryOfflineCause);
     }
 
     /**
-     * Returns the icon for this computer.
-     *
-     * It is both the recommended and default implementation to serve different icons based on {@link #isOffline}
-     *
-     * @see #getIconClassName()
+     * @since 2.482
+     * @return If the node is temporarily offline, the reason why.
      */
+    @SuppressWarnings("unused") // used by setOfflineCause.jelly
+    public String getTemporaryOfflineCauseReason() {
+        var node = getNode();
+        if (node == null) {
+            // Node was deleted; computer still exists
+            return null;
+        }
+        var cause = node.getTemporaryOfflineCause();
+        if (cause instanceof OfflineCause.UserCause userCause) {
+            return userCause.getMessage();
+        }
+        return cause != null ? cause.toString() : "";
+    }
+
     @Exported
+    @Override
     public String getIcon() {
-        // The machine was taken offline by someone
-        if (isTemporarilyOffline() && getOfflineCause() instanceof OfflineCause.UserCause) return "computer-user-offline.png";
-        // There is a "technical" reason the computer will not accept new builds
-        if (isOffline() || !isAcceptingTasks()) return "computer-x.png";
-        return "computer.png";
+        return IComputer.super.getIcon();
     }
 
     /**
-     * Returns the class name that will be used to lookup the icon.
-     *
-     * This class name will be added as a class tag to the html img tags where the icon should
-     * show up followed by a size specifier given by {@link Icon#toNormalizedIconSizeClass(String)}
-     * The conversion of class tag to src tag is registered through {@link IconSet#addIcon(Icon)}
-     *
-     * It is both the recommended and default implementation to serve different icons based on {@link #isOffline}
+     * {@inheritDoc}
      *
      * @see #getIcon()
      */
     @Exported
+    @Override
     public String getIconClassName() {
-        // The machine was taken offline by someone
-        if (isTemporarilyOffline() && getOfflineCause() instanceof OfflineCause.UserCause) return "icon-computer-user-offline";
-        // There is a "technical" reason the computer will not accept new builds
-        if (isOffline() || !isAcceptingTasks()) return "icon-computer-x";
-        return "icon-computer";
-    }
-
-    public String getIconAltText() {
-        // The machine was taken offline by someone
-        if (isTemporarilyOffline() && getOfflineCause() instanceof OfflineCause.UserCause) return "[temporarily offline by user]";
-        // There is a "technical" reason the computer will not accept new builds
-        if (isOffline() || !isAcceptingTasks()) return "[offline]";
-        return "[online]";
+        return IComputer.super.getIconClassName();
     }
 
     @Exported
-    @Override public @Nonnull String getDisplayName() {
+    @Override public @NonNull String getDisplayName() {
         return nodeName;
     }
 
@@ -770,14 +774,16 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return Messages.Computer_Caption(nodeName);
     }
 
+    @Override
+    @NonNull
     public String getUrl() {
-        return "computer/" + Util.rawEncode(getName()) + "/";
+        return "computer/" + Util.fullEncode(getName()) + "/";
     }
 
     @Exported
     public Set<LabelAtom> getAssignedLabels() {
         Node node = getNode();
-        return (node != null) ? node.getAssignedLabels() : Collections.EMPTY_SET;
+        return node != null ? node.getAssignedLabels() : Collections.emptySet();
     }
 
     /**
@@ -785,11 +791,11 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      */
     public List<AbstractProject> getTiedJobs() {
         Node node = getNode();
-        return (node != null) ? node.getSelfLabel().getTiedJobs() : Collections.EMPTY_LIST;
+        return node != null ? node.getSelfLabel().getTiedJobs() : Collections.emptyList();
     }
 
     public RunList getBuilds() {
-        return RunList.fromJobs((Iterable)Jenkins.get().allItems(Job.class)).node(getNode());
+        return RunList.fromJobs((Iterable) Jenkins.get().allItems(AbstractProject.class)).node(getNode());
     }
 
     /**
@@ -797,27 +803,17 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * configuration is updated.
      */
     protected void setNode(Node node) {
-        assert node!=null;
-        if(node instanceof Slave)
+        assert node != null;
+        if (node instanceof Slave)
             this.nodeName = node.getNodeName();
         else
             this.nodeName = null;
 
         setNumExecutors(node.getNumExecutors());
-        if (this.temporarilyOffline) {
-            // When we get a new node, push our current temp offline
-            // status to it (as the status is not carried across
-            // configuration changes that recreate the node).
-            // Since this is also called the very first time this
-            // Computer is created, avoid pushing an empty status
-            // as that could overwrite any status that the Node
-            // brought along from its persisted config data.
-            node.setTemporaryOfflineCause(this.offlineCause);
-        }
     }
 
     /**
-     * Called by {@link Jenkins#updateComputerList()} to notify {@link Computer} that it will be discarded.
+     * Called by {@link Jenkins#updateComputerList(boolean, Collection)} to notify {@link Computer} that it will be discarded.
      *
      * <p>
      * Note that at this point {@link #getNode()} returns null.
@@ -828,23 +824,6 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         // On most code paths, this should already be zero, and thus this next call becomes a no-op... and more
         // importantly it will not acquire a lock on the Queue... not that the lock is bad, more that the lock
         // may delay unnecessarily
-        setNumExecutors(0);
-    }
-
-    /**
-     * Called by {@link Jenkins#updateComputerList()} to notify {@link Computer} that it will be discarded.
-     *
-     * <p>
-     * Note that at this point {@link #getNode()} returns null.
-     *
-     * <p>
-     * Note that the Queue lock is already held when this method is called.
-     *
-     * @see #onRemoved()
-     */
-    @Restricted(NoExternalUse.class)
-    @GuardedBy("hudson.model.Queue.lock")
-    /*package*/ void inflictMortalWound() {
         setNumExecutors(0);
     }
 
@@ -869,7 +848,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Calling path, *means protected by Queue.withLock
      *
      * Computer.doConfigSubmit -> Computer.replaceBy ->Jenkins.setNodes* ->Computer.setNode
-     * AbstractCIBase.updateComputerList->Computer.inflictMortalWound*
+     * AbstractCIBase.updateComputerList->Computer.setNumExecutors*
      * AbstractCIBase.updateComputerList->AbstractCIBase.updateComputer* ->Computer.setNode
      * AbstractCIBase.updateComputerList->AbstractCIBase.killComputer->Computer.kill
      * Computer.constructor->Computer.setNode
@@ -877,26 +856,26 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *
      * @param n number of executors
      */
+    @Restricted(NoExternalUse.class)
     @GuardedBy("hudson.model.Queue.lock")
-    private void setNumExecutors(int n) {
+    public void setNumExecutors(int n) {
         this.numExecutors = n;
-        final int diff = executors.size()-n;
+        final int diff = executors.size() - n;
 
-        if (diff>0) {
+        if (diff > 0) {
             // we have too many executors
             // send signal to all idle executors to potentially kill them off
             // need the Queue maintenance lock held to prevent concurrent job assignment on the idle executors
-            Queue.withLock(new Runnable() {
-                @Override
-                public void run() {
-                    for( Executor e : executors )
-                        if(e.isIdle())
-                            e.interrupt();
+            Queue.withLock(() -> {
+                for (Executor e : executors) {
+                    if (e.isIdle()) {
+                        e.interrupt();
+                    }
                 }
             });
         }
 
-        if (diff<0) {
+        if (diff < 0) {
             // if the number is increased, add new ones
             addNewExecutorIfNecessary();
         }
@@ -932,25 +911,24 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     public int countIdle() {
         int n = 0;
         for (Executor e : executors) {
-            if(e.isIdle())
+            if (e.isIdle())
                 n++;
         }
         return n;
     }
 
-    /**
-     * Returns the number of {@link Executor}s that are doing some work right now.
-     */
+    @Override
     public final int countBusy() {
-        return countExecutors()-countIdle();
+        return countExecutors() - countIdle();
     }
 
     /**
-     * Returns the current size of the executor pool for this computer.
+     * {@inheritDoc}
      * This number may temporarily differ from {@link #getNumExecutors()} if there
      * are busy tasks when the configured size is decreased.  OneOffExecutors are
      * not included in this count.
      */
+    @Override
     public final int countExecutors() {
         return executors.size();
     }
@@ -987,23 +965,23 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * Used to render the list of executors.
-     * @return a snapshot of the executor display information
+     * {@inheritDoc}
      * @since 1.607
      */
-    @Restricted(NoExternalUse.class)
-    public List<DisplayExecutor> getDisplayExecutors() {
+    @Override
+    @NonNull
+    public List<IDisplayExecutor> getDisplayExecutors() {
         // The size may change while we are populating, but let's start with a reasonable guess to minimize resizing
-        List<DisplayExecutor> result = new ArrayList<>(executors.size() + oneOffExecutors.size());
+        List<IDisplayExecutor> result = new ArrayList<>(executors.size() + oneOffExecutors.size());
         int index = 0;
-        for (Executor e: executors) {
+        for (Executor e : executors) {
             if (e.isDisplayCell()) {
                 result.add(new DisplayExecutor(Integer.toString(index + 1), String.format("executors/%d", index), e));
             }
             index++;
         }
         index = 0;
-        for (OneOffExecutor e: oneOffExecutors) {
+        for (OneOffExecutor e : oneOffExecutors) {
             if (e.isDisplayCell()) {
                 result.add(new DisplayExecutor("", String.format("oneOffExecutors/%d", index), e));
             }
@@ -1020,7 +998,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         if (!oneOffExecutors.isEmpty())
             return false;
         for (Executor e : executors)
-            if(!e.isIdle())
+            if (!e.isIdle())
                 return false;
         return true;
     }
@@ -1030,7 +1008,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      */
     public final boolean isPartiallyIdle() {
         for (Executor e : executors)
-            if(e.isIdle())
+            if (e.isIdle())
                 return true;
         return false;
     }
@@ -1069,13 +1047,13 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     }
 
     /**
-     * Returns the {@link Node} description for this computer
+     * Returns the {@link Node} description for this computer. Empty String if the {@link Node} is {@code null}.
      */
     @Restricted(DoNotUse.class)
     @Exported
-    public @Nonnull String getDescription() {
+    public @NonNull String getDescription() {
         Node node = getNode();
-        return (node != null) ? node.getNodeDescription() : null;
+        return node != null ? node.getNodeDescription() : "";
     }
 
 
@@ -1083,19 +1061,18 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Called by {@link Executor} to kill excessive executors from this computer.
      */
     protected void removeExecutor(final Executor e) {
-        final Runnable task = new Runnable() {
-            @Override
-            public void run() {
-                synchronized (Computer.this) {
-                    executors.remove(e);
-                    oneOffExecutors.remove(e);
-                    addNewExecutorIfNecessary();
-                    if (!isAlive()) {
-                        AbstractCIBase ciBase = Jenkins.getInstanceOrNull();
-                        if (ciBase != null) { // TODO confirm safe to assume non-null and use getInstance()
-                            ciBase.removeComputer(Computer.this);
-                        }
+        final Runnable task = () -> {
+            synchronized (Computer.this) {
+                executors.remove(e);
+                oneOffExecutors.remove(e);
+                addNewExecutorIfNecessary();
+                if (!isAlive()) {
+                    AbstractCIBase ciBase = Jenkins.getInstanceOrNull();
+                    if (ciBase != null) { // TODO confirm safe to assume non-null and use getInstance()
+                        ciBase.removeComputer(Computer.this);
                     }
+                } else if (isIdle()) {
+                    threadPoolForRemoting.submit(() -> Listeners.notify(ComputerListener.class, false, l -> l.onIdle(this)));
                 }
             }
         };
@@ -1122,18 +1099,21 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Called from {@link Jenkins#cleanUp}.
      */
     public void interrupt() {
-        Queue.withLock(new Runnable() {
-            @Override
-            public void run() {
-                for (Executor e : executors) {
-                    e.interruptForShutdown();
-                }
+        Queue.withLock(() -> {
+            for (Executor e : executors) {
+                e.interruptForShutdown();
             }
         });
     }
 
+    @Override
     public String getSearchUrl() {
         return getUrl();
+    }
+
+    @Override
+    public SearchGroup getSearchGroup() {
+        return SearchGroup.get(SearchGroup.ComputerSearchGroup.class);
     }
 
     /**
@@ -1148,12 +1128,23 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Expose monitoring data for the remote API.
      */
-    @Exported(inline=true)
-    public Map<String/*monitor name*/,Object> getMonitorData() {
-        Map<String,Object> r = new HashMap<>();
+    @Exported(inline = true)
+    public Map<String/*monitor name*/, Object> getMonitorData() {
+        Map<String, Object> r = new HashMap<>();
         if (hasPermission(CONNECT)) {
             for (NodeMonitor monitor : NodeMonitor.getAll())
                 r.put(monitor.getClass().getName(), monitor.data(this));
+        }
+        return r;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public Map<NodeMonitor, Object> getMonitoringData() {
+        Map<NodeMonitor, Object> r = new LinkedHashMap<>();
+        for (NodeMonitor monitor : NodeMonitor.getAll()) {
+            if (monitor.getColumnCaption() != null) {
+                r.put(monitor, monitor.data(this));
+            }
         }
         return r;
     }
@@ -1162,7 +1153,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Gets the system properties of the JVM on this computer.
      * If this is the master, it returns the system property of the master computer.
      */
-    public Map<Object,Object> getSystemProperties() throws IOException, InterruptedException {
+    public Map<Object, Object> getSystemProperties() throws IOException, InterruptedException {
         return RemotingDiagnostics.getSystemProperties(getChannel());
     }
 
@@ -1171,7 +1162,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *      Use {@link #getEnvironment()} instead.
      */
     @Deprecated
-    public Map<String,String> getEnvVars() throws IOException, InterruptedException {
+    public Map<String, String> getEnvVars() throws IOException, InterruptedException {
         return getEnvironment();
     }
 
@@ -1196,23 +1187,23 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @see ProcStarter#envs(Map)
      * @since 1.489
      */
-    public @Nonnull EnvVars buildEnvironment(@Nonnull TaskListener listener) throws IOException, InterruptedException {
+    public @NonNull EnvVars buildEnvironment(@NonNull TaskListener listener) throws IOException, InterruptedException {
         EnvVars env = new EnvVars();
 
         Node node = getNode();
-        if (node==null)     return env; // bail out
+        if (node == null)     return env; // bail out
 
-        for (NodeProperty nodeProperty: Jenkins.get().getGlobalNodeProperties()) {
-            nodeProperty.buildEnvVars(env,listener);
+        for (NodeProperty nodeProperty : Jenkins.get().getGlobalNodeProperties()) {
+            nodeProperty.buildEnvVars(env, listener);
         }
 
-        for (NodeProperty nodeProperty: node.getNodeProperties()) {
-            nodeProperty.buildEnvVars(env,listener);
+        for (NodeProperty nodeProperty : node.getNodeProperties()) {
+            nodeProperty.buildEnvVars(env, listener);
         }
 
         // TODO: hmm, they don't really belong
         String rootUrl = Jenkins.get().getRootUrl();
-        if(rootUrl!=null) {
+        if (rootUrl != null) {
             env.put("HUDSON_URL", rootUrl); // Legacy.
             env.put("JENKINS_URL", rootUrl);
         }
@@ -1225,7 +1216,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * @return
      *      key is the thread name, and the value is the pre-formatted dump.
      */
-    public Map<String,String> getThreadDump() throws IOException, InterruptedException {
+    public Map<String, String> getThreadDump() throws IOException, InterruptedException {
         return RemotingDiagnostics.getThreadDump(getChannel());
     }
 
@@ -1233,7 +1224,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Obtains the heap dump.
      */
     public HeapDump getHeapDump() throws IOException {
-        return new HeapDump(this,getChannel());
+        return new HeapDump(this, getChannel());
     }
 
     /**
@@ -1259,21 +1250,21 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *      because the agent is behind the firewall, etc.)
      */
     public String getHostName() throws IOException, InterruptedException {
-        if(hostNameCached)
+        if (hostNameCached)
             // in the worst case we end up having multiple threads computing the host name simultaneously, but that's not harmful, just wasteful.
             return cachedHostName;
 
         VirtualChannel channel = getChannel();
-        if(channel==null)   return null; // can't compute right now
+        if (channel == null)   return null; // can't compute right now
 
-        for( String address : channel.call(new ListPossibleNames())) {
+        for (String address : channel.call(new ListPossibleNames())) {
             try {
                 InetAddress ia = InetAddress.getByName(address);
-                if(!(ia instanceof Inet4Address)) {
+                if (!(ia instanceof Inet4Address)) {
                     LOGGER.log(Level.FINE, "{0} is not an IPv4 address", address);
                     continue;
                 }
-                if(!ComputerPinger.checkIsReachable(ia, 3)) {
+                if (!ComputerPinger.checkIsReachable(ia, 3)) {
                     LOGGER.log(Level.FINE, "{0} didn't respond to ping", address);
                     continue;
                 }
@@ -1289,7 +1280,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
             }
         }
 
-        // allow the administrator to manually specify the host name as a fallback. HUDSON-5373
+        // allow the administrator to manually specify the host name as a fallback. JENKINS-5373
         cachedHostName = channel.call(new GetFallbackName());
         hostNameCached = true;
         return cachedHostName;
@@ -1308,7 +1299,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         oneOffExecutors.remove(e);
     }
 
-    private static class ListPossibleNames extends MasterToSlaveCallable<List<String>,IOException> {
+    private static class ListPossibleNames extends MasterToSlaveCallable<List<String>, IOException> {
         /**
          * In the normal case we would use {@link Computer} as the logger's name, however to
          * do that we would have to send the {@link Computer} class over to the remote classloader
@@ -1320,6 +1311,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
          */
         private static final Logger LOGGER = Logger.getLogger(ListPossibleNames.class.getName());
 
+        @Override
         public List<String> call() throws IOException {
             List<String> names = new ArrayList<>();
 
@@ -1330,12 +1322,12 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
                 Enumeration<InetAddress> e = ni.getInetAddresses();
                 while (e.hasMoreElements()) {
                     InetAddress ia =  e.nextElement();
-                    if(ia.isLoopbackAddress()) {
+                    if (ia.isLoopbackAddress()) {
                         LOGGER.log(Level.FINE, "{0} is a loopback address", ia);
                         continue;
                     }
 
-                    if(!(ia instanceof Inet4Address)) {
+                    if (!(ia instanceof Inet4Address)) {
                         LOGGER.log(Level.FINE, "{0} is not an IPv4 address", ia);
                         continue;
                     }
@@ -1346,60 +1338,85 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
             }
             return names;
         }
+
         private static final long serialVersionUID = 1L;
     }
 
-    private static class GetFallbackName extends MasterToSlaveCallable<String,IOException> {
+    private static class GetFallbackName extends MasterToSlaveCallable<String, IOException> {
+        @Override
         public String call() throws IOException {
             return SystemProperties.getString("host.name");
         }
+
         private static final long serialVersionUID = 1L;
     }
 
     public static final ExecutorService threadPoolForRemoting = new ContextResettingExecutorService(
         new ImpersonatingExecutorService(
-            Executors.newCachedThreadPool(
-                new ExceptionCatchingThreadFactory(
-                    new NamingThreadFactory(
-                        new DaemonThreadFactory(), "Computer.threadPoolForRemoting"))), ACL.SYSTEM));
+            new ErrorLoggingExecutorService(
+                Executors.newCachedThreadPool(
+                    new ExceptionCatchingThreadFactory(
+                        new NamingThreadFactory(
+                            new ClassLoaderSanityThreadFactory(new DaemonThreadFactory()),
+                            "Computer.threadPoolForRemoting")))),
+            ACL.SYSTEM2));
 
 //
 //
 // UI
 //
 //
-    public void doRssAll( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException {
-        rss(req, rsp, " all builds", getBuilds());
+    @Restricted(DoNotUse.class)
+    public void doRssAll(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (all builds)", getUrl(), getBuilds());
     }
 
-    public void doRssFailed(StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException {
-        rss(req, rsp, " failed builds", getBuilds().failureOnly());
+    @Restricted(DoNotUse.class)
+    public void doRssFailed(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (failed builds)", getUrl(), getBuilds().failureOnly());
     }
-    private void rss(StaplerRequest req, StaplerResponse rsp, String suffix, RunList runs) throws IOException, ServletException {
-        RSS.forwardToRss(getDisplayName() + suffix, getUrl(),
-                runs.newBuilds(), Run.FEED_ADAPTER, req, rsp);
+
+    /**
+     * Retrieve the RSS feed for the last build for each project executed in this computer.
+     * Only the information from {@link AbstractProject} is displayed since there isn't a proper API to gather
+     * information about the node where the builds are executed for other sorts of projects such as Pipeline
+     * @since 2.215
+     */
+    @Restricted(DoNotUse.class)
+    public void doRssLatest(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
+        final List<Run> lastBuilds = new ArrayList<>();
+        for (AbstractProject<?, ?> p : Jenkins.get().allItems(AbstractProject.class)) {
+            if (p.getLastBuild() != null) {
+                for (AbstractBuild<?, ?> b = p.getLastBuild(); b != null; b = b.getPreviousBuild()) {
+                    if (b.getBuiltOn() == getNode()) {
+                        lastBuilds.add(b);
+                        break;
+                    }
+                }
+            }
+        }
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (latest builds)", getUrl(), RunList.fromRuns(lastBuilds));
     }
 
     @RequirePOST
     public HttpResponse doToggleOffline(@QueryParameter String offlineMessage) throws IOException, ServletException {
-        if(!temporarilyOffline) {
-            checkPermission(DISCONNECT);
-            offlineMessage = Util.fixEmptyAndTrim(offlineMessage);
-            setTemporarilyOffline(!temporarilyOffline,
-                    new OfflineCause.UserCause(User.current(), offlineMessage));
-        } else {
-            checkPermission(CONNECT);
-            setTemporarilyOffline(!temporarilyOffline,null);
+        var node = getNode();
+        if (node == null) {
+            return HttpResponses.notFound();
         }
-        return HttpResponses.redirectToDot();
+        if (node.isTemporarilyOffline()) {
+            checkPermission(CONNECT);
+            setTemporaryOfflineCause(null);
+            return HttpResponses.redirectToDot();
+        } else {
+            return doChangeOfflineCause(offlineMessage);
+        }
     }
 
     @RequirePOST
     public HttpResponse doChangeOfflineCause(@QueryParameter String offlineMessage) throws IOException, ServletException {
         checkPermission(DISCONNECT);
-        offlineMessage = Util.fixEmptyAndTrim(offlineMessage);
-        setTemporarilyOffline(true,
-                new OfflineCause.UserCause(User.current(), offlineMessage));
+        setTemporaryOfflineCause(new OfflineCause.UserCause(User.current(), Util.fixEmptyAndTrim(offlineMessage)));
         return HttpResponses.redirectToDot();
     }
 
@@ -1410,19 +1427,19 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Dumps the contents of the export table.
      */
-    public void doDumpExportTable( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException, InterruptedException {
+    public void doDumpExportTable(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException, InterruptedException {
         // this is a debug probe and may expose sensitive information
         checkPermission(Jenkins.ADMINISTER);
 
         rsp.setContentType("text/plain");
-        try (PrintWriter w = new PrintWriter(rsp.getCompressedWriter(req))) {
+        try (PrintWriter w = new PrintWriter(rsp.getWriter())) {
             VirtualChannel vc = getChannel();
             if (vc instanceof Channel) {
-                w.println("Master to slave");
+                w.println("Controller to agent");
                 ((Channel) vc).dumpExportTable(w);
                 w.flush(); // flush here once so that even if the dump from the agent fails, the client gets some useful info
 
-                w.println("\n\n\nSlave to master");
+                w.println("\n\n\nAgent to controller");
                 w.print(vc.call(new DumpExportTableTask()));
             } else {
                 w.println(Messages.Computer_BadChannel());
@@ -1430,7 +1447,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
     }
 
-    private static final class DumpExportTableTask extends MasterToSlaveCallable<String,IOException> {
+    private static final class DumpExportTableTask extends MasterToSlaveCallable<String, IOException> {
+        @Override
         public String call() throws IOException {
             final Channel ch = getChannelOrFail();
             StringWriter sw = new StringWriter();
@@ -1445,18 +1463,18 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * For system diagnostics.
      * Run arbitrary Groovy script.
      */
-    public void doScript(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doScript(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         _doScript(req, rsp, "_script.jelly");
     }
 
     /**
      * Run arbitrary Groovy script and return result as plain text.
      */
-    public void doScriptText(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doScriptText(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         _doScript(req, rsp, "_scriptText.jelly");
     }
 
-    protected void _doScript(StaplerRequest req, StaplerResponse rsp, String view) throws IOException, ServletException {
+    protected void _doScript(StaplerRequest2 req, StaplerResponse2 rsp, String view) throws IOException, ServletException {
         Jenkins._doScript(req, rsp, req.getView(this, view), getChannel(), getACL());
     }
 
@@ -1464,7 +1482,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      * Accepts the update to the node configuration.
      */
     @POST
-    public void doConfigSubmit( StaplerRequest req, StaplerResponse rsp ) throws IOException, ServletException, FormException {
+    public void doConfigSubmit(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException, FormException {
         checkPermission(CONFIGURE);
 
         String proposedName = Util.fixEmptyAndTrim(req.getSubmittedForm().getString("name"));
@@ -1475,28 +1493,36 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
             throw new ServletException("No such node " + nodeName);
         }
 
-        if ((!proposedName.equals(nodeName))
+        if (!proposedName.equals(nodeName)
                 && Jenkins.get().getNode(proposedName) != null) {
             throw new FormException(Messages.ComputerSet_SlaveAlreadyExists(proposedName), "name");
         }
 
         String nExecutors = req.getSubmittedForm().getString("numExecutors");
-        if (StringUtils.isBlank(nExecutors) || Integer.parseInt(nExecutors)<=0) {
+        if (nExecutors == null || nExecutors.isBlank() || Integer.parseInt(nExecutors) <= 0) {
             throw new FormException(Messages.Slave_InvalidConfig_Executors(nodeName), "numExecutors");
         }
 
         Node result = node.reconfigure(req, req.getSubmittedForm());
         Jenkins.get().getNodesObject().replaceNode(this.getNode(), result);
 
+        if (result.getNodeProperty(DiskSpaceMonitorNodeProperty.class) != null) {
+            for (NodeMonitor monitor : NodeMonitor.getAll()) {
+                if (monitor instanceof AbstractDiskSpaceMonitor) {
+                    monitor.data(this);
+                }
+            }
+        }
+
         // take the user back to the agent top page.
-        rsp.sendRedirect2("../" + result.getNodeName() + '/');
+        FormApply.success("../" + result.getNodeName() + '/').generateResponse(req, rsp, null);
     }
 
     /**
      * Accepts {@code config.xml} submission, as well as serve it.
      */
     @WebMethod(name = "config.xml")
-    public void doConfigDotXml(StaplerRequest req, StaplerResponse rsp)
+    public void doConfigDotXml(StaplerRequest2 req, StaplerResponse2 rsp)
             throws IOException, ServletException {
 
         if (req.getMethod().equals("GET")) {
@@ -1507,7 +1533,16 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
             if (node == null) {
                 throw HttpResponses.notFound();
             }
-            Jenkins.XSTREAM2.toXMLUTF8(node, rsp.getOutputStream());
+            if (hasPermission(CONFIGURE)) {
+                Jenkins.XSTREAM2.toXMLUTF8(node, rsp.getOutputStream());
+            } else {
+                var baos = new ByteArrayOutputStream();
+                Jenkins.XSTREAM2.toXMLUTF8(node, baos);
+                String xml = baos.toString(StandardCharsets.UTF_8);
+
+                xml = ExtendedReadRedaction.applyAll(xml);
+                org.apache.commons.io.IOUtils.write(xml, rsp.getOutputStream(), StandardCharsets.UTF_8);
+            }
             return;
         }
         if (req.getMethod().equals("POST")) {
@@ -1527,8 +1562,16 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      */
     public void updateByXml(final InputStream source) throws IOException, ServletException {
         checkPermission(CONFIGURE);
-        Node result = (Node)Jenkins.XSTREAM2.fromXML(source);
-        Jenkins.get().getNodesObject().replaceNode(this.getNode(), result);
+        Node previous = getNode();
+        if (previous == null) {
+            throw HttpResponses.notFound();
+        }
+        Node result = (Node) Jenkins.XSTREAM2.fromXML(source);
+        if (previous.getClass() != result.getClass()) {
+            // ensure node type doesn't change
+            throw HttpResponses.errorWithoutStack(SC_BAD_REQUEST, "Node types do not match");
+        }
+        Jenkins.get().getNodesObject().replaceNode(previous, result);
     }
 
     /**
@@ -1567,9 +1610,25 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
     /**
      * Handles incremental log.
      */
-    public void doProgressiveLog( StaplerRequest req, StaplerResponse rsp) throws IOException {
+    public void doProgressiveLog(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
         getLogText().doProgressText(req, rsp);
     }
+
+    @Override
+    @Restricted(NoExternalUse.class)
+    public Object getTarget() {
+        if (!SKIP_PERMISSION_CHECK) {
+            Jenkins.get().checkPermission(Jenkins.READ);
+        }
+        return this;
+    }
+
+    /**
+     * Escape hatch for StaplerProxy-based access control
+     */
+    @Restricted(NoExternalUse.class)
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
+    public static /* Script Console modifiable */ boolean SKIP_PERMISSION_CHECK = SystemProperties.getBoolean(Computer.class.getName() + ".skipPermissionCheck");
 
     /**
      * Gets the current {@link Computer} that the build is running.
@@ -1582,15 +1641,8 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         return e != null ? e.getOwner() : null;
     }
 
-    /**
-     * Returns {@code true} if the computer is accepting tasks. Needed to allow agents programmatic suspension of task
-     * scheduling that does not overlap with being offline.
-     *
-     * @return {@code true} if the computer is accepting tasks
-     * @see hudson.slaves.RetentionStrategy#isAcceptingTasks(Computer)
-     * @see hudson.model.Node#isAcceptingTasks()
-     */
-    @OverridingMethodsMustInvokeSuper
+    @OverrideMustInvoke
+    @Override
     public boolean isAcceptingTasks() {
         final Node node = getNode();
         return getRetentionStrategy().isAcceptingTasks(this) && (node == null || node.isAcceptingTasks());
@@ -1601,10 +1653,10 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      */
     @CLIResolver
     public static Computer resolveForCLI(
-            @Argument(required=true,metaVar="NAME",usage="Agent name, or empty string for master") String name) throws CmdLineException {
+            @Argument(required = true, metaVar = "NAME", usage = "Agent name, or empty string for built-in node") String name) throws CmdLineException {
         Jenkins h = Jenkins.get();
         Computer item = h.getComputer(name);
-        if (item==null) {
+        if (item == null) {
             List<String> names = ComputerSet.getComputerNames();
             String adv = EditDistance.findNearest(name, names);
             throw new IllegalArgumentException(adv == null ?
@@ -1622,30 +1674,28 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      *
      * @see #getLogFile()
      */
+    // TODO(terminology) migrate from slaves/ to agents/
     @Initializer
     public static void relocateOldLogs() {
         relocateOldLogs(Jenkins.get().getRootDir());
     }
 
+    @SuppressFBWarnings(value = "REDOS", justification = "TODO needs triage")
     /*package*/ static void relocateOldLogs(File dir) {
         final Pattern logfile = Pattern.compile("slave-(.*)\\.log(\\.[0-9]+)?");
-        File[] logfiles = dir.listFiles(new FilenameFilter() {
-            public boolean accept(File dir, String name) {
-                return logfile.matcher(name).matches();
-            }
-        });
-        if (logfiles==null)     return;
+        File[] logfiles = dir.listFiles((dir1, name) -> logfile.matcher(name).matches());
+        if (logfiles == null)     return;
 
         for (File f : logfiles) {
             Matcher m = logfile.matcher(f.getName());
             if (m.matches()) {
                 File newLocation = new File(dir, "logs/slaves/" + m.group(1) + "/slave.log" + Util.fixNull(m.group(2)));
-                newLocation.getParentFile().mkdirs();
-                boolean relocationSuccessful=f.renameTo(newLocation);
-                if (relocationSuccessful) { // The operation will fail if mkdir fails
-                    LOGGER.log(Level.INFO, "Relocated log file {0} to {1}",new Object[] {f.getPath(),newLocation.getPath()});
-                } else {
-                    LOGGER.log(Level.WARNING, "Cannot relocate log file {0} to {1}",new Object[] {f.getPath(),newLocation.getPath()});
+                try {
+                    Util.createDirectories(newLocation.getParentFile().toPath());
+                    Files.move(f.toPath(), newLocation.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                    LOGGER.log(Level.INFO, "Relocated log file {0} to {1}", new Object[] {f.getPath(), newLocation.getPath()});
+                } catch (IOException | InvalidPathException e) {
+                    LOGGER.log(Level.WARNING, e, () -> "Cannot relocate log file " + f.getPath() + " to " + newLocation.getPath());
                 }
             } else {
                 assert false;
@@ -1653,83 +1703,12 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
     }
 
-    /**
-     * A value class to provide a consistent snapshot view of the state of an executor to avoid race conditions
-     * during rendering of the executors list.
-     *
-     * @since 1.607
-     */
-    @Restricted(NoExternalUse.class)
-    public static class DisplayExecutor implements ModelObject {
-
-        @Nonnull
-        private final String displayName;
-        @Nonnull
-        private final String url;
-        @Nonnull
-        private final Executor executor;
-
-        public DisplayExecutor(@Nonnull String displayName, @Nonnull String url, @Nonnull Executor executor) {
-            this.displayName = displayName;
-            this.url = url;
-            this.executor = executor;
-        }
-
+    @Extension(ordinal = Double.MAX_VALUE)
+    @Restricted(DoNotUse.class)
+    public static class InternalComputerListener extends ComputerListener {
         @Override
-        @Nonnull
-        public String getDisplayName() {
-            return displayName;
-        }
-
-        @Nonnull
-        public String getUrl() {
-            return url;
-        }
-
-        @Nonnull
-        public Executor getExecutor() {
-            return executor;
-        }
-
-        @Override
-        public String toString() {
-            String sb = "DisplayExecutor{" + "displayName='" + displayName + '\'' +
-                    ", url='" + url + '\'' +
-                    ", executor=" + executor +
-                    '}';
-            return sb;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-
-            DisplayExecutor that = (DisplayExecutor) o;
-
-            if (!executor.equals(that.executor)) {
-                return false;
-            }
-
-            return true;
-        }
-
-        @Extension(ordinal = Double.MAX_VALUE)
-        @Restricted(DoNotUse.class)
-        public static class InternalComputerListener extends ComputerListener {
-            @Override
-            public void onOnline(Computer c, TaskListener listener) throws IOException, InterruptedException {
-                c.cachedEnvironment = null;
-            }
-        }
-
-        @Override
-        public int hashCode() {
-            return executor.hashCode();
+        public void onOnline(Computer c, TaskListener listener) throws IOException, InterruptedException {
+            c.cachedEnvironment = null;
         }
     }
 
@@ -1740,6 +1719,7 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
      */
     public static class TerminationRequest extends RuntimeException {
         private final long when;
+
         public TerminationRequest(String message) {
             super(message);
             this.when = System.currentTimeMillis();
@@ -1756,29 +1736,64 @@ public /*transient*/ abstract class Computer extends Actionable implements Acces
         }
     }
 
-    public static final PermissionGroup PERMISSIONS = new PermissionGroup(Computer.class,Messages._Computer_Permissions_Title());
-    public static final Permission CONFIGURE = new Permission(PERMISSIONS,"Configure", Messages._Computer_ConfigurePermission_Description(), Permission.CONFIGURE, PermissionScope.COMPUTER);
+    public static final PermissionGroup PERMISSIONS = new PermissionGroup(Computer.class, Messages._Computer_Permissions_Title());
+    public static final Permission CONFIGURE =
+            new Permission(
+                    PERMISSIONS,
+                    "Configure",
+                    Messages._Computer_ConfigurePermission_Description(),
+                    Permission.CONFIGURE,
+                    PermissionScope.COMPUTER);
     /**
      * @since 1.532
      */
-    public static final Permission EXTENDED_READ = new Permission(PERMISSIONS,"ExtendedRead", Messages._Computer_ExtendedReadPermission_Description(), CONFIGURE, SystemProperties.getBoolean("hudson.security.ExtendedReadPermission"), new PermissionScope[]{PermissionScope.COMPUTER});
-    public static final Permission DELETE = new Permission(PERMISSIONS,"Delete", Messages._Computer_DeletePermission_Description(), Permission.DELETE, PermissionScope.COMPUTER);
-    public static final Permission CREATE = new Permission(PERMISSIONS,"Create", Messages._Computer_CreatePermission_Description(), Permission.CREATE, PermissionScope.JENKINS);
-    public static final Permission DISCONNECT = new Permission(PERMISSIONS,"Disconnect", Messages._Computer_DisconnectPermission_Description(), Jenkins.ADMINISTER, PermissionScope.COMPUTER);
-    public static final Permission CONNECT = new Permission(PERMISSIONS,"Connect", Messages._Computer_ConnectPermission_Description(), DISCONNECT, PermissionScope.COMPUTER);
-    public static final Permission BUILD = new Permission(PERMISSIONS, "Build", Messages._Computer_BuildPermission_Description(),  Permission.WRITE, PermissionScope.COMPUTER);
+    public static final Permission EXTENDED_READ =
+            new Permission(
+                    PERMISSIONS,
+                    "ExtendedRead",
+                    Messages._Computer_ExtendedReadPermission_Description(),
+                    CONFIGURE,
+                    SystemProperties.getBoolean("hudson.security.ExtendedReadPermission"),
+                    new PermissionScope[] {PermissionScope.COMPUTER});
+    public static final Permission DELETE =
+            new Permission(
+                    PERMISSIONS,
+                    "Delete",
+                    Messages._Computer_DeletePermission_Description(),
+                    Permission.DELETE,
+                    PermissionScope.COMPUTER);
+    public static final Permission CREATE =
+            new Permission(
+                    PERMISSIONS,
+                    "Create",
+                    Messages._Computer_CreatePermission_Description(),
+                    Permission.CREATE,
+                    PermissionScope.JENKINS);
+    public static final Permission DISCONNECT =
+            new Permission(
+                    PERMISSIONS,
+                    "Disconnect",
+                    Messages._Computer_DisconnectPermission_Description(),
+                    Jenkins.ADMINISTER,
+                    PermissionScope.COMPUTER);
+    public static final Permission CONNECT =
+            new Permission(
+                    PERMISSIONS,
+                    "Connect",
+                    Messages._Computer_ConnectPermission_Description(),
+                    DISCONNECT,
+                    PermissionScope.COMPUTER);
+    public static final Permission BUILD =
+            new Permission(
+                    PERMISSIONS,
+                    "Build",
+                    Messages._Computer_BuildPermission_Description(),
+                    Permission.WRITE,
+                    PermissionScope.COMPUTER);
 
-    // This permission was historically scoped to this class albeit declared in Cloud. While deserializing, Jenkins loads
-    // the scope class to make sure the permission is initialized and registered. since Cloud class is used rather seldom,
-    // it might appear the permission does not exist. Referencing the permission from here to make sure it gets loaded.
-    private static final @Deprecated Permission CLOUD_PROVISION = Cloud.PROVISION;
+    @Restricted(NoExternalUse.class) // called by jelly
+    public static final Permission[] EXTENDED_READ_AND_CONNECT =
+            new Permission[] { EXTENDED_READ, CONNECT };
 
     private static final Logger LOGGER = Logger.getLogger(Computer.class.getName());
-
-    static {
-        IconSet.icons.addIcon(new Icon("icon-computer-user-offline icon-sm", "16x16/computer-user-offline.png", Icon.ICON_SMALL_STYLE));
-        IconSet.icons.addIcon(new Icon("icon-computer-user-offline icon-md", "24x24/computer-user-offline.png", Icon.ICON_MEDIUM_STYLE));
-        IconSet.icons.addIcon(new Icon("icon-computer-user-offline icon-lg", "32x32/computer-user-offline.png", Icon.ICON_LARGE_STYLE));
-        IconSet.icons.addIcon(new Icon("icon-computer-user-offline icon-xlg", "48x48/computer-user-offline.png", Icon.ICON_XLARGE_STYLE));
-    }
 }
