@@ -22,17 +22,22 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.google.common.collect.ImmutableSet;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.DescriptorExtensionList;
 import hudson.EnvVars;
 import hudson.FilePath;
 import hudson.Launcher;
 import hudson.Launcher.RemoteLauncher;
+import hudson.RestrictedSince;
 import hudson.Util;
 import hudson.cli.CLI;
 import hudson.model.Descriptor.FormException;
+import hudson.model.labels.LabelAtom;
 import hudson.remoting.Callable;
 import hudson.remoting.Channel;
 import hudson.remoting.Which;
@@ -47,6 +52,7 @@ import hudson.slaves.SlaveComputer;
 import hudson.util.ClockDifference;
 import hudson.util.DescribableList;
 import hudson.util.FormValidation;
+import jakarta.servlet.ServletException;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -57,28 +63,28 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
-import javax.servlet.ServletException;
+import java.util.stream.Collectors;
 import jenkins.model.Jenkins;
 import jenkins.security.MasterToSlaveCallable;
 import jenkins.slaves.WorkspaceLocator;
 import jenkins.util.SystemProperties;
-import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
 import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.HttpResponse;
 import org.kohsuke.stapler.QueryParameter;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
 
 /**
  * Information about a Hudson agent node.
@@ -89,18 +95,19 @@ import org.kohsuke.stapler.StaplerResponse;
  *
  * <p>
  * TODO: move out more stuff to {@link DumbSlave}.
- * 
+ *
  * On February, 2016 a general renaming was done internally: the "slave" term was replaced by
  * "Agent". This change was applied in: UI labels/HTML pages, javadocs and log messages.
  * Java classes, fields, methods, etc were not renamed to avoid compatibility issues.
- * See <a href="https://jenkins-ci.org/issue/27268">JENKINS-27268</a>.
+ * See <a href="https://www.jenkins.io/issue/27268">JENKINS-27268</a>.
  *
  * @author Kohsuke Kawaguchi
  */
+@SuppressFBWarnings(value = "DESERIALIZATION_GADGET", justification = "unhappy about existence of readResolve?")
 public abstract class Slave extends Node implements Serializable {
-    
+
     private static final Logger LOGGER = Logger.getLogger(Slave.class.getName());
-    
+
     /**
      * Name of this agent node.
      */
@@ -113,7 +120,7 @@ public abstract class Slave extends Node implements Serializable {
 
     /**
      * Path to the root of the workspace from the view point of this node, such as "/hudson", this need not
-     * be absolute provided that the launcher establishes a consistent working directory, such as "./.jenkins-slave"
+     * be absolute provided that the launcher establishes a consistent working directory, such as "./.jenkins-agent"
      * when used with an SSH launcher.
      *
      * NOTE: if the administrator is using a relative path they are responsible for ensuring that the launcher used
@@ -124,7 +131,7 @@ public abstract class Slave extends Node implements Serializable {
     /**
      * Number of executors of this node.
      */
-    private int numExecutors = 2;
+    private int numExecutors = 1;
 
     /**
      * Job allocation strategy.
@@ -144,44 +151,41 @@ public abstract class Slave extends Node implements Serializable {
     /**
      * Whitespace-separated labels.
      */
-    private String label="";
+    private String label = "";
 
-    private /*almost final*/ DescribableList<NodeProperty<?>,NodePropertyDescriptor> nodeProperties =
+    private /*almost final*/ DescribableList<NodeProperty<?>, NodePropertyDescriptor> nodeProperties =
             new DescribableList<>(this);
 
     /**
-     * Lazily computed set of labels from {@link #label}.
+     * @deprecated Removed with no replacement.
      */
-    private transient volatile Set<Label> labels;
-
-    /**
-     * Id of user which creates this agent {@link User}.
-     */
-    private String userId;
+    @Deprecated
+    private transient String userId;
 
     /**
      * Use {@link #Slave(String, String, ComputerLauncher)} and set the rest through setters.
-     * @deprecated since FIXME
+     * @deprecated since 2.184
      */
     @Deprecated
-    public Slave(String name, String nodeDescription, String remoteFS, String numExecutors,
+    protected Slave(String name, String nodeDescription, String remoteFS, String numExecutors,
                  Mode mode, String labelString, ComputerLauncher launcher, RetentionStrategy retentionStrategy, List<? extends NodeProperty<?>> nodeProperties) throws FormException, IOException {
-        this(name,nodeDescription,remoteFS,Util.tryParseNumber(numExecutors, 1).intValue(),mode,labelString,launcher,retentionStrategy, nodeProperties);
+        this(name, nodeDescription, remoteFS, Util.tryParseNumber(numExecutors, 1).intValue(), mode, labelString, launcher, retentionStrategy, nodeProperties);
     }
 
     /**
      * @deprecated since 2009-02-20.
      */
     @Deprecated
-    public Slave(String name, String nodeDescription, String remoteFS, int numExecutors,
+    protected Slave(String name, String nodeDescription, String remoteFS, int numExecutors,
             Mode mode, String labelString, ComputerLauncher launcher, RetentionStrategy retentionStrategy) throws FormException, IOException {
-    	this(name, nodeDescription, remoteFS, numExecutors, mode, labelString, launcher, retentionStrategy, new ArrayList());
+        this(name, nodeDescription, remoteFS, numExecutors, mode, labelString, launcher, retentionStrategy, new ArrayList());
     }
 
-    public Slave(@Nonnull String name, String remoteFS, ComputerLauncher launcher) throws FormException, IOException {
+    protected Slave(@NonNull String name, String remoteFS, ComputerLauncher launcher) throws FormException, IOException {
         this.name = name;
         this.remoteFS = remoteFS;
         this.launcher = launcher;
+        this.labelAtomSet = Collections.unmodifiableSet(Label.parse(label));
     }
 
     /**
@@ -189,35 +193,24 @@ public abstract class Slave extends Node implements Serializable {
      *      Use {@link #Slave(String, String, ComputerLauncher)} and set the rest through setters.
      */
     @Deprecated
-    public Slave(@Nonnull String name, String nodeDescription, String remoteFS, int numExecutors,
+    protected Slave(@NonNull String name, String nodeDescription, String remoteFS, int numExecutors,
                  Mode mode, String labelString, ComputerLauncher launcher, RetentionStrategy retentionStrategy, List<? extends NodeProperty<?>> nodeProperties) throws FormException, IOException {
         this.name = name;
         this.description = nodeDescription;
         this.numExecutors = numExecutors;
         this.mode = mode;
         this.remoteFS = Util.fixNull(remoteFS).trim();
-        this.label = Util.fixNull(labelString).trim();
+        _setLabelString(labelString);
         this.launcher = launcher;
         this.retentionStrategy = retentionStrategy;
         getAssignedLabels();    // compute labels now
 
         this.nodeProperties.replaceBy(nodeProperties);
-         Slave node = (Slave) Jenkins.get().getNode(name);
 
-       if(node!=null){
-            this.userId= node.getUserId(); //agent has already existed
-        }
-       else{
-            User user = User.current();
-            userId = user!=null ? user.getId() : "anonymous";
-        }
-        if (name.equals(""))
+        if (name.isEmpty())
             throw new FormException(Messages.Slave_InvalidConfig_NoName(), null);
 
-//        if (remoteFS.equals(""))
-//            throw new FormException(Messages.Slave_InvalidConfig_NoRemoteDir(name), null);
-
-        if (this.numExecutors<=0)
+        if (this.numExecutors <= 0)
             throw new FormException(Messages.Slave_InvalidConfig_Executors(name), null);
     }
 
@@ -225,17 +218,29 @@ public abstract class Slave extends Node implements Serializable {
      * Return id of user which created this agent
      *
      * @return id of user
+     *
+     * @deprecated Removed with no replacement
      */
+    @Deprecated
+    @Restricted(DoNotUse.class)
+    @RestrictedSince("2.220")
     public String getUserId() {
         return userId;
     }
 
+    /**
+     * This method no longer does anything.
+     *
+     * @deprecated Removed with no replacement
+     */
+    @Deprecated
+    @Restricted(DoNotUse.class)
+    @RestrictedSince("2.220")
     public void setUserId(String userId){
-        this.userId = userId;
     }
 
     public ComputerLauncher getLauncher() {
-        if (launcher == null && !StringUtils.isEmpty(agentCommand)) {
+        if (launcher == null && agentCommand != null && !agentCommand.isEmpty()) {
             try {
                 launcher = (ComputerLauncher) Jenkins.get().getPluginManager().uberClassLoader.loadClass("hudson.slaves.CommandLauncher").getConstructor(String.class, EnvVars.class).newInstance(agentCommand, null);
                 agentCommand = null;
@@ -244,8 +249,16 @@ public abstract class Slave extends Node implements Serializable {
                 LOGGER.log(Level.WARNING, "could not update historical agentCommand setting to CommandLauncher", x);
             }
         }
-        // Default launcher does not use Work Directory
-        return launcher == null ? new JNLPLauncher(false) : launcher;
+        return launcher == null ? new JNLPLauncher() : launcher;
+    }
+
+    /**
+     * @deprecated In most cases, you should not call this method directly, but {@link Jenkins#updateNode(Node)} instead.
+     */
+    @Override
+    @Deprecated
+    public void save() throws IOException {
+        super.save();
     }
 
     public void setLauncher(ComputerLauncher launcher) {
@@ -256,6 +269,8 @@ public abstract class Slave extends Node implements Serializable {
         return remoteFS;
     }
 
+    @NonNull
+    @Override
     public String getNodeName() {
         return name;
     }
@@ -264,6 +279,7 @@ public abstract class Slave extends Node implements Serializable {
         return getClass().getName() + "[" + name + "]";
     }
 
+    @Override
     public void setNodeName(String name) {
         this.name = name;
     }
@@ -273,10 +289,12 @@ public abstract class Slave extends Node implements Serializable {
         this.description = value;
     }
 
+    @Override
     public String getNodeDescription() {
         return description;
     }
 
+    @Override
     public int getNumExecutors() {
         return numExecutors;
     }
@@ -286,6 +304,7 @@ public abstract class Slave extends Node implements Serializable {
         this.numExecutors = n;
     }
 
+    @Override
     public Mode getMode() {
         return mode;
     }
@@ -295,13 +314,19 @@ public abstract class Slave extends Node implements Serializable {
         this.mode = mode;
     }
 
+    @NonNull
+    @Override
     public DescribableList<NodeProperty<?>, NodePropertyDescriptor> getNodeProperties() {
         assert nodeProperties != null;
-    	return nodeProperties;
+        return nodeProperties;
     }
 
     @DataBoundSetter
     public void setNodeProperties(List<? extends NodeProperty<?>> properties) throws IOException {
+        if (nodeProperties == null) {
+            warnPlugin();
+            nodeProperties = new DescribableList<>(this);
+        }
         nodeProperties.replaceBy(properties);
     }
 
@@ -314,27 +339,74 @@ public abstract class Slave extends Node implements Serializable {
         this.retentionStrategy = availabilityStrategy;
     }
 
+    @Override
     public String getLabelString() {
         return Util.fixNull(label).trim();
+    }
+
+    private transient Set<LabelAtom> previouslyAssignedLabels = new HashSet<>();
+
+    /**
+     * @return the labels to be trimmed for this node. This includes current and previous labels that were applied before the last call to this method.
+     */
+    @Override
+    @NonNull
+    @Restricted(NoExternalUse.class)
+    public Set<LabelAtom> drainLabelsToTrim() {
+        var result = new HashSet<>(super.drainLabelsToTrim());
+        synchronized (previouslyAssignedLabels) {
+            result.addAll(previouslyAssignedLabels);
+            previouslyAssignedLabels.clear();
+        }
+        return result;
     }
 
     @Override
     @DataBoundSetter
     public void setLabelString(String labelString) throws IOException {
-        this.label = Util.fixNull(labelString).trim();
+        _setLabelString(labelString);
         // Compute labels now.
         getAssignedLabels();
     }
 
+    private void _setLabelString(String labelString) {
+        synchronized (this.previouslyAssignedLabels) {
+            this.previouslyAssignedLabels.addAll(getAssignedLabels().stream().filter(Objects::nonNull).collect(Collectors.toSet()));
+        }
+        this.label = Util.fixNull(labelString).trim();
+        this.labelAtomSet = Collections.unmodifiableSet(Label.parse(label));
+    }
+
+    @CheckForNull // should be @NonNull, but we've seen plugins overriding readResolve() without calling super.
+    private transient Set<LabelAtom> labelAtomSet;
+
     @Override
-    public Callable<ClockDifference,IOException> getClockDifferenceCallable() {
+    protected Set<LabelAtom> getLabelAtomSet() {
+        if (labelAtomSet == null) {
+            if (!insideReadResolve.get()) {
+                warnPlugin();
+            }
+            this.labelAtomSet = Collections.unmodifiableSet(Label.parse(label));
+        }
+        return labelAtomSet;
+    }
+
+    private void warnPlugin() {
+        LOGGER.log(Level.WARNING, () -> getClass().getName() + " or one of its superclass overrides readResolve() without calling super implementation." +
+                "Please file an issue against the plugin implementing it: " + Jenkins.get().getPluginManager().whichPlugin(getClass()));
+    }
+
+    @Override
+    public Callable<ClockDifference, IOException> getClockDifferenceCallable() {
         return new GetClockDifference1();
     }
 
+    @Override
     public Computer createComputer() {
         return new SlaveComputer(this);
     }
 
+    @Override
     public FilePath getWorkspaceFor(TopLevelItem item) {
         for (WorkspaceLocator l : WorkspaceLocator.all()) {
             FilePath workspace = l.locate(item, this);
@@ -344,10 +416,11 @@ public abstract class Slave extends Node implements Serializable {
         }
 
         FilePath r = getWorkspaceRoot();
-        if(r==null)     return null;    // offline
+        if (r == null)     return null;    // offline
         return r.child(item.getFullName());
     }
 
+    @Override
     @CheckForNull
     public FilePath getRootPath() {
         final SlaveComputer computer = getComputer();
@@ -355,7 +428,7 @@ public abstract class Slave extends Node implements Serializable {
             // if computer is null then channel is null and thus we were going to return null anyway
             return null;
         } else {
-            return createPath(StringUtils.defaultString(computer.getAbsoluteRemoteFs(), remoteFS));
+            return createPath(Objects.toString(computer.getAbsoluteRemoteFs(), remoteFS));
         }
     }
 
@@ -366,7 +439,7 @@ public abstract class Slave extends Node implements Serializable {
      */
     public @CheckForNull FilePath getWorkspaceRoot() {
         FilePath r = getRootPath();
-        if(r==null) return null;
+        if (r == null) return null;
         return r.child(WORKSPACE_ROOT);
     }
 
@@ -380,19 +453,20 @@ public abstract class Slave extends Node implements Serializable {
             this.fileName = fileName;
         }
 
-        public void doIndex( StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+        public void doIndex(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
             URLConnection con = connect();
             // since we end up redirecting users to jnlpJars/foo.jar/, set the content disposition
             // so that browsers can download them in the right file name.
             // see http://support.microsoft.com/kb/260519 and http://www.boutell.com/newfaq/creating/forcedownload.html
             rsp.setHeader("Content-Disposition", "attachment; filename=" + fileName);
-            InputStream in = con.getInputStream();
-            rsp.serveFile(req, in, con.getLastModified(), con.getContentLength(), "*.jar" );
-            in.close();
+            try (InputStream in = con.getInputStream()) {
+                rsp.serveFile(req, in, con.getLastModified(), con.getContentLengthLong(), "*.jar");
+            }
         }
 
-        public void generateResponse(StaplerRequest req, StaplerResponse rsp, Object node) throws IOException, ServletException {
-            doIndex(req,rsp);
+        @Override
+        public void generateResponse(StaplerRequest2 req, StaplerResponse2 rsp, Object node) throws IOException, ServletException {
+            doIndex(req, rsp);
         }
 
         private URLConnection connect() throws IOException {
@@ -402,36 +476,32 @@ public abstract class Slave extends Node implements Serializable {
 
         public URL getURL() throws IOException {
             String name = fileName;
-            
+
             // Prevent the access to war contents & prevent the folder escaping (SECURITY-195)
             if (!ALLOWED_JNLPJARS_FILES.contains(name)) {
                 throw new MalformedURLException("The specified file path " + fileName + " is not allowed due to security reasons");
             }
-            
+
+            Class<?> owner = null;
             if (name.equals("hudson-cli.jar") || name.equals("jenkins-cli.jar"))  {
-                File cliJar = Which.jarFile(CLI.class);
-                if (cliJar.isFile()) {
-                    name = "jenkins-cli.jar";
-                } else {
-                    URL res = findExecutableJar(cliJar, CLI.class);
-                    if (res != null) {
-                        return res;
-                    }
-                }
+                owner = CLI.class;
             } else if (name.equals("agent.jar") || name.equals("slave.jar") || name.equals("remoting.jar")) {
-                File remotingJar = Which.jarFile(hudson.remoting.Launcher.class);
-                if (remotingJar.isFile()) {
-                    name = "lib/" + remotingJar.getName();
+                owner = hudson.remoting.Launcher.class;
+            }
+            if (owner != null) {
+                File jar = Which.jarFile(owner);
+                if (jar.isFile()) {
+                    name = "lib/" + jar.getName();
                 } else {
-                    URL res = findExecutableJar(remotingJar, hudson.remoting.Launcher.class);
+                    URL res = findExecutableJar(jar, owner);
                     if (res != null) {
                         return res;
                     }
                 }
             }
-            
-            URL res = Jenkins.get().servletContext.getResource("/WEB-INF/" + name);
-            if(res==null) {
+
+            URL res = Jenkins.get().getServletContext().getResource("/WEB-INF/" + name);
+            if (res == null) {
                 throw new FileNotFoundException(name); // giving up
             } else {
                 LOGGER.log(Level.FINE, "found {0}", res);
@@ -462,7 +532,7 @@ public abstract class Slave extends Node implements Serializable {
 
         public byte[] readFully() throws IOException {
             try (InputStream in = connect().getInputStream()) {
-                return IOUtils.toByteArray(in);
+                return in.readAllBytes();
             }
         }
 
@@ -475,16 +545,17 @@ public abstract class Slave extends Node implements Serializable {
      *      If there is no computer it will return a {@link hudson.Launcher.DummyLauncher}, otherwise it
      *      will return a {@link hudson.Launcher.RemoteLauncher} instead.
      */
-    @Nonnull
+    @Override
+    @NonNull
     public Launcher createLauncher(TaskListener listener) {
         SlaveComputer c = getComputer();
         if (c == null) {
             listener.error("Issue with creating launcher for agent " + name + ". Computer has been disconnected");
             return new Launcher.DummyLauncher(listener);
         } else {
-            // TODO: ideally all the logic below should be inside the SlaveComputer class with proper locking to prevent race conditions, 
+            // TODO: ideally all the logic below should be inside the SlaveComputer class with proper locking to prevent race conditions,
             // but so far there is no locks for setNode() hence it requires serious refactoring
-            
+
             // Ensure that the Computer instance still points to this node
             // Otherwise we may end up running the command on a wrong (reconnected) Node instance.
             Slave node = c.getNode();
@@ -495,10 +566,10 @@ public abstract class Slave extends Node implements Serializable {
                 }
                 return new Launcher.DummyLauncher(listener);
             }
-            
+
             // RemoteLauncher requires an active Channel instance to operate correctly
             final Channel channel = c.getChannel();
-            if (channel == null) { 
+            if (channel == null) {
                 reportLauncherCreateError("The agent has not been fully initialized yet",
                                          "No remoting channel to the agent OR it has not been fully initialized yet", listener);
                 return new Launcher.DummyLauncher(listener);
@@ -512,23 +583,23 @@ public abstract class Slave extends Node implements Serializable {
             if (isUnix == null) {
                 // isUnix is always set when the channel is not null, so it should never happen
                 reportLauncherCreateError("The agent has not been fully initialized yet",
-                                         "Cannot determing if the agent is a Unix one, the System status request has not completed yet. " +
-                                         "It is an invalid channel state, please report a bug to Jenkins if you see it.", 
+                                         "Cannot determine if the agent is a Unix one, the System status request has not completed yet. " +
+                                         "It is an invalid channel state, please report a bug to Jenkins if you see it.",
                                          listener);
                 return new Launcher.DummyLauncher(listener);
             }
-            
+
             return new RemoteLauncher(listener, channel, isUnix).decorateFor(this);
         }
     }
-    
-    private void reportLauncherCreateError(@Nonnull String humanReadableMsg, @CheckForNull String exceptionDetails, @Nonnull TaskListener listener) {
+
+    private void reportLauncherCreateError(@NonNull String humanReadableMsg, @CheckForNull String exceptionDetails, @NonNull TaskListener listener) {
         String message = "Issue with creating launcher for agent " + name + ". " + humanReadableMsg;
         listener.error(message);
         if (LOGGER.isLoggable(Level.WARNING)) {
             // Send stacktrace to the log as well in order to diagnose the root cause of issues like JENKINS-38527
             LOGGER.log(Level.WARNING, message
-                    + "Probably there is a race condition with Agent reconnection or disconnection, check other log entries", 
+                    + "Probably there is a race condition with Agent reconnection or disconnection, check other log entries",
                     new IllegalStateException(exceptionDetails != null ? exceptionDetails : humanReadableMsg));
         }
     }
@@ -542,7 +613,7 @@ public abstract class Slave extends Node implements Serializable {
      */
     @CheckForNull
     public SlaveComputer getComputer() {
-        return (SlaveComputer)toComputer();
+        return (SlaveComputer) toComputer();
     }
 
     @Override
@@ -560,23 +631,33 @@ public abstract class Slave extends Node implements Serializable {
         return name.hashCode();
     }
 
+    private static final ThreadLocal<Boolean> insideReadResolve = ThreadLocal.withInitial(() -> false);
+
     /**
      * Invoked by XStream when this object is read into memory.
      */
     protected Object readResolve() {
-        if(nodeProperties==null)
+        if (nodeProperties == null)
             nodeProperties = new DescribableList<>(this);
+        previouslyAssignedLabels = new HashSet<>();
+        insideReadResolve.set(true);
+        try {
+            _setLabelString(label);
+        } finally {
+            insideReadResolve.set(false);
+        }
         return this;
     }
 
+    @Override
     public SlaveDescriptor getDescriptor() {
         Descriptor d = Jenkins.get().getDescriptorOrDie(getClass());
         if (d instanceof SlaveDescriptor)
             return (SlaveDescriptor) d;
-        throw new IllegalStateException(d.getClass()+" needs to extend from SlaveDescriptor");
+        throw new IllegalStateException(d.getClass() + " needs to extend from SlaveDescriptor");
     }
 
-    public static abstract class SlaveDescriptor extends NodeDescriptor {
+    public abstract static class SlaveDescriptor extends NodeDescriptor {
         public FormValidation doCheckNumExecutors(@QueryParameter String value) {
             return FormValidation.validatePositiveInteger(value);
         }
@@ -584,11 +665,11 @@ public abstract class Slave extends Node implements Serializable {
         /**
          * Performs syntactical check on the remote FS for agents.
          */
-        public FormValidation doCheckRemoteFS(@QueryParameter String value) throws IOException, ServletException {
-            if(Util.fixEmptyAndTrim(value)==null)
+        public FormValidation doCheckRemoteFS(@QueryParameter String value) throws IOException {
+            if (Util.fixEmptyAndTrim(value) == null)
                 return FormValidation.error(Messages.Slave_Remote_Director_Mandatory());
 
-            if(value.startsWith("\\\\") || value.startsWith("/net/"))
+            if (value.startsWith("\\\\") || value.startsWith("/net/"))
                 return FormValidation.warning(Messages.Slave_Network_Mounted_File_System_Warning());
 
             if (Util.isRelativePath(value)) {
@@ -601,11 +682,11 @@ public abstract class Slave extends Node implements Serializable {
         /**
          * Returns the list of {@link ComputerLauncher} descriptors appropriate to the supplied {@link Slave}.
          *
-         * @param it the {@link Slave} or {@code null} to assume the slave is of type {@link #clazz}.
+         * @param it the {@link Slave} or {@code null} to assume the agent is of type {@link #clazz}.
          * @return the filtered list
          * @since 2.12
          */
-        @Nonnull
+        @NonNull
         @Restricted(NoExternalUse.class) // intended for use by Jelly EL only (plus hack in DelegatingComputerLauncher)
         public final List<Descriptor<ComputerLauncher>> computerLauncherDescriptors(@CheckForNull Slave it) {
             DescriptorExtensionList<ComputerLauncher, Descriptor<ComputerLauncher>> all =
@@ -622,8 +703,7 @@ public abstract class Slave extends Node implements Serializable {
          * @return the filtered list
          * @since 2.12
          */
-        @Nonnull
-        @SuppressWarnings("unchecked") // used by Jelly EL only
+        @NonNull
         @Restricted(NoExternalUse.class) // used by Jelly EL only
         public final List<Descriptor<RetentionStrategy<?>>> retentionStrategyDescriptors(@CheckForNull Slave it) {
             return it == null ? DescriptorVisibilityFilter.applyType(clazz, RetentionStrategy.all())
@@ -633,11 +713,11 @@ public abstract class Slave extends Node implements Serializable {
         /**
          * Returns the list of {@link NodePropertyDescriptor} appropriate to the supplied {@link Slave}.
          *
-         * @param it the {@link Slave} or {@code null} to assume the slave is of type {@link #clazz}.
+         * @param it the {@link Slave} or {@code null} to assume the agent is of type {@link #clazz}.
          * @return the filtered list
          * @since 2.12
          */
-        @Nonnull
+        @NonNull
         @SuppressWarnings("unchecked") // used by Jelly EL only
         @Restricted(NoExternalUse.class) // used by Jelly EL only
         public final List<NodePropertyDescriptor> nodePropertyDescriptors(@CheckForNull Slave it) {
@@ -662,11 +742,11 @@ public abstract class Slave extends Node implements Serializable {
 //
     /**
      * Command line to launch the agent, like
-     * "ssh myslave java -jar /path/to/hudson-remoting.jar"
+     * "ssh myagent java -jar /path/to/hudson-remoting.jar"
      * @deprecated in 1.216
      */
     @Deprecated
-    private transient String agentCommand;
+    private transient String agentCommand; // this was called 'agentCommand' from the beginning; not an accidental 2016 rename
 
     /**
      * Obtains the clock difference between this side and that side of the channel.
@@ -681,7 +761,8 @@ public abstract class Slave extends Node implements Serializable {
      *     <li>When it's read on this side as a return value, it morphs itself into {@link ClockDifference}.
      * </ol>
      */
-    private static final class GetClockDifference1 extends MasterToSlaveCallable<ClockDifference,IOException> {
+    private static final class GetClockDifference1 extends MasterToSlaveCallable<ClockDifference, IOException> {
+        @Override
         public ClockDifference call() {
             // this method must be being invoked locally, which means the clock is in sync
             return new ClockDifference(0);
@@ -694,13 +775,14 @@ public abstract class Slave extends Node implements Serializable {
         private static final long serialVersionUID = 1L;
     }
 
-    private static final class GetClockDifference2 extends MasterToSlaveCallable<GetClockDifference3,IOException> {
+    private static final class GetClockDifference2 extends MasterToSlaveCallable<GetClockDifference3, IOException> {
         /**
-         * Capture the time on the master when this object is sent to remote, which is when
+         * Capture the time on the controller when this object is sent to remote, which is when
          * {@link GetClockDifference1#writeReplace()} is run.
          */
         private final long startTime = System.currentTimeMillis();
 
+        @Override
         public GetClockDifference3 call() {
             return new GetClockDifference3(startTime);
         }
@@ -712,23 +794,23 @@ public abstract class Slave extends Node implements Serializable {
         private final long remoteTime = System.currentTimeMillis();
         private final long startTime;
 
-        public GetClockDifference3(long startTime) {
+        GetClockDifference3(long startTime) {
             this.startTime = startTime;
         }
 
         private Object readResolve() {
             long endTime = System.currentTimeMillis();
-            return new ClockDifference((startTime + endTime)/2-remoteTime);
+            return new ClockDifference((startTime + endTime) / 2 - remoteTime);
         }
     }
 
     /**
      * Determines the workspace root file name for those who really really need the shortest possible path name.
      */
-    private static final String WORKSPACE_ROOT = SystemProperties.getString(Slave.class.getName()+".workspaceRoot","workspace");
+    private static final String WORKSPACE_ROOT = SystemProperties.getString(Slave.class.getName() + ".workspaceRoot", "workspace");
 
     /**
      * Provides a collection of file names, which are accessible via /jnlpJars link.
      */
-    private static final Set<String> ALLOWED_JNLPJARS_FILES = ImmutableSet.of("agent.jar", "slave.jar", "remoting.jar", "jenkins-cli.jar", "hudson-cli.jar");
+    private static final Set<String> ALLOWED_JNLPJARS_FILES = Set.of("agent.jar", "slave.jar", "remoting.jar", "jenkins-cli.jar", "hudson-cli.jar");
 }
