@@ -22,79 +22,83 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.google.common.base.Predicate;
 import com.infradna.tool.bridge_method_injector.WithBridgeMethods;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.Nullable;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.BulkChange;
 import hudson.CopyOnWrite;
 import hudson.Extension;
 import hudson.ExtensionList;
 import hudson.ExtensionPoint;
-import hudson.FeedAdapter;
 import hudson.Util;
 import hudson.XmlFile;
 import hudson.init.InitMilestone;
 import hudson.init.Initializer;
-import hudson.model.Descriptor.FormException;
 import hudson.model.listeners.SaveableListener;
 import hudson.security.ACL;
 import hudson.security.AccessControlled;
 import hudson.security.SecurityRealm;
-import hudson.security.UserMayOrMayNotExistException;
-import hudson.util.FormApply;
+import hudson.security.UserMayOrMayNotExistException2;
+import hudson.tasks.UserAvatarResolver;
 import hudson.util.FormValidation;
 import hudson.util.RunList;
 import hudson.util.XStream2;
-
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ExecutionException;
+import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletResponse;
-
+import java.util.regex.Pattern;
 import jenkins.model.IdStrategy;
 import jenkins.model.Jenkins;
+import jenkins.model.Loadable;
 import jenkins.model.ModelObjectWithContextMenu;
-import jenkins.security.ImpersonatingUserDetailsService;
+import jenkins.scm.RunWithSCM;
+import jenkins.search.SearchGroup;
+import jenkins.security.HMACConfidentialKey;
+import jenkins.security.ImpersonatingUserDetailsService2;
 import jenkins.security.LastGrantedAuthoritiesProperty;
 import jenkins.security.UserDetailsCache;
 import jenkins.util.SystemProperties;
-import net.sf.json.JSONObject;
-import org.acegisecurity.Authentication;
-import org.acegisecurity.GrantedAuthority;
-import org.acegisecurity.providers.UsernamePasswordAuthenticationToken;
-import org.acegisecurity.providers.anonymous.AnonymousAuthenticationToken;
-import org.acegisecurity.userdetails.UserDetails;
-import org.acegisecurity.userdetails.UsernameNotFoundException;
-import org.apache.commons.lang.StringUtils;
 import org.jenkinsci.Symbol;
 import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.Beta;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.StaplerProxy;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
 import org.kohsuke.stapler.export.Exported;
 import org.kohsuke.stapler.export.ExportedBean;
 import org.kohsuke.stapler.interceptor.RequirePOST;
-import org.kohsuke.stapler.verb.POST;
-import org.springframework.dao.DataAccessException;
+import org.springframework.security.authentication.AnonymousAuthenticationToken;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
 /**
  * Represents a user.
@@ -120,7 +124,7 @@ import org.springframework.dao.DataAccessException;
  * @author Kohsuke Kawaguchi
  */
 @ExportedBean
-public class User extends AbstractModelObject implements AccessControlled, DescriptorByNameOwner, Saveable, Comparable<User>, ModelObjectWithContextMenu, StaplerProxy {
+public class User extends AbstractModelObject implements AccessControlled, DescriptorByNameOwner, Loadable, Saveable, Comparable<User>, ModelObjectWithContextMenu, StaplerProxy {
 
     public static final XStream2 XSTREAM = new XStream2();
     private static final Logger LOGGER = Logger.getLogger(User.class.getName());
@@ -130,7 +134,8 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * Escape hatch for StaplerProxy-based access control
      */
     @Restricted(NoExternalUse.class)
-    public static /* Script Console modifiable */ boolean SKIP_PERMISSION_CHECK = Boolean.getBoolean(User.class.getName() + ".skipPermissionCheck");
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
+    public static /* Script Console modifiable */ boolean SKIP_PERMISSION_CHECK = SystemProperties.getBoolean(User.class.getName() + ".skipPermissionCheck");
 
     /**
      * Jenkins now refuses to let the user login if he/she doesn't exist in {@link SecurityRealm},
@@ -139,8 +144,9 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * Unfortunately this infringed some legitimate use cases of creating Jenkins-local users for
      * automation purposes. This escape hatch switch can be enabled to resurrect that behaviour.
      * <p>
-     * @see <a href="https://issues.jenkins-ci.org/browse/JENKINS-22346">JENKINS-22346</a>.
+     * See <a href="https://issues.jenkins.io/browse/JENKINS-22346">JENKINS-22346</a>.
      */
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
     public static boolean ALLOW_NON_EXISTENT_USER_TO_LOGIN = SystemProperties.getBoolean(User.class.getName() + ".allowNonExistentUserToLogin");
 
     /**
@@ -148,7 +154,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * accesses a /user/arbitraryName URL.
      * <p>
      * Unfortunately this constitutes a CSRF vulnerability, as malicious users can make admins create arbitrary numbers
-     * of ephemeral user records, so the behavior was changed in Jenkins 2.TODO / 2.32.2.
+     * of ephemeral user records, so the behavior was changed in Jenkins 2.44 / 2.32.2.
      * <p>
      * As some users may be relying on the previous behavior, setting this to true restores the previous behavior. This
      * is not recommended.
@@ -156,6 +162,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * SECURITY-406.
      */
     @Restricted(NoExternalUse.class)
+    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "for script console")
     public static boolean ALLOW_USER_CREATION_VIA_URL = SystemProperties.getBoolean(User.class.getName() + ".allowUserCreationViaUrl");
 
     /**
@@ -170,8 +177,9 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     private static final String[] ILLEGAL_PERSISTED_USERNAMES = new String[]{ACL.ANONYMOUS_USERNAME,
             ACL.SYSTEM_USERNAME, UNKNOWN_USERNAME};
 
+    @SuppressFBWarnings(value = "SS_SHOULD_BE_STATIC", justification = "Reserved for future use")
     private final int version = 10; // Not currently used, but it may be helpful in the future to store a version.
-    private String id;
+    String id;
     private volatile String fullName;
     private volatile String description;
 
@@ -182,15 +190,26 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         XSTREAM.alias("user", User.class);
     }
 
+    private User() {}
+
     private User(String id, String fullName) {
         this.id = id;
         this.fullName = fullName;
         load(id);
     }
 
+    @Override
+    public void load() {
+        load(id);
+    }
+
     private void load(String userId) {
         clearExistingProperties();
         loadFromUserConfigFile(userId);
+        fixUpAfterLoad();
+    }
+
+    private void fixUpAfterLoad() {
         removeNullsThatFailedToLoad();
         allocateDefaultPropertyInstancesAsNeeded();
         setUserToProperties();
@@ -217,9 +236,10 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     }
 
     private void loadFromUserConfigFile(String userId) {
+        AllUsers.getInstance().migrateUserIdMapper();
         XmlFile config = getConfigFile();
         try {
-            if ( config != null && config.exists()) {
+            if (config.exists()) {
                 config.unmarshal(this);
                 this.id = userId;
             }
@@ -233,8 +253,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     }
 
     private XmlFile getConfigFile() {
-        File existingUserFolder = getExistingUserFolder();
-        return existingUserFolder == null ? null : new XmlFile(XSTREAM, new File(existingUserFolder, CONFIG_XML));
+        return new XmlFile(XSTREAM, new File(getUserFolderFor(id), CONFIG_XML));
     }
 
     /**
@@ -244,7 +263,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @return the {@link jenkins.model.IdStrategy} for use with {@link User} instances.
      * @since 1.566
      */
-    @Nonnull
+    @NonNull
     public static IdStrategy idStrategy() {
         Jenkins j = Jenkins.get();
         SecurityRealm realm = j.getSecurityRealm();
@@ -254,7 +273,8 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         return realm.getUserIdStrategy();
     }
 
-    public int compareTo(@Nonnull User that) {
+    @Override
+    public int compareTo(@NonNull User that) {
         return idStrategy().compare(this.id, that.id);
     }
 
@@ -263,19 +283,30 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         return id;
     }
 
-    public @Nonnull String getUrl() {
+    public @NonNull String getUrl() {
         return "user/" + Util.rawEncode(idStrategy().keyFor(id));
     }
 
-    public @Nonnull String getSearchUrl() {
+    @Override
+    public @NonNull String getSearchUrl() {
         return "/user/" + Util.rawEncode(idStrategy().keyFor(id));
+    }
+
+    @Override
+    public String getSearchIcon() {
+        return UserAvatarResolver.resolve(this, "48x48");
+    }
+
+    @Override
+    public SearchGroup getSearchGroup() {
+        return SearchGroup.get(SearchGroup.UserSearchGroup.class);
     }
 
     /**
      * The URL of the user page.
      */
     @Exported(visibility = 999)
-    public @Nonnull String getAbsoluteUrl() {
+    public @NonNull String getAbsoluteUrl() {
         return Jenkins.get().getRootUrl() + getUrl();
     }
 
@@ -284,7 +315,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * This is configurable by the user.
      */
     @Exported(visibility = 999)
-    public @Nonnull String getFullName() {
+    public @NonNull String getFullName() {
         return fullName;
     }
 
@@ -321,7 +352,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     /**
      * Updates the user object by adding a property.
      */
-    public synchronized void addProperty(@Nonnull UserProperty p) throws IOException {
+    public synchronized void addProperty(@NonNull UserProperty p) throws IOException {
         UserProperty old = getProperty(p.getClass());
         List<UserProperty> ps = new ArrayList<>(properties);
         if (old != null)
@@ -330,6 +361,29 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         p.setUser(this);
         properties = ps;
         save();
+    }
+
+    /**
+     * Expand {@link #addProperty(UserProperty)} for multiple properties to be done at once.
+     * Expected to be used by the categorized configuration pages to update part of the properties.
+     * The properties not included in the list will be let untouched.
+     * It will call the {@link UserProperty#setUser(User)} method and at the end, {@link #save()} once.
+     *
+     * @since 2.468
+     */
+    public synchronized void addProperties(@NonNull List<UserProperty> multipleProperties) throws IOException {
+        List<UserProperty> newProperties = new ArrayList<>(this.properties);
+        for (UserProperty property : multipleProperties) {
+            UserProperty oldProp = getProperty(property.getClass());
+            if (oldProp != null) {
+                newProperties.remove(oldProp);
+            }
+            newProperties.add(property);
+            property.setUser(this);
+        }
+
+        this.properties = newProperties;
+        this.save();
     }
 
     /**
@@ -364,10 +418,23 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * logged in.
      *
      * @throws UsernameNotFoundException If this user is not a valid user in the backend {@link SecurityRealm}.
+     * @since 2.266
+     */
+    public @NonNull Authentication impersonate2() throws UsernameNotFoundException {
+        return this.impersonate(this.getUserDetailsForImpersonation2());
+    }
+
+    /**
+     * @deprecated use {@link #impersonate2}
      * @since 1.419
      */
-    public @Nonnull Authentication impersonate() throws UsernameNotFoundException {
-        return this.impersonate(this.getUserDetailsForImpersonation());
+    @Deprecated
+    public @NonNull org.acegisecurity.Authentication impersonate() throws org.acegisecurity.userdetails.UsernameNotFoundException {
+        try {
+            return org.acegisecurity.Authentication.fromSpring(impersonate2());
+        } catch (AuthenticationException x) {
+            throw org.acegisecurity.AuthenticationException.fromSpring(x);
+        }
     }
 
     /**
@@ -378,17 +445,18 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      *
      * @return userDetails for the user, in case he's not found but seems legitimate, we provide a userDetails with minimum access
      * @throws UsernameNotFoundException If this user is not a valid user in the backend {@link SecurityRealm}.
+     * @since 2.266
      */
-    public @Nonnull UserDetails getUserDetailsForImpersonation() throws UsernameNotFoundException {
-        ImpersonatingUserDetailsService userDetailsService = new ImpersonatingUserDetailsService(
-                Jenkins.get().getSecurityRealm().getSecurityComponents().userDetails
+    public @NonNull UserDetails getUserDetailsForImpersonation2() throws UsernameNotFoundException {
+        ImpersonatingUserDetailsService2 userDetailsService = new ImpersonatingUserDetailsService2(
+                Jenkins.get().getSecurityRealm().getSecurityComponents().userDetails2
         );
 
         try {
             UserDetails userDetails = userDetailsService.loadUserByUsername(id);
             LOGGER.log(Level.FINE, "Impersonation of the user {0} was a success", id);
             return userDetails;
-        } catch (UserMayOrMayNotExistException e) {
+        } catch (UserMayOrMayNotExistException2 e) {
             LOGGER.log(Level.FINE, "The user {0} may or may not exist in the SecurityRealm, so we provide minimum access", id);
         } catch (UsernameNotFoundException e) {
             if (ALLOW_NON_EXISTENT_USER_TO_LOGIN) {
@@ -397,23 +465,32 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
                 LOGGER.log(Level.FINE, "The user {0} was not found in the SecurityRealm", id);
                 throw e;
             }
-        } catch (DataAccessException e) {
-            // seems like it's in the same boat as UserMayOrMayNotExistException
-            LOGGER.log(Level.FINE, "The user {0} retrieval just threw a DataAccess exception with msg = {1}, so we provide minimum access", new Object[]{id, e.getMessage()});
         }
 
         return new LegitimateButUnknownUserDetails(id);
     }
 
     /**
+     * @deprecated use {@link #getUserDetailsForImpersonation2}
+     */
+    @Deprecated
+    public @NonNull org.acegisecurity.userdetails.UserDetails getUserDetailsForImpersonation() throws org.acegisecurity.userdetails.UsernameNotFoundException {
+        try {
+            return org.acegisecurity.userdetails.UserDetails.fromSpring(getUserDetailsForImpersonation2());
+        } catch (AuthenticationException x) {
+            throw org.acegisecurity.AuthenticationException.fromSpring(x);
+        }
+    }
+
+    /**
      * Only used for a legitimate user we have no idea about. We give it only minimum access
      */
-    private static class LegitimateButUnknownUserDetails extends org.acegisecurity.userdetails.User {
+    private static class LegitimateButUnknownUserDetails extends org.springframework.security.core.userdetails.User {
         private LegitimateButUnknownUserDetails(String username) throws IllegalArgumentException {
             super(
                     username, "",
                     true, true, true, true,
-                    new GrantedAuthority[]{SecurityRealm.AUTHENTICATED_AUTHORITY}
+                    Set.of(SecurityRealm.AUTHENTICATED_AUTHORITY2)
             );
         }
     }
@@ -421,11 +498,11 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     /**
      * Creates an {@link Authentication} object that represents this user using the given userDetails
      *
-     * @param userDetails Provided by {@link #getUserDetailsForImpersonation()}.
-     * @see #getUserDetailsForImpersonation()
+     * @param userDetails Provided by {@link #getUserDetailsForImpersonation2()}.
+     * @see #getUserDetailsForImpersonation2()
      */
     @Restricted(NoExternalUse.class)
-    public @Nonnull Authentication impersonate(@Nonnull UserDetails userDetails) {
+    public @NonNull Authentication impersonate(@NonNull UserDetails userDetails) {
         return new UsernamePasswordAuthenticationToken(userDetails.getUsername(), "", userDetails.getAuthorities());
     }
 
@@ -433,7 +510,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * Accepts the new description.
      */
     @RequirePOST
-    public void doSubmitDescription(StaplerRequest req, StaplerResponse rsp) throws IOException {
+    public void doSubmitDescription(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
         checkPermission(Jenkins.ADMINISTER);
 
         description = req.getParameter("description");
@@ -447,7 +524,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * <p>
      * This is used to avoid null {@link User} instance.
      */
-    public static @Nonnull User getUnknown() {
+    public static @NonNull User getUnknown() {
         return getById(UNKNOWN_USERNAME, true);
     }
 
@@ -483,7 +560,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @return An existing or created user. May be {@code null} if a user does not exist and
      * {@code create} is false.
      */
-    public static @Nullable User get(String idOrFullName, boolean create, @Nonnull Map context) {
+    public static @Nullable User get(String idOrFullName, boolean create, @NonNull Map context) {
         if (idOrFullName == null) {
             return null;
         }
@@ -503,12 +580,12 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @return An existing or created user. May be {@code null} if a user does not exist and
      * {@code create} is false.
      */
-    private static @Nullable User getOrCreateById(@Nonnull String id, @Nonnull String fullName, boolean create) {
+    private static @Nullable User getOrCreateById(@NonNull String id, @NonNull String fullName, boolean create) {
         User u = AllUsers.get(id);
-        if (u == null && (create || UserIdMapper.getInstance().isMapped(id))) {
+        if (u == null && create) {
             u = new User(id, fullName);
             AllUsers.put(id, u);
-            if (!id.equals(fullName) && !UserIdMapper.getInstance().isMapped(id)) {
+            if (!id.equals(fullName)) {
                 try {
                     u.save();
                 } catch (IOException x) {
@@ -536,7 +613,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * Otherwise use {@link #getOrCreateByIdOrFullName(String)} or {@link #get(String, boolean, Map)}.
      */
     @Deprecated
-    public static @Nonnull User get(String idOrFullName) {
+    public static @NonNull User get(String idOrFullName) {
         return getOrCreateByIdOrFullName(idOrFullName);
     }
 
@@ -555,7 +632,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @return User instance. It will be created on-demand.
      * @since 2.91
      */
-    public static @Nonnull User getOrCreateByIdOrFullName(@Nonnull String idOrFullName) {
+    public static @NonNull User getOrCreateByIdOrFullName(@NonNull String idOrFullName) {
         return get(idOrFullName, true, Collections.emptyMap());
     }
 
@@ -567,7 +644,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @since 1.172
      */
     public static @CheckForNull User current() {
-        return get(Jenkins.getAuthentication());
+        return get2(Jenkins.getAuthentication2());
     }
 
     /**
@@ -576,14 +653,23 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      *
      * @param a the supplied {@link Authentication} .
      * @return a {@link User} object for the supplied {@link Authentication} or {@code null}
-     * @since 1.609
+     * @since 2.266
      */
-    public static @CheckForNull User get(@CheckForNull Authentication a) {
+    public static @CheckForNull User get2(@CheckForNull Authentication a) {
         if (a == null || a instanceof AnonymousAuthenticationToken)
             return null;
 
         // Since we already know this is a name, we can just call getOrCreateById with the name directly.
         return getById(a.getName(), true);
+    }
+
+    /**
+     * @deprecated use {@link #get2(Authentication)}
+     * @since 1.609
+     */
+    @Deprecated
+    public static @CheckForNull User get(@CheckForNull org.acegisecurity.Authentication a) {
+        return get2(a != null ? a.toSpring() : null);
     }
 
     /**
@@ -604,7 +690,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     /**
      * Gets all the users.
      */
-    public static @Nonnull Collection<User> getAll() {
+    public static @NonNull Collection<User> getAll() {
         final IdStrategy strategy = idStrategy();
         ArrayList<User> users = new ArrayList<>(AllUsers.values());
         users.sort((o1, o2) -> strategy.compare(o1.getId(), o2.getId()));
@@ -612,11 +698,10 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     }
 
     /**
-     * To be called from {@link Jenkins#reload} only.
+     * Called from {@link Jenkins#reload}.
      */
-    @Restricted(NoExternalUse.class)
+    @Restricted(Beta.class)
     public static void reload() throws IOException {
-        UserIdMapper.getInstance().reload();
         AllUsers.reload();
     }
 
@@ -633,6 +718,32 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
             or greater issues in the realm change, could affect currently logged
             in users and even the user making the change. */
         try {
+            var subdirectories = getRootDir().listFiles();
+            if (subdirectories != null) {
+                for (var oldDirectory : subdirectories) {
+                    var dirName = oldDirectory.getName();
+                    if (!HASHED_DIRNAMES.matcher(dirName).matches()) {
+                        continue;
+                    }
+                    var xml = new XmlFile(XSTREAM, new File(oldDirectory, CONFIG_XML));
+                    if (!xml.exists()) {
+                        continue;
+                    }
+                    try {
+                        var user = (User) xml.read();
+                        if (user.id == null) {
+                            continue;
+                        }
+                        var newDirectory = getUserFolderFor(user.id);
+                        if (!oldDirectory.equals(newDirectory)) {
+                            Files.move(oldDirectory.toPath(), newDirectory.toPath(), StandardCopyOption.REPLACE_EXISTING);
+                            LOGGER.info(() -> "migrated " + oldDirectory + " to " + newDirectory);
+                        }
+                    } catch (Exception x) {
+                        LOGGER.log(Level.WARNING, "failed to migrate " + xml, x);
+                    }
+                }
+            }
             reload();
         } catch (IOException e) {
             LOGGER.log(Level.SEVERE, "Failed to perform rekey operation.", e);
@@ -642,15 +753,16 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     /**
      * Returns the user name.
      */
-    public @Nonnull String getDisplayName() {
+    @Override
+    public @NonNull String getDisplayName() {
         return getFullName();
     }
 
     /**
-     * true if {@link AbstractBuild#hasParticipant} or {@link hudson.model.Cause.UserIdCause}
+     * true if {@link RunWithSCM#hasParticipant} or {@link hudson.model.Cause.UserIdCause}
      */
-    private boolean relatedTo(@Nonnull AbstractBuild<?, ?> b) {
-        if (b.hasParticipant(this)) {
+    private boolean relatedTo(@NonNull Run<?, ?> b) {
+        if (b instanceof RunWithSCM && ((RunWithSCM) b).hasParticipant(this)) {
             return true;
         }
         for (Cause cause : b.getCauses()) {
@@ -665,14 +777,13 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     }
 
     /**
-     * Gets the list of {@link Build}s that include changes by this user,
-     * by the timestamp order.
+     * Searches for builds which include changes by this user or which were triggered by this user.
      */
     @SuppressWarnings("unchecked")
     @WithBridgeMethods(List.class)
-    public @Nonnull RunList getBuilds() {
+    public @NonNull RunList getBuilds() {
         return RunList.fromJobs((Iterable) Jenkins.get().
-                allItems(Job.class)).filter((Predicate<Run<?, ?>>) r -> r instanceof AbstractBuild && relatedTo((AbstractBuild<?, ?>) r));
+                allItems(Job.class)).filter((Predicate<Run<?, ?>>) this::relatedTo);
     }
 
     /**
@@ -680,53 +791,44 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      *
      * @since 1.191
      */
-    public @Nonnull Set<AbstractProject<?, ?>> getProjects() {
+    public @NonNull Set<AbstractProject<?, ?>> getProjects() {
         Set<AbstractProject<?, ?>> r = new HashSet<>();
-        for (AbstractProject<?, ?> p : Jenkins.get().allItems(AbstractProject.class))
-            if (p.hasParticipant(this))
-                r.add(p);
+        for (AbstractProject<?, ?> p : Jenkins.get().allItems(AbstractProject.class, p -> p.hasParticipant(this)))
+            r.add(p);
         return r;
     }
 
-    public @Override String toString() {
-        return fullName;
+    @Override
+    public String toString() {
+        return id;
     }
 
     /**
      * Called by tests in the JTH. Otherwise this shouldn't be called.
      * Even in the tests this usage is questionable.
+     * @deprecated removed without replacement
      */
     @Deprecated
     public static void clear() {
         if (ExtensionList.lookup(AllUsers.class).isEmpty()) {
             return;
         }
-        UserIdMapper.getInstance().clear();
         AllUsers.clear();
     }
 
-    private static File getConfigFileFor(String id) {
-        return new File(getUserFolderFor(id), "config.xml");
-    }
-    
-    private static File getUserFolderFor(String id){
-        return new File(getRootDir(), idStrategy().filenameOf(id));
-    }
     /**
      * Returns the folder that store all the user information.
      * Useful for plugins to save a user-specific file aside the config.xml.
      * Exposes implementation details that may be subject to change.
-     * 
+     *
      * @return The folder containing the user configuration files or {@code null} if the user was not yet saved.
      *
      * @since 2.129
      */
-    public @CheckForNull File getUserFolder() {
-        return getExistingUserFolder();
-    }
 
-    private @CheckForNull File getExistingUserFolder() {
-        return UserIdMapper.getInstance().getDirectory(id);
+    public @CheckForNull File getUserFolder() {
+        var d = getUserFolderFor(id);
+        return d.isDirectory() ? d : null;
     }
 
     /**
@@ -734,6 +836,21 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      */
     static File getRootDir() {
         return new File(Jenkins.get().getRootDir(), "users");
+    }
+
+    private static final int PREFIX_MAX = 14;
+    private static final Pattern DISALLOWED_PREFIX_CHARS = Pattern.compile("[^A-Za-z0-9]");
+    static final Pattern HASHED_DIRNAMES = Pattern.compile("[a-z0-9]{0," + PREFIX_MAX + "}_[a-f0-9]{64}");
+    private static final HMACConfidentialKey DIRNAMES = new HMACConfidentialKey(User.class, "DIRNAMES");
+
+    private static String getUserFolderNameFor(String id) {
+        var fullPrefix = DISALLOWED_PREFIX_CHARS.matcher(id).replaceAll("").toLowerCase(Locale.ROOT);
+        return (fullPrefix.length() > PREFIX_MAX ? fullPrefix.substring(0, PREFIX_MAX) : fullPrefix) + '_' + DIRNAMES.mac(idStrategy().keyFor(id));
+    }
+
+    @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "sanitized")
+    static File getUserFolderFor(String id) {
+        return new File(getRootDir(), getUserFolderNameFor(id));
     }
 
     /**
@@ -750,7 +867,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @since 1.600
      */
     public static boolean isIdOrFullnameAllowed(@CheckForNull String id) {
-        if (StringUtils.isBlank(id)) {
+        if (id == null || id.isBlank()) {
             return false;
         }
         final String trimmedId = id.trim();
@@ -764,6 +881,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     /**
      * Save the user configuration.
      */
+    @Override
     public synchronized void save() throws IOException {
         if (!isIdOrFullnameAllowed(id)) {
             throw FormValidation.error(Messages.User_IllegalUsername(id));
@@ -774,17 +892,9 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         if (BulkChange.contains(this)) {
             return;
         }
-        XmlFile xmlFile = new XmlFile(XSTREAM, constructUserConfigFile());
+        XmlFile xmlFile = getConfigFile();
         xmlFile.write(this);
         SaveableListener.fireOnChange(this, xmlFile);
-    }
-
-    private File constructUserConfigFile() throws IOException {
-        return new File(putUserFolderIfAbsent(), CONFIG_XML);
-    }
-
-    private File putUserFolderIfAbsent() throws IOException {
-        return UserIdMapper.getInstance().putIfAbsent(id, true);
     }
 
     /**
@@ -794,17 +904,9 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      */
     public void delete() throws IOException {
         String idKey = idStrategy().keyFor(id);
-        File existingUserFolder = getExistingUserFolder();
-        UserIdMapper.getInstance().remove(id);
         AllUsers.remove(id);
-        deleteExistingUserFolder(existingUserFolder);
+        Util.deleteRecursive(getUserFolderFor(id));
         UserDetailsCache.get().invalidate(idKey);
-    }
-
-    private void deleteExistingUserFolder(File existingUserFolder) throws IOException {
-        if (existingUserFolder != null && existingUserFolder.exists()) {
-            Util.deleteRecursive(existingUserFolder);
-        }
     }
 
     /**
@@ -815,53 +917,12 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     }
 
     /**
-     * Accepts submission from the configuration page.
-     */
-    @POST
-    public void doConfigSubmit(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException, FormException {
-        checkPermission(Jenkins.ADMINISTER);
-
-        JSONObject json = req.getSubmittedForm();
-        String oldFullName = this.fullName;
-        fullName = json.getString("fullName");
-        description = json.getString("description");
-
-        List<UserProperty> props = new ArrayList<>();
-        int i = 0;
-        for (UserPropertyDescriptor d : UserProperty.all()) {
-            UserProperty p = getProperty(d.clazz);
-
-            JSONObject o = json.optJSONObject("userProperty" + (i++));
-            if (o != null) {
-                if (p != null) {
-                    p = p.reconfigure(req, o);
-                } else {
-                    p = d.newInstance(req, o);
-                }
-                p.setUser(this);
-            }
-
-            if (p != null)
-                props.add(p);
-        }
-        this.properties = props;
-
-        save();
-
-        if (oldFullName != null && !oldFullName.equals(this.fullName)) {
-            UserDetailsCache.get().invalidate(oldFullName);
-        }
-
-        FormApply.success(".").generateResponse(req, rsp, this);
-    }
-
-    /**
      * Deletes this user from Hudson.
      */
     @RequirePOST
-    public void doDoDelete(StaplerRequest req, StaplerResponse rsp) throws IOException {
+    public void doDoDelete(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
         checkPermission(Jenkins.ADMINISTER);
-        if (idStrategy().equals(id, Jenkins.getAuthentication().getName())) {
+        if (idStrategy().equals(id, Jenkins.getAuthentication2().getName())) {
             rsp.sendError(HttpServletResponse.SC_BAD_REQUEST, "Cannot delete self");
             return;
         }
@@ -871,18 +932,18 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         rsp.sendRedirect2("../..");
     }
 
-    public void doRssAll(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
-        rss(req, rsp, " all builds", getBuilds(), Run.FEED_ADAPTER);
+    public void doRssAll(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (all builds)", getUrl(), getBuilds().newBuilds());
     }
 
-    public void doRssFailed(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
-        rss(req, rsp, " regression builds", getBuilds().regressionOnly(), Run.FEED_ADAPTER);
+    public void doRssFailed(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (failed builds)", getUrl(), getBuilds().regressionOnly());
     }
 
-    public void doRssLatest(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
+    public void doRssLatest(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException, ServletException {
         final List<Run> lastBuilds = new ArrayList<>();
-        for (AbstractProject<?, ?> p : Jenkins.get().allItems(AbstractProject.class)) {
-            for (AbstractBuild<?, ?> b = p.getLastBuild(); b != null; b = b.getPreviousBuild()) {
+        for (Job<?, ?> p : Jenkins.get().allItems(Job.class)) {
+            for (Run<?, ?> b = p.getLastBuild(); b != null; b = b.getPreviousBuild()) {
                 if (relatedTo(b)) {
                     lastBuilds.add(b);
                     break;
@@ -892,21 +953,16 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         // historically these have been reported sorted by project name, we switched to the lazy iteration
         // so we only have to sort the sublist of runs rather than the full list of irrelevant projects
         lastBuilds.sort((o1, o2) -> Items.BY_FULL_NAME.compare(o1.getParent(), o2.getParent()));
-        rss(req, rsp, " latest build", RunList.fromRuns(lastBuilds), Run.FEED_ADAPTER_LATEST);
-    }
-
-    private void rss(StaplerRequest req, StaplerResponse rsp, String suffix, RunList runs, FeedAdapter adapter)
-            throws IOException, ServletException {
-        RSS.forwardToRss(getDisplayName() + suffix, getUrl(), runs.newBuilds(), adapter, req, rsp);
+        RSS.rss(req, rsp, "Jenkins:" + getDisplayName() + " (latest builds)", getUrl(), RunList.fromRuns(lastBuilds), Run.FEED_ADAPTER_LATEST);
     }
 
     @Override
-    @Nonnull
+    @NonNull
     public ACL getACL() {
         ACL base = Jenkins.get().getAuthorizationStrategy().getACL(this);
         // always allow a non-anonymous user full control of himself.
-        return ACL.lambda((a, permission) -> (idStrategy().equals(a.getName(), id) && !(a instanceof AnonymousAuthenticationToken))
-                || base.hasPermission(a, permission));
+        return ACL.lambda2((a, permission) -> (idStrategy().equals(a.getName(), id) && !(a instanceof AnonymousAuthenticationToken))
+                || base.hasPermission2(a, permission));
     }
 
     /**
@@ -914,32 +970,32 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      */
     public boolean canDelete() {
         final IdStrategy strategy = idStrategy();
-        return hasPermission(Jenkins.ADMINISTER) && !strategy.equals(id, Jenkins.getAuthentication().getName())
-                && UserIdMapper.getInstance().isMapped(id);
+        return hasPermission(Jenkins.ADMINISTER) && !strategy.equals(id, Jenkins.getAuthentication2().getName())
+                && getUserFolder() != null;
     }
 
     /**
      * Checks for authorities (groups) associated with this user.
      * If the caller lacks {@link Jenkins#ADMINISTER}, or any problems arise, returns an empty list.
-     * {@link SecurityRealm#AUTHENTICATED_AUTHORITY} and the username, if present, are omitted.
+     * {@link SecurityRealm#AUTHENTICATED_AUTHORITY2} and the username, if present, are omitted.
      *
      * @return a possibly empty list
      * @since 1.498
      */
-    public @Nonnull List<String> getAuthorities() {
+    public @NonNull List<String> getAuthorities() {
         if (!Jenkins.get().hasPermission(Jenkins.ADMINISTER)) {
             return Collections.emptyList();
         }
         List<String> r = new ArrayList<>();
         Authentication authentication;
         try {
-            authentication = impersonate();
+            authentication = impersonate2();
         } catch (UsernameNotFoundException x) {
             LOGGER.log(Level.FINE, "cannot look up authorities for " + id, x);
             return Collections.emptyList();
         }
         for (GrantedAuthority a : authentication.getAuthorities()) {
-            if (a.equals(SecurityRealm.AUTHENTICATED_AUTHORITY)) {
+            if (a.equals(SecurityRealm.AUTHENTICATED_AUTHORITY2)) {
                 continue;
             }
             String n = a.getAuthority();
@@ -991,7 +1047,8 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         return Collections.unmodifiableList(actions);
     }
 
-    public ContextMenu doContextMenu(StaplerRequest request, StaplerResponse response) throws Exception {
+    @Override
+    public ContextMenu doContextMenu(StaplerRequest2 request, StaplerResponse2 response) throws Exception {
         return new ContextMenu().from(this, request, response);
     }
 
@@ -1029,6 +1086,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         }
 
         private Object readResolve() {
+            // Will generally only work if called after UserIdMapper.init:
             return getById(id, false);
         }
     }
@@ -1040,14 +1098,68 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
     @Restricted(NoExternalUse.class)
     public static final class AllUsers {
 
+        private boolean migratedUserIdMapper;
         private final ConcurrentMap<String, User> byName = new ConcurrentHashMap<>();
 
-        @Initializer(after = InitMilestone.JOB_LOADED)
-        public static void scanAll() {
-            for (String userId : UserIdMapper.getInstance().getConvertedUserIds()) {
-                User user = new User(userId, userId);
-                getInstance().byName.putIfAbsent(idStrategy().keyFor(userId), user);
+        @SuppressWarnings("deprecation")
+        synchronized void migrateUserIdMapper() {
+            if (!migratedUserIdMapper) {
+                try {
+                    UserIdMapper.migrate();
+                } catch (IOException x) {
+                    LOGGER.log(Level.WARNING, null, x);
+                }
+                migratedUserIdMapper = true;
             }
+        }
+
+        @Initializer(after = InitMilestone.JOB_CONFIG_ADAPTED)
+        public static void scanAll() throws IOException {
+            DIRNAMES.createMac(); // force the key to be saved during startup
+            var instance = getInstance();
+            instance.migrateUserIdMapper();
+            var subdirectories = getRootDir().listFiles();
+            if (subdirectories == null) {
+                return;
+            }
+            var byName = instance.byName;
+            var idStrategy = idStrategy();
+            for (var dir : subdirectories) {
+                var dirName = dir.getName();
+                if (!HASHED_DIRNAMES.matcher(dirName).matches()) {
+                    LOGGER.fine(() -> "ignoring unrecognized dir " + dir);
+                    continue;
+                }
+                var xml = new XmlFile(XSTREAM, new File(dir, CONFIG_XML));
+                if (!xml.exists()) {
+                    LOGGER.fine(() -> "ignoring dir " + dir + " with no " + CONFIG_XML);
+                    continue;
+                }
+                var user = new User();
+                try {
+                    xml.unmarshal(user);
+                } catch (Exception x) {
+                    LOGGER.log(Level.WARNING, "failed to load " + xml, x);
+                    continue;
+                }
+                if (user.id == null) {
+                    LOGGER.warning(() -> "ignoring " + xml + " with no <id>");
+                    continue;
+                }
+                var expectedFolderName = getUserFolderNameFor(user.id);
+                if (!dirName.equals(expectedFolderName)) {
+                    LOGGER.warning(() -> "ignoring " + xml + " with <id> " + user.id + " expected to be in " + expectedFolderName);
+                    continue;
+                }
+                user.fixUpAfterLoad();
+                var old = byName.put(idStrategy.keyFor(user.id), user);
+                if (old != null) {
+                    LOGGER.warning(() -> "entry for " + user.id + " in " + dir + " duplicates one seen earlier for " + old.id);
+                } else {
+                    LOGGER.fine(() -> "successfully loaded " + user.id + " from " + xml);
+                }
+            }
+            LOGGER.fine(() -> "loaded " + byName.size() + " entries");
         }
 
         /**
@@ -1060,7 +1172,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
             return ExtensionList.lookupSingleton(AllUsers.class);
         }
 
-        private static void reload() {
+        private static void reload() throws IOException {
             getInstance().byName.clear();
             UserDetailsCache.get().invalidateAll();
             scanAll();
@@ -1097,7 +1209,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
      * @see FullNameIdResolver
      * @since 1.479
      */
-    public static abstract class CanonicalIdResolver extends AbstractDescribableImpl<CanonicalIdResolver> implements ExtensionPoint, Comparable<CanonicalIdResolver> {
+    public abstract static class CanonicalIdResolver implements Describable<CanonicalIdResolver>, ExtensionPoint, Comparable<CanonicalIdResolver> {
 
         /**
          * context key for realm (domain) where idOrFullName has been retrieved from.
@@ -1107,7 +1219,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
         public static final String REALM = "realm";
 
         @Override
-        public int compareTo(@Nonnull CanonicalIdResolver o) {
+        public int compareTo(@NonNull CanonicalIdResolver o) {
             // reverse priority order
             return Integer.compare(o.getPriority(), getPriority());
         }
@@ -1154,7 +1266,7 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
          * @since 2.93
          */
         @CheckForNull
-        public static String resolve(@Nonnull String idOrFullName, @Nonnull Map<String, ?> context) {
+        public static String resolve(@NonNull String idOrFullName, @NonNull Map<String, ?> context) {
             for (CanonicalIdResolver resolver : CanonicalIdResolver.all()) {
                 String id = resolver.resolveCanonicalId(idOrFullName, context);
                 if (id != null) {
@@ -1218,8 +1330,8 @@ public class User extends AbstractModelObject implements AccessControlled, Descr
                         UserDetails userDetails = UserDetailsCache.get().loadUserByUsername(idOrFullName);
                         return userDetails.getUsername();
                     } catch (UsernameNotFoundException x) {
-                        LOGGER.log(Level.FINE, "not sure whether " + idOrFullName + " is a valid username or not", x);
-                    } catch (DataAccessException | ExecutionException x) {
+                        LOGGER.log(Level.FINER, "not sure whether " + idOrFullName + " is a valid username or not", x);
+                    } catch (ExecutionException x) {
                         LOGGER.log(Level.FINE, "could not look up " + idOrFullName, x);
                     } finally {
                         resolving.set(false);
