@@ -24,26 +24,29 @@
 
 package hudson.model;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.is;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import edu.umd.cs.findbugs.annotations.NonNull;
 import java.util.ArrayList;
 import java.util.Arrays;
-
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.*;
-
 import java.util.Collections;
 import java.util.List;
-
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 
-public class ActionableTest {
+class ActionableTest {
 
-    private Actionable thing = new ActionableImpl();
+    private final Actionable thing = new ActionableImpl();
 
     @SuppressWarnings("deprecation")
     @Test
-    public void replaceAction() {
+    void replaceAction() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         thing.addAction(a1);
@@ -66,46 +69,47 @@ public class ActionableTest {
             return "morenope";
         }
 
+        @SuppressWarnings("deprecation")
         @Override
+        @NonNull
         public List<Action> getActions() {
             return specialActions;
         }
     }
 
-    @SuppressWarnings("deprecation")
     @Issue("JENKINS-39555")
     @Test
-    public void testExtensionOverrides() throws Exception {
+    void testExtensionOverrides() {
         ActionableOverride myOverridden = new ActionableOverride();
         InvisibleAction invis = new InvisibleAction() {
         };
         myOverridden.addAction(invis);
-        Assert.assertArrayEquals(new Object[]{invis}, myOverridden.specialActions.toArray());
-        Assert.assertArrayEquals(new Object[]{invis}, myOverridden.getActions().toArray());
+        assertArrayEquals(new Object[]{invis}, myOverridden.specialActions.toArray());
+        assertArrayEquals(new Object[]{invis}, myOverridden.getActions().toArray());
 
         myOverridden.getActions().remove(invis);
-        Assert.assertArrayEquals(new Object[]{}, myOverridden.specialActions.toArray());
-        Assert.assertArrayEquals(new Object[]{}, myOverridden.getActions().toArray());
+        assertArrayEquals(new Object[]{}, myOverridden.specialActions.toArray());
+        assertArrayEquals(new Object[]{}, myOverridden.getActions().toArray());
 
         myOverridden.addAction(invis);
         myOverridden.removeAction(invis);
-        Assert.assertArrayEquals(new Object[]{}, myOverridden.specialActions.toArray());
-        Assert.assertArrayEquals(new Object[]{}, myOverridden.getActions().toArray());
+        assertArrayEquals(new Object[]{}, myOverridden.specialActions.toArray());
+        assertArrayEquals(new Object[]{}, myOverridden.getActions().toArray());
 
         InvisibleAction invis2 = new InvisibleAction() {};
         myOverridden.addOrReplaceAction(invis2);
-        Assert.assertArrayEquals(new Object[]{invis2}, myOverridden.specialActions.toArray());
-        Assert.assertArrayEquals(new Object[]{invis2}, myOverridden.getActions().toArray());
+        assertArrayEquals(new Object[]{invis2}, myOverridden.specialActions.toArray());
+        assertArrayEquals(new Object[]{invis2}, myOverridden.getActions().toArray());
 
         myOverridden.addOrReplaceAction(invis);
         myOverridden.addOrReplaceAction(invis);
-        Assert.assertArrayEquals(new Object[]{invis2, invis}, myOverridden.specialActions.toArray());
-        Assert.assertArrayEquals(new Object[]{invis2, invis}, myOverridden.getActions().toArray());
+        assertArrayEquals(new Object[]{invis2, invis}, myOverridden.specialActions.toArray());
+        assertArrayEquals(new Object[]{invis2, invis}, myOverridden.getActions().toArray());
     }
 
     @SuppressWarnings("deprecation")
     @Test
-    public void addOrReplaceAction() {
+    void addOrReplaceAction() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         thing.addAction(a1);
@@ -123,7 +127,7 @@ public class ActionableTest {
 
     @SuppressWarnings("deprecation")
     @Test
-    public void replaceActions() {
+    void replaceActions() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         thing.addAction(a1);
@@ -137,84 +141,88 @@ public class ActionableTest {
 
     @SuppressWarnings("deprecation")
     @Test
-    public void removeAction() {
+    void removeAction() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         thing.addAction(a1);
         thing.addAction(a2);
         assertEquals(Arrays.asList(a1, a2), thing.getActions());
         assertThat(thing.removeAction(a1), is(true));
-        assertEquals(Arrays.asList(a2), thing.getActions());
+        assertEquals(List.of(a2), thing.getActions());
         assertThat(thing.removeAction(a1), is(false));
-        assertEquals(Arrays.asList(a2), thing.getActions());
+        assertEquals(List.of(a2), thing.getActions());
         assertThat(thing.removeAction(null), is(false));
-        assertEquals(Arrays.asList(a2), thing.getActions());
+        assertEquals(List.of(a2), thing.getActions());
     }
 
     @SuppressWarnings("deprecation")
     @Test
-    public void removeActions() {
+    void removeActions() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         thing.addAction(a1);
         thing.addAction(a2);
         assertEquals(Arrays.asList(a1, a2), thing.getActions());
         assertThat(thing.removeActions(CauseAction.class), is(true));
-        assertEquals(Arrays.asList(a2), thing.getActions());
+        assertEquals(List.of(a2), thing.getActions());
         assertThat(thing.removeActions(CauseAction.class), is(false));
-        assertEquals(Arrays.asList(a2), thing.getActions());
+        assertEquals(List.of(a2), thing.getActions());
     }
 
     @SuppressWarnings("deprecation")
     @Test
-    public void addAction() {
+    void addAction() {
         CauseAction a1 = new CauseAction();
         ParametersAction a2 = new ParametersAction();
         assertEquals(Collections.<Action>emptyList(), thing.getActions());
         thing.addAction(a1);
-        assertEquals(Collections.singletonList(a1), thing.getActions());
+        assertEquals(List.of(a1), thing.getActions());
         thing.addAction(a2);
         assertEquals(Arrays.asList(a1, a2), thing.getActions());
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void addAction_null() {
-        thing.addAction(null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void replaceAction_null() {
-        thing.replaceAction(null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void replaceActions_null() {
-        thing.replaceActions(CauseAction.class, null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void replaceActions_null_null() {
-        thing.replaceActions(null, null);
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void addOrReplaceAction_null() {
-        thing.addOrReplaceAction(null);
+    @Test
+    void addAction_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.addAction(null));
     }
 
     @Test
-    public void removeAction_null() {
+    void replaceAction_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.replaceAction(null));
+    }
+
+    @Test
+    void replaceActions_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.replaceActions(CauseAction.class, null));
+    }
+
+    @Test
+    void replaceActions_null_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.replaceActions(null, null));
+    }
+
+    @Test
+    void addOrReplaceAction_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.addOrReplaceAction(null));
+    }
+
+    @Test
+    void removeAction_null() {
         assertFalse(thing.removeAction(null));
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void removeActions_null() {
-        thing.removeActions(null);
+    @Test
+    void removeActions_null() {
+        assertThrows(IllegalArgumentException.class, () -> thing.removeActions(null));
     }
 
     private static class ActionableImpl extends Actionable {
-        @Override public String getDisplayName() {return  null;}
+        @Override public String getDisplayName() {
+            return null;
+        }
 
-        @Override public String getSearchUrl() {return null;}
+        @Override public String getSearchUrl() {
+            return null;
+        }
     }
 }
