@@ -24,6 +24,9 @@
 
 package hudson.diagnosis;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import hudson.XmlFile;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
@@ -33,101 +36,96 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.util.Collections;
-import java.util.concurrent.Callable;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import jenkins.model.lazy.BuildReference;
-import static org.junit.Assert.*;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MemoryAssert;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 import org.kohsuke.stapler.Stapler;
 
-public class OldDataMonitorTest {
+@WithJenkins
+class OldDataMonitorTest {
 
     static {
         // To make memory run faster:
         System.setProperty(BuildReference.DefaultHolderFactory.MODE_PROPERTY, "weak");
     }
 
-    @Rule public JenkinsRule r = new JenkinsRule();
+    private JenkinsRule r;
 
-    @Ignore("constantly failing on CI builders, makes problems for memory()")
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        r = rule;
+    }
+
+    @Disabled("constantly failing on CI builders, makes problems for memory()")
     @Issue("JENKINS-19544")
     @LocalData
-    @Test public void robustness() throws Exception {
+    @Test
+    void robustness() {
         OldDataMonitor odm = OldDataMonitor.get(r.jenkins);
         FreeStyleProject p = r.jenkins.getItemByFullName("busted", FreeStyleProject.class);
         assertNotNull(p);
-        /*
-        System.err.println(p.getActions());
-        for (Map.Entry<Saveable,OldDataMonitor.VersionRange> entry : odm.getData().entrySet()) {
-            System.err.println(entry.getKey());
-            System.err.println(entry.getValue());
-            System.err.println(entry.getValue().extra);
-        }
-        */
-        assertEquals(Collections.singleton(p), odm.getData().keySet());
+        assertEquals(Set.of(p), odm.getData().keySet());
         odm.doDiscard(null, null);
         assertEquals(Collections.emptySet(), odm.getData().keySet());
         // did not manage to save p, but at least we are not holding onto a reference to it anymore
     }
 
     @Issue("JENKINS-19544")
-    @Test public void memory() throws Exception {
+    @Test
+    void memory() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject("p");
-        FreeStyleBuild b = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        FreeStyleBuild b = r.buildAndAssertSuccess(p);
         b.addAction(new BadAction2());
         b.save();
         r.jenkins.getQueue().clearLeftItems();
         p._getRuns().purgeCache();
         b = p.getBuildByNumber(1);
-        assertEquals(Collections.singleton(b), OldDataMonitor.get(r.jenkins).getData().keySet());
-        WeakReference<?> ref = new WeakReference<Object>(b);
+        assertEquals(Set.of(b), OldDataMonitor.get(r.jenkins).getData().keySet());
+        WeakReference<?> ref = new WeakReference<>(b);
         b = null;
-        MemoryAssert.assertGC(ref);
+        MemoryAssert.assertGC(ref, true);
     }
 
     /**
      * Note that this doesn't actually run slowly, it just ensures that
-     * the {@link OldDataMonitor#changeListener's onChange()} can complete
-     * while {@link OldDataMonitor#doDiscard(org.kohsuke.stapler.StaplerRequest, org.kohsuke.stapler.StaplerResponse)}
+     * the {@link OldDataMonitor#changeListener}'s {@code onChange()} can complete
+     * while {@link OldDataMonitor#doDiscard(org.kohsuke.stapler.StaplerRequest2, org.kohsuke.stapler.StaplerResponse2)}
      * is still running.
      *
      */
     // Test timeout indicates JENKINS-24763 exists
     @Issue("JENKINS-24763")
-    @Test public void slowDiscard() throws InterruptedException, IOException, ExecutionException {
+    @Test
+    void slowDiscard() throws InterruptedException, IOException, ExecutionException {
         final OldDataMonitor oldDataMonitor = OldDataMonitor.get(r.jenkins);
-        final CountDownLatch ensureEntry= new CountDownLatch(1);
+        final CountDownLatch ensureEntry = new CountDownLatch(1);
         final CountDownLatch preventExit = new CountDownLatch(1);
-        Saveable slowSavable = new Saveable() {
-            @Override
-            public void save() throws IOException {
-                try {
-                    ensureEntry.countDown();
-                    preventExit.await();
-                } catch (InterruptedException e) {
-                }
+        Saveable slowSavable = () -> {
+            try {
+                ensureEntry.countDown();
+                preventExit.await();
+            } catch (InterruptedException e) {
             }
         };
 
-        OldDataMonitor.report(slowSavable,(String)null);
+        OldDataMonitor.report(slowSavable, (String) null);
         ExecutorService executors = Executors.newSingleThreadExecutor();
 
-        Future<Void> discardFuture = executors.submit(new Callable<Void>() {
-            @Override
-            public Void call() throws Exception {
-                oldDataMonitor.doDiscard(Stapler.getCurrentRequest(), Stapler.getCurrentResponse());
-                return null;
-            }
+        Future<Void> discardFuture = executors.submit(() -> {
+            oldDataMonitor.doDiscard(Stapler.getCurrentRequest2(), Stapler.getCurrentResponse2());
+            return null;
         });
 
         ensureEntry.await();
@@ -135,7 +133,7 @@ public class OldDataMonitorTest {
         File xml = File.createTempFile("OldDataMonitorTest.slowDiscard", "xml");
         xml.deleteOnExit();
         OldDataMonitor.changeListener
-                .onChange(new Saveable() {public void save() throws IOException {}},
+                .onChange(() -> {},
                         new XmlFile(xml));
 
         preventExit.countDown();
@@ -144,14 +142,15 @@ public class OldDataMonitorTest {
     }
 
     @Issue("JENKINS-26718")
-    @Test public void unlocatableRun() throws Exception {
+    @Test
+    void unlocatableRun() throws Exception {
         OldDataMonitor odm = OldDataMonitor.get(r.jenkins);
         FreeStyleProject p = r.createFreeStyleProject();
         FreeStyleBuild build = r.buildAndAssertSuccess(p);
         p.delete();
         OldDataMonitor.report(build, (String) null);
 
-        assertEquals(Collections.singleton(build), odm.getData().keySet());
+        assertEquals(Set.of(build), odm.getData().keySet());
         odm.doDiscard(null, null);
         assertEquals(Collections.emptySet(), odm.getData().keySet());
 
