@@ -21,32 +21,39 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
-import java.net.URL;
-
-
-import com.gargoylesoftware.htmlunit.WebRequest;
+import java.net.URI;
 import org.hamcrest.Matchers;
-import org.junit.Rule;
-import org.junit.Test;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.WebResponse;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.JenkinsRule.WebClient;
 import org.jvnet.hudson.test.MockFolder;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebResponse;
+@WithJenkins
+class DirectlyModifiableViewTest {
 
-public class DirectlyModifiableViewTest {
+    private JenkinsRule j;
 
-    @Rule public JenkinsRule j = new JenkinsRule();
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Test
-    public void manipulateViewContent() throws IOException {
+    void manipulateViewContent() throws IOException {
         FreeStyleProject projectA = j.createFreeStyleProject("projectA");
         FreeStyleProject projectB = j.createFreeStyleProject("projectB");
 
@@ -76,7 +83,7 @@ public class DirectlyModifiableViewTest {
     }
 
     @Test
-    public void doAddJobToView() throws Exception {
+    void doAddJobToView() throws Exception {
         FreeStyleProject project = j.createFreeStyleProject("a_project");
         ListView view = new ListView("a_view", j.jenkins);
         j.jenkins.addView(view);
@@ -93,7 +100,7 @@ public class DirectlyModifiableViewTest {
     }
 
     @Test
-    public void doAddNestedJobToRecursiveView() throws Exception {
+    void doAddNestedJobToRecursiveView() throws Exception {
         ListView view = new ListView("a_view", j.jenkins);
         view.setRecurse(true);
         j.jenkins.addView(view);
@@ -138,7 +145,7 @@ public class DirectlyModifiableViewTest {
     }
 
     @Test
-    public void doRemoveJobFromView() throws Exception {
+    void doRemoveJobFromView() throws Exception {
         FreeStyleProject project = j.createFreeStyleProject("a_project");
         ListView view = new ListView("a_view", j.jenkins);
         j.jenkins.addView(view);
@@ -156,7 +163,7 @@ public class DirectlyModifiableViewTest {
     }
 
     @Test
-    public void failWebMethodForIllegalRequest() throws Exception {
+    void failWebMethodForIllegalRequest() throws Exception {
         ListView view = new ListView("a_view", j.jenkins);
         j.jenkins.addView(view);
 
@@ -177,7 +184,8 @@ public class DirectlyModifiableViewTest {
         ListView folderView = new ListView("folder_view", folder);
         folder.addView(folderView);
 
-        assertBadStatus( // Item is scoped to different ItemGroup
+        // Item is scoped to different ItemGroup
+        assertBadStatus(
                 doPost(folderView, "addJobToView?name=top_project"),
                 "Query parameter 'name' does not correspond to a known item"
         );
@@ -187,7 +195,7 @@ public class DirectlyModifiableViewTest {
         WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
         WebRequest req = new WebRequest(
-                new URL(j.jenkins.getRootUrl() + view.getUrl() + path),
+                new URI(j.jenkins.getRootUrl() + view.getUrl() + path).toURL(),
                 HttpMethod.POST
         );
 
@@ -196,7 +204,7 @@ public class DirectlyModifiableViewTest {
 
     private void assertBadStatus(Page page, String message) {
         WebResponse rsp = page.getWebResponse();
-        assertFalse("Status: " + rsp.getStatusCode(), j.isGoodHttpStatus(rsp.getStatusCode()));
+        assertFalse(j.isGoodHttpStatus(rsp.getStatusCode()), "Status: " + rsp.getStatusCode());
         assertThat(rsp.getContentAsString(), Matchers.containsString(message));
     }
 }
