@@ -1,39 +1,43 @@
 package hudson.model;
 
-import hudson.model.FreeStyleBuild;
-import hudson.model.FreeStyleProject;
-import hudson.model.Result;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import hudson.model.utils.AbortExceptionPublisher;
 import hudson.model.utils.IOExceptionPublisher;
 import hudson.model.utils.ResultWriterPublisher;
 import hudson.model.utils.TrueFalsePublisher;
 import hudson.tasks.ArtifactArchiver;
-import org.apache.commons.io.FileUtils;
-import org.junit.Rule;
-import org.junit.Test;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import java.io.File;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * Freestyle publishers statuses tests
  *
  * @author Kanstantsin Shautsou
  */
-public class FreestyleJobPublisherTest {
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+@WithJenkins
+class FreestyleJobPublisherTest {
+
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     /**
      * Execute all publishers even one of publishers return false.
      */
     @Issue("JENKINS-26964")
     @Test
-    public void testFreestyleWithFalsePublisher() throws Exception {
+    void testFreestyleWithFalsePublisher() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList().add(new TrueFalsePublisher(true)); // noop
@@ -43,12 +47,10 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
-        assertEquals("Build must fail, because we used FalsePublisher", b.getResult(), Result.FAILURE);
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Publisher, after publisher with return false status, must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue(Files.exists(path), "ArtifactArchiver is executed even prior publisher fails");
+        assertEquals(Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString(), "Publisher, after publisher with return false status, must see FAILURE status");
     }
 
     /**
@@ -56,7 +58,7 @@ public class FreestyleJobPublisherTest {
      */
     @Issue("JENKINS-26964")
     @Test
-    public void testFreestyleWithExceptionPublisher() throws Exception {
+    void testFreestyleWithExceptionPublisher() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList().add(new TrueFalsePublisher(true)); // noop
@@ -66,15 +68,13 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used AbortExceptionPublisher", b.getResult(), Result.FAILURE);
         j.assertLogNotContains("\tat", b); // log must not contain stacktrace
         j.assertLogContains("Threw AbortException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Third publisher must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue(Files.exists(path), "ArtifactArchiver is executed even prior publisher fails");
+        assertEquals(Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString(), "Third publisher must see FAILURE status");
     }
 
     /**
@@ -82,7 +82,7 @@ public class FreestyleJobPublisherTest {
      */
     @Issue("JENKINS-26964")
     @Test
-    public void testFreestyleWithIOExceptionPublisher() throws Exception {
+    void testFreestyleWithIOExceptionPublisher() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
 
         p.getPublishersList().add(new TrueFalsePublisher(true)); // noop
@@ -92,14 +92,12 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used FalsePublisher", b.getResult(), Result.FAILURE);
         j.assertLogContains("\tat hudson.model.utils.IOExceptionPublisher", b); // log must contain stacktrace
         j.assertLogContains("Threw IOException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Third publisher must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue(Files.exists(path), "ArtifactArchiver is executed even prior publisher fails");
+        assertEquals(Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString(), "Third publisher must see FAILURE status");
     }
 }
