@@ -21,35 +21,46 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.DomElement;
-import com.gargoylesoftware.htmlunit.html.DomNode;
-import com.gargoylesoftware.htmlunit.html.HtmlFileInput;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlFormUtil;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
+import static org.awaitility.Awaitility.await;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.everyItem;
+import static org.hamcrest.Matchers.hasProperty;
+import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.lessThan;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.Matchers.oneOf;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.ExtensionList;
 import hudson.Functions;
 import hudson.Launcher;
 import hudson.XmlFile;
-import hudson.matrix.Axis;
 import hudson.matrix.AxisList;
-import hudson.matrix.LabelAxis;
 import hudson.matrix.MatrixBuild;
 import hudson.matrix.MatrixProject;
-import hudson.matrix.MatrixRun;
 import hudson.matrix.TextAxis;
 import hudson.model.Cause.RemoteCause;
 import hudson.model.Cause.UserIdCause;
 import hudson.model.Queue.BlockedItem;
 import hudson.model.Queue.Executable;
 import hudson.model.Queue.WaitingItem;
-import hudson.model.labels.LabelExpression;
 import hudson.model.listeners.SaveableListener;
 import hudson.model.queue.CauseOfBlockage;
 import hudson.model.queue.QueueTaskDispatcher;
@@ -62,57 +73,26 @@ import hudson.security.GlobalMatrixAuthorizationStrategy;
 import hudson.security.Permission;
 import hudson.security.ProjectMatrixAuthorizationStrategy;
 import hudson.security.SparseACL;
+import hudson.slaves.ComputerLauncher;
 import hudson.slaves.DumbSlave;
-import hudson.slaves.DummyCloudImpl;
-import hudson.slaves.NodeProperty;
-import hudson.slaves.NodePropertyDescriptor;
-import hudson.slaves.NodeProvisionerRule;
 import hudson.slaves.OfflineCause;
+import hudson.slaves.RetentionStrategy;
+import hudson.slaves.SlaveComputer;
 import hudson.tasks.BatchFile;
 import hudson.tasks.BuildTrigger;
 import hudson.tasks.Shell;
 import hudson.triggers.SCMTrigger.SCMTriggerCause;
 import hudson.triggers.TimerTrigger.TimerTriggerCause;
 import hudson.util.OneShotEvent;
-import hudson.util.XStream2;
-import jenkins.model.BlockedBecauseOfBuildInProgress;
-import jenkins.model.Jenkins;
-import jenkins.security.QueueItemAuthenticatorConfiguration;
-import jenkins.security.apitoken.ApiTokenTestHelper;
-import jenkins.triggers.ReverseBuildTrigger;
-import org.acegisecurity.Authentication;
-import org.acegisecurity.GrantedAuthority;
-import org.acegisecurity.acls.sid.PrincipalSid;
-import org.acegisecurity.providers.UsernamePasswordAuthenticationToken;
-import org.apache.commons.fileupload.FileUploadException;
-import org.apache.commons.fileupload.disk.DiskFileItemFactory;
-import org.apache.commons.fileupload.servlet.ServletFileUpload;
-import org.apache.commons.io.FileUtils;
-import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.server.ServerConnector;
-import org.eclipse.jetty.servlet.ServletHandler;
-import org.eclipse.jetty.servlet.ServletHolder;
-import org.junit.Assert;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.Issue;
-import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.MockAuthorizationStrategy;
-import org.jvnet.hudson.test.MockQueueItemAuthenticator;
-import org.jvnet.hudson.test.SequenceLock;
-import org.jvnet.hudson.test.SleepBuilder;
-import org.jvnet.hudson.test.TestBuilder;
-import org.jvnet.hudson.test.TestExtension;
-import org.jvnet.hudson.test.recipes.LocalData;
-
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.ServletException;
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -121,61 +101,93 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CancellationException;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.logging.Level;
-
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.everyItem;
-import static org.hamcrest.Matchers.hasProperty;
-import static org.hamcrest.Matchers.lessThan;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.*;
-import org.junit.Ignore;
-import org.jvnet.hudson.test.LoggerRule;
+import java.util.logging.Logger;
+import jenkins.model.BlockedBecauseOfBuildInProgress;
+import jenkins.model.Jenkins;
+import jenkins.model.queue.QueueIdStrategy;
+import jenkins.security.QueueItemAuthenticatorConfiguration;
+import jenkins.util.Timer;
+import org.acegisecurity.acls.sid.PrincipalSid;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.ScriptResult;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.DomNode;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.xml.XmlPage;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+import org.jvnet.hudson.test.Issue;
+import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.LogRecorder;
+import org.jvnet.hudson.test.MockAuthorizationStrategy;
+import org.jvnet.hudson.test.MockQueueItemAuthenticator;
+import org.jvnet.hudson.test.SequenceLock;
+import org.jvnet.hudson.test.SleepBuilder;
+import org.jvnet.hudson.test.TestBuilder;
+import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
+import org.jvnet.hudson.test.recipes.LocalData;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
 
 /**
  * @author Kohsuke Kawaguchi
  */
+@WithJenkins
 public class QueueTest {
 
-    @Rule public JenkinsRule r = new NodeProvisionerRule(-1, 0, 10);
+    private final LogRecorder logging = new LogRecorder().record(Queue.class, Level.FINE);
 
-    @Rule
-    public LoggerRule logging = new LoggerRule().record(Queue.class, Level.FINE);
+    private JenkinsRule r;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        r = rule;
+    }
 
     /**
      * Checks the persistence of queue.
      */
-    @Test public void persistence() throws Exception {
+    @Test
+    void persistence() throws Exception {
         Queue q = r.jenkins.getQueue();
 
         // prevent execution to push stuff into the queue
         r.jenkins.setNumExecutors(0);
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
         q.save();
 
-        System.out.println(FileUtils.readFileToString(new File(r.jenkins.getRootDir(), "queue.xml")));
+        System.out.println(Files.readString(r.jenkins.getRootDir().toPath().resolve("queue.xml"), StandardCharsets.UTF_8));
 
         assertEquals(1, q.getItems().length);
         q.clear();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // load the contents back
         q.load();
         assertEquals(1, q.getItems().length);
 
         // did it bind back to the same object?
-        assertSame(q.getItems()[0].task,testProject);
+        assertSame(q.getItems()[0].task, testProject);
+
+        // Clear the queue
+        assertTrue(q.cancel(testProject));
     }
 
     /**
@@ -184,7 +196,7 @@ public class QueueTest {
      */
     @LocalData
     @Test
-    public void recover_from_legacy_list() throws Exception {
+    void recover_from_legacy_list() {
         Queue q = r.jenkins.getQueue();
 
         // loaded the legacy queue.xml from test LocalData located in
@@ -193,38 +205,42 @@ public class QueueTest {
 
         // The current counter should be the id from the item brought back
         // from the persisted queue.xml.
-        assertEquals(3, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(3, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("test", FreeStyleProject.class)));
     }
 
     /**
      * Can {@link Queue} successfully recover removal?
      */
-     @Test public void persistence2() throws Exception {
+    @Test
+    void persistence2() throws Exception {
         Queue q = r.jenkins.getQueue();
 
         resetQueueState();
-        assertEquals(0, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(0, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
 
         // prevent execution to push stuff into the queue
         r.jenkins.setNumExecutors(0);
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
         q.save();
 
-        System.out.println(FileUtils.readFileToString(new File(r.jenkins.getRootDir(), "queue.xml")));
+        System.out.println(Files.readString(r.jenkins.getRootDir().toPath().resolve("queue.xml"), StandardCharsets.UTF_8));
 
         assertEquals(1, q.getItems().length);
         q.clear();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // delete the project before loading the queue back
         testProject.delete();
         q.load();
-        assertEquals(0,q.getItems().length);
+        assertEquals(0, q.getItems().length);
 
         // The counter state should be maintained.
-        assertEquals(1, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(1, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
     }
 
     /**
@@ -239,23 +255,24 @@ public class QueueTest {
     }
 
     @Test
-    public void queue_id_to_run_mapping() throws Exception {
+    void queue_id_to_run_mapping() throws Exception {
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        FreeStyleBuild build = r.assertBuildStatusSuccess(testProject.scheduleBuild2(0));
-        Assert.assertNotEquals(Run.QUEUE_ID_UNKNOWN, build.getQueueId());
+        FreeStyleBuild build = r.buildAndAssertSuccess(testProject);
+        assertNotEquals(Run.QUEUE_ID_UNKNOWN, build.getQueueId());
     }
 
     /**
      * {@link hudson.model.Queue.BlockedItem} is not static. Make sure its persistence doesn't end up re-persisting the whole Queue instance.
      */
-    @Test public void persistenceBlockedItem() throws Exception {
+    @Test
+    void persistenceBlockedItem() throws Exception {
         Queue q = r.jenkins.getQueue();
         final SequenceLock seq = new SequenceLock();
 
         FreeStyleProject p = r.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 seq.phase(0);   // first, we let one build going
 
                 seq.phase(2);
@@ -263,75 +280,29 @@ public class QueueTest {
             }
         });
 
-        Future<FreeStyleBuild> b1 = p.scheduleBuild2(0);
+        FreeStyleBuild b1 = p.scheduleBuild2(0).waitForStart();
+        assertNotNull(b1);
         seq.phase(1);   // and make sure we have one build under way
 
         // get another going
         Future<FreeStyleBuild> b2 = p.scheduleBuild2(0);
+        assertNotNull(b2);
 
         q.scheduleMaintenance().get();
         Queue.Item[] items = q.getItems();
-        assertEquals(1,items.length);
-        assertTrue("Got "+items[0], items[0] instanceof BlockedItem);
+        assertEquals(1, items.length);
+        assertThat(items[0], instanceOf(BlockedItem.class));
 
         q.save();
-    }
 
-    public static final class FileItemPersistenceTestServlet extends HttpServlet {
-        private static final long serialVersionUID = 1L;
-        @Override protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-            resp.setContentType("text/html");
-            resp.getWriter().println(
-                    "<html><body><form action='/' method=post name=main enctype='multipart/form-data'>" +
-                    "<input type=file name=test><input type=submit>"+
-                    "</form></body></html>"
-            );
-        }
-
-        @Override protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
-            try {
-                ServletFileUpload f = new ServletFileUpload(new DiskFileItemFactory());
-                List<?> v = f.parseRequest(req);
-                assertEquals(1,v.size());
-                XStream2 xs = new XStream2();
-                System.out.println(xs.toXML(v.get(0)));
-            } catch (FileUploadException e) {
-                throw new ServletException(e);
-            }
-        }
-    }
-
-    @Test public void fileItemPersistence() throws Exception {
-        // TODO: write a synchronous connector?
-        byte[] testData = new byte[1024];
-        for( int i=0; i<testData.length; i++ )  testData[i] = (byte)i;
-
-
-        Server server = new Server();
-        ServerConnector connector = new ServerConnector(server);
-        server.addConnector(connector);
-
-        ServletHandler handler = new ServletHandler();
-        handler.addServletWithMapping(new ServletHolder(new FileItemPersistenceTestServlet()),"/");
-        server.setHandler(handler);
-
-        server.start();
-
-        try {
-            JenkinsRule.WebClient wc = r.createWebClient();
-            @SuppressWarnings("deprecation")
-            HtmlPage p = (HtmlPage) wc.getPage("http://localhost:" + connector.getLocalPort() + '/');
-            HtmlForm f = p.getFormByName("main");
-            HtmlFileInput input = (HtmlFileInput) f.getInputByName("test");
-            input.setData(testData);
-            HtmlFormUtil.submit(f);
-        } finally {
-            server.stop();
-        }
+        assertTrue(q.cancel(items[0]));
+        seq.done();
+        r.assertBuildStatusSuccess(r.waitForCompletion(b1));
     }
 
     @Issue("JENKINS-33467")
-    @Test public void foldableCauseAction() throws Exception {
+    @Test
+    void foldableCauseAction() throws Exception {
         final OneShotEvent buildStarted = new OneShotEvent();
         final OneShotEvent buildShouldComplete = new OneShotEvent();
 
@@ -339,7 +310,8 @@ public class QueueTest {
         FreeStyleProject project = r.createFreeStyleProject();
         // Make build sleep a while so it blocks new builds
         project.getBuildersList().add(new TestBuilder() {
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            @Override
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 buildStarted.signal();
                 buildShouldComplete.block();
                 return true;
@@ -347,22 +319,22 @@ public class QueueTest {
         });
 
         // Start one build to block others
-        assertTrue(project.scheduleBuild(new UserIdCause()));
+        project.scheduleBuild2(0, new UserIdCause()).waitForStart();
         buildStarted.block(); // wait for the build to really start
 
         // Schedule a new build, and trigger it many ways while it sits in queue
-        Future<FreeStyleBuild> fb = project.scheduleBuild2(0, new UserIdCause());
+        final Future<FreeStyleBuild> fb = project.scheduleBuild2(0, new UserIdCause());
         assertNotNull(fb);
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new UserIdCause()));
-        assertTrue(project.scheduleBuild(new TimerTriggerCause()));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "test")));
-        assertTrue(project.scheduleBuild(new RemoteCause("4.3.2.1", "test")));
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "test")));
-        assertTrue(project.scheduleBuild(new RemoteCause("1.2.3.4", "foo")));
-        assertTrue(project.scheduleBuild(new SCMTriggerCause("")));
-        assertTrue(project.scheduleBuild(new TimerTriggerCause()));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new UserIdCause()));
+        assertNotNull(project.scheduleBuild2(0, new TimerTriggerCause()));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "test")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("4.3.2.1", "test")));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "test")));
+        assertNotNull(project.scheduleBuild2(0, new RemoteCause("1.2.3.4", "foo")));
+        assertNotNull(project.scheduleBuild2(0, new SCMTriggerCause("")));
+        assertNotNull(project.scheduleBuild2(0, new TimerTriggerCause()));
 
         // Wait for 2nd build to finish
         buildShouldComplete.signal();
@@ -372,45 +344,52 @@ public class QueueTest {
         CauseAction ca = build.getAction(CauseAction.class);
         assertNotNull(ca);
         StringBuilder causes = new StringBuilder();
-        for (Cause c : ca.getCauses()) causes.append(c.getShortDescription() + "\n");
-        assertEquals("Build causes should have all items, even duplicates",
-                "Started by user SYSTEM\nStarted by user SYSTEM\n"
-                + "Started by an SCM change\nStarted by an SCM change\nStarted by an SCM change\n"
-                + "Started by timer\nStarted by timer\n"
-                + "Started by remote host 1.2.3.4 with note: test\n"
-                + "Started by remote host 1.2.3.4 with note: test\n"
-                + "Started by remote host 4.3.2.1 with note: test\n"
-                + "Started by remote host 1.2.3.4 with note: foo\n",
-                causes.toString());
+        for (Cause c : ca.getCauses()) causes.append(c.getShortDescription()).append("\n");
+        assertEquals("""
+                        Started by user SYSTEM
+                        Started by user SYSTEM
+                        Started by an SCM change
+                        Started by an SCM change
+                        Started by an SCM change
+                        Started by timer
+                        Started by timer
+                        Started by remote host 1.2.3.4 with note: test
+                        Started by remote host 1.2.3.4 with note: test
+                        Started by remote host 4.3.2.1 with note: test
+                        Started by remote host 1.2.3.4 with note: foo
+                        """,
+                causes.toString(),
+                "Build causes should have all items, even duplicates");
 
         // View for build should group duplicates
         JenkinsRule.WebClient wc = r.createWebClient();
-        String nl = System.getProperty("line.separator");
-        String buildPage = wc.getPage(build, "").asText().replace(nl," ");
-        assertTrue("Build page should combine duplicates and show counts: " + buildPage,
-                   buildPage.contains("Started by user SYSTEM (2 times) "
-                        + "Started by an SCM change (3 times) "
-                        + "Started by timer (2 times) "
-                        + "Started by remote host 1.2.3.4 with note: test (2 times) "
-                        + "Started by remote host 4.3.2.1 with note: test "
-                        + "Started by remote host 1.2.3.4 with note: foo"));
+        String buildPage = wc.getPage(build, "").asNormalizedText();
+        assertTrue(buildPage.contains("""
+                        Started by user SYSTEM (2 times)
+                        Started by an SCM change (3 times)
+                        Started by timer (2 times)
+                        Started by remote host 1.2.3.4 with note: test (2 times)
+                        Started by remote host 4.3.2.1 with note: test
+                        Started by remote host 1.2.3.4 with note: foo"""),
+                   "Build page should combine duplicates and show counts: " + buildPage);
         System.out.println(new XmlFile(new File(build.getRootDir(), "build.xml")).asString());
     }
 
     @Issue("JENKINS-8790")
-    @Test public void flyweightTasks() throws Exception {
+    @Test
+    void flyweightTasks() throws Exception {
         MatrixProject m = r.jenkins.createProject(MatrixProject.class, "p");
         m.addProperty(new ParametersDefinitionProperty(
-                new StringParameterDefinition("FOO","value")
+                new StringParameterDefinition("FOO", "value")
         ));
         if (Functions.isWindows()) {
             m.getBuildersList().add(new BatchFile("ping -n 3 127.0.0.1 >nul"));
         } else {
             m.getBuildersList().add(new Shell("sleep 3"));
         }
-        m.setAxes(new AxisList(new TextAxis("DoesntMatter", "aaa","bbb")));
+        m.setAxes(new AxisList(new TextAxis("DoesntMatter", "aaa", "bbb")));
 
-        List<Future<MatrixBuild>> futures = new ArrayList<Future<MatrixBuild>>();
+        List<Future<MatrixBuild>> futures = new ArrayList<>();
 
         for (int i = 0; i < 3; i++) {
             futures.add(m.scheduleBuild2(0, new UserIdCause(), new ParametersAction(new StringParameterValue("FOO", "value" + i))));
@@ -421,31 +400,10 @@ public class QueueTest {
         }
     }
 
-    @Issue("JENKINS-7291")
-    @Test public void flyweightTasksWithoutMasterExecutors() throws Exception {
-        DummyCloudImpl cloud = new DummyCloudImpl(r, 0);
-        cloud.label = r.jenkins.getLabel("remote");
-        r.jenkins.clouds.add(cloud);
-        r.jenkins.setNumExecutors(0);
-        r.jenkins.setNodes(Collections.<Node>emptyList());
-        MatrixProject m = r.jenkins.createProject(MatrixProject.class, "p");
-        m.setAxes(new AxisList(new LabelAxis("label", Arrays.asList("remote"))));
-        MatrixBuild build;
-        try {
-            build = m.scheduleBuild2(0).get(60, TimeUnit.SECONDS);
-        } catch (TimeoutException x) {
-            throw (AssertionError) new AssertionError(r.jenkins.getQueue().getItems().toString()).initCause(x);
-        }
-        r.assertBuildStatusSuccess(build);
-        assertEquals("", build.getBuiltOnStr());
-        List<MatrixRun> runs = build.getRuns();
-        assertEquals(1, runs.size());
-        assertEquals("slave0", runs.get(0).getBuiltOnStr());
-    }
-
     @Issue("JENKINS-10944")
-    @Test public void flyweightTasksBlockedByShutdown() throws Exception {
-        r.jenkins.doQuietDown(true, 0);
+    @Test
+    void flyweightTasksBlockedByShutdown() throws Exception {
+        r.jenkins.doQuietDown(true, 0, null, false);
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task = new TestFlyweightTask(cnt, null);
         assertTrue(Queue.isBlockedByShutdown(task));
@@ -455,11 +413,13 @@ public class QueueTest {
         assertFalse(Queue.isBlockedByShutdown(task));
         r.waitUntilNoActivity();
         assertEquals(1, cnt.get());
-        assert task.exec instanceof OneOffExecutor : task.exec;
+        assertNotNull(task.exec);
+        assertThat(task.exec, instanceOf(OneOffExecutor.class));
     }
 
     @Issue("JENKINS-24519")
-    @Test public void flyweightTasksBlockedBySlave() throws Exception {
+    @Test
+    void flyweightTasksBlockedBySlave() throws Exception {
         Label label = Label.get("myslave");
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task = new TestFlyweightTask(cnt, label);
@@ -468,11 +428,13 @@ public class QueueTest {
         r.createSlave(label);
         r.waitUntilNoActivity();
         assertEquals(1, cnt.get());
-        assert task.exec instanceof OneOffExecutor : task.exec;
+        assertNotNull(task.exec);
+        assertThat(task.exec, instanceOf(OneOffExecutor.class));
     }
 
     @Issue("JENKINS-41127")
-    @Test public void flyweightTasksUnwantedConcurrency() throws Exception {
+    @Test
+    void flyweightTasksUnwantedConcurrency() {
         Label label = r.jenkins.getSelfLabel();
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task1 = new TestFlyweightTask(cnt, label);
@@ -496,8 +458,109 @@ public class QueueTest {
         });
     }
 
+    @Test
+    void tryWithTimeoutSuccessfullyAcquired() throws InterruptedException, ExecutionException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            final CountDownLatch task1Started =  new CountDownLatch(1);
+            final CountDownLatch task1Release = new CountDownLatch(1);
+
+            Future<Void> task1 = executor.submit(Queue.wrapWithLock(() -> {
+                task1Started.countDown();
+                try {
+                    task1Release.await();
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                return null;
+            }));
+
+            // Wait for the first task to be started to ensure it is running and has the lock
+            task1Started.await();
+
+            // Create a task that will need to wait until the first task is complete that will fail to acquire.
+            final AtomicBoolean task2Result = new AtomicBoolean(false);
+            boolean acquired = Queue.tryWithLock(() -> {
+                task2Result.set(true);
+            }, Duration.ofMillis(10));
+            assertFalse(acquired);
+            assertFalse(task2Result.get());
+
+            // Now release the first task and wait (with a long timeout) and we should succeed at getting the lock.
+            final AtomicBoolean task3Result = new AtomicBoolean(false);
+            task1Release.countDown();
+            acquired = Queue.tryWithLock(() -> {
+                task3Result.set(true);
+            }, Duration.ofSeconds(30));
+
+            // First task should complete
+            task1.get();
+
+            // Task 2 should have acquired and completed
+            assertTrue(acquired);
+            assertTrue(task3Result.get());
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
+    @Test
+    void tryWithTimeoutFailedToAcquire() throws InterruptedException, ExecutionException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            // Submit one task that will block indefinitely until released
+            final CountDownLatch task1Started =  new CountDownLatch(1);
+            final CountDownLatch task1Release = new CountDownLatch(1);
+            Future<Void> task1 = executor.submit(Queue.wrapWithLock(() -> {
+                task1Started.countDown();
+                try {
+                    task1Release.await();
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                return null;
+            }));
+
+            // Wait for task 1 to start
+            task1Started.await();
+
+            // Try to acquire lock with 50ms timeout, expecting that it cannot be acquired
+            final AtomicBoolean task2Complete = new AtomicBoolean(false);
+            boolean result = Queue.tryWithLock(() -> {
+                task2Complete.set(true);
+            }, Duration.ofMillis(50));
+
+            // Results should indicate the task did not run
+            assertFalse(result);
+            assertFalse(task2Complete.get());
+
+            // Now release the first task and wait for it to finish
+            task1Release.countDown();
+            task1.get();
+
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
+    @Test
+    void tryWithTimeoutImmediatelyAcquired() throws InterruptedException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            final AtomicBoolean taskComplete = new AtomicBoolean(false);
+            boolean result = Queue.tryWithLock(() -> {
+                taskComplete.set(true);
+            }, Duration.ofMillis(1));
+            assertTrue(result);
+            assertTrue(taskComplete.get());
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
     @Issue("JENKINS-27256")
-    @Test public void inQueueTaskLookupByAPI() throws Exception {
+    @Test
+    void inQueueTaskLookupByAPI() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
         Label label = Label.get("unknown-slave");
 
@@ -505,6 +568,13 @@ public class QueueTest {
         // stay in the queue after we schedule it, allowing us to query it.
         p.setAssignedLabel(label);
         p.scheduleBuild2(0);
+
+        // Wait 3 seconds if job is not already in the queue, reduce test flakes
+        if (!p.isInQueue()) {
+            Thread.sleep(3000);
+        }
+
+        assertTrue(p.isInQueue(), "Build not queued");
 
         JenkinsRule.WebClient webclient = r.createWebClient();
 
@@ -514,12 +584,15 @@ public class QueueTest {
         XmlPage queueItem = webclient.goToXml("queue/item/" + queueTaskId + "/api/xml");
         assertNotNull(queueItem);
         String tagName = queueItem.getDocumentElement().getTagName();
-        assertTrue(tagName.equals("blockedItem") || tagName.equals("buildableItem"));
+        assertThat(tagName, oneOf("blockedItem", "buildableItem"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
-    
+
     @Issue("JENKINS-28926")
     @Test
-    public void upstreamDownstreamCycle() throws Exception {
+    void upstreamDownstreamCycle() throws Exception {
         FreeStyleProject trigger = r.createFreeStyleProject();
         FreeStyleProject chain1 = r.createFreeStyleProject();
         FreeStyleProject chain2a = r.createFreeStyleProject();
@@ -549,25 +622,206 @@ public class QueueTest {
         assertThat("The cycle should have been defanged and chain3 executed", queue.getItem(chain3), nullValue());
     }
 
+
+    @TestExtension({"upstreamProjectsInQueueBlock", "downstreamProjectsInQueueBlock", "handleCauseOfBlockageThatIsNull"})
+    public static class BlockingQueueTaskDispatcher extends QueueTaskDispatcher {
+
+        public static final String NAME_OF_BLOCKED_PROJECT = "blocked project";
+
+        public static final String NAME_OF_ANOTHER_BLOCKED_PROJECT = "another blocked project";
+
+        @Override
+        public CauseOfBlockage canRun(hudson.model.Queue.Item item) {
+            if (item.task.getOwnerTask().getDisplayName().equals(NAME_OF_BLOCKED_PROJECT)) {
+                return new CauseOfBlockage() {
+
+                    @Override
+                    public String getShortDescription() {
+                        return NAME_OF_BLOCKED_PROJECT + " is permanently blocked.";
+                    }
+
+                };
+            }
+            return super.canRun(item);
+        }
+
+    }
+
+    @TestExtension("killAllQueueItems")
+    public static class KillAllItems extends QueueTaskDispatcher {
+        @CheckForNull
+        @Override
+        public CauseOfBlockage canRun(Queue.Item item) {
+            return new Cancelled();
+        }
+    }
+
+    @Test
+    void killAllQueueItems() throws IOException {
+        queueItemKiller();
+    }
+
+    @TestExtension("killBlockedItem")
+    public static class KillBlockedItems extends QueueTaskDispatcher {
+        @CheckForNull
+        @Override
+        public CauseOfBlockage canRun(Queue.Item item) {
+            return item instanceof BlockedItem ? new Cancelled() : new CauseOfBlockage() {
+                @Override
+                public String getShortDescription() {
+                    return "blocked by " + this.getClass().getSimpleName();
+                }
+            };
+        }
+    }
+
+    @Test
+    void killBlockedItem() throws IOException {
+        queueItemKiller();
+    }
+
+    private void queueItemKiller() throws IOException {
+        FreeStyleProject trigger = r.createFreeStyleProject();
+        var buildFuture = trigger.scheduleBuild2(0, new UserIdCause());
+        await().until(() -> buildFuture.getStartCondition().isCancelled());
+    }
+
+    private void waitUntilWaitingListIsEmpty(Queue q) throws InterruptedException {
+        boolean waitingItemsPresent = true;
+        while (waitingItemsPresent) {
+            waitingItemsPresent = false;
+            for (Queue.Item i : q.getItems()) {
+                if (i instanceof WaitingItem) {
+                    waitingItemsPresent = true;
+                    break;
+                }
+            }
+            Thread.sleep(1000);
+        }
+    }
+
+    @Issue("JENKINS-68780")
+    @Test
+    void upstreamProjectsInQueueBlock() throws Exception {
+
+       FreeStyleProject a = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
+       FreeStyleProject b = r.createFreeStyleProject();
+       a.getPublishersList().add(new BuildTrigger(b.getName(), true));
+       b.setBlockBuildWhenUpstreamBuilding(true);
+
+       r.jenkins.rebuildDependencyGraph();
+
+       a.scheduleBuild(0, new UserIdCause());
+
+       Queue q = r.jenkins.getQueue();
+
+       waitUntilWaitingListIsEmpty(q);
+
+       b.scheduleBuild(0, new UserIdCause());
+
+       waitUntilWaitingListIsEmpty(q);
+
+       // This call is necessary because the queue blocks projects
+       // at first only temporarily. By calling the maintain method
+       // all temporarily blocked projects either become buildable or
+       // become permanently blocked
+       q.scheduleMaintenance().get();
+
+       assertEquals(2, q.getBlockedItems().size(), "Queue should contain two blocked items but didn't.");
+
+       //Ensure orderly shutdown
+       q.clear();
+       r.waitUntilNoActivity();
+    }
+
+    @Issue("JENKINS-68780")
+    @Test
+    void downstreamProjectsInQueueBlock() throws Exception {
+
+       FreeStyleProject a = r.createFreeStyleProject();
+       FreeStyleProject b = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
+       a.getPublishersList().add(new BuildTrigger(b.getName(), true));
+       a.setBlockBuildWhenDownstreamBuilding(true);
+
+       r.jenkins.rebuildDependencyGraph();
+
+       b.scheduleBuild(0, new UserIdCause());
+
+       Queue q = r.jenkins.getQueue();
+
+       waitUntilWaitingListIsEmpty(q);
+
+       a.scheduleBuild(0, new UserIdCause());
+
+       waitUntilWaitingListIsEmpty(q);
+
+       // This call is necessary because the queue blocks projects
+       // at first only temporarily. By calling the maintain method
+       // all temporarily blocked projects either become buildable or
+       // become permanently blocked
+       q.scheduleMaintenance().get();
+
+       assertEquals(2, q.getBlockedItems().size(), "Queue should contain two blocked items but didn't.");
+
+       //Ensure orderly shutdown
+       q.clear();
+       r.waitUntilNoActivity();
+    }
+
+    @Issue("JENKINS-69850")
+    @Test
+    void handleCauseOfBlockageThatIsNull() throws Exception {
+
+        FreeStyleProject a = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
+        FreeStyleProject b = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_ANOTHER_BLOCKED_PROJECT);
+        a.getPublishersList().add(new BuildTrigger(b.getName(), true));
+        a.setBlockBuildWhenDownstreamBuilding(true);
+        b.setBlockBuildWhenUpstreamBuilding(true);
+        r.jenkins.rebuildDependencyGraph();
+
+        Queue q = r.jenkins.getQueue();
+        Queue.withLock(() -> {
+            a.scheduleBuild(0, new UserIdCause());
+            b.scheduleBuild(0, new UserIdCause());
+            // Move both projects from pending to blocked
+            q.maintain();
+
+            q.save();
+            // Loading blocked items sets the CauseOfBlockage to null
+            q.load();
+            // Before JENKINS-69850 was fixed the null CauseOfBlockage caused a stack overflow
+            q.maintain();
+        });
+
+        //Ensure orderly shutdown
+        q.clear();
+        r.waitUntilNoActivity();
+    }
+
     public static class TestFlyweightTask extends TestTask implements Queue.FlyweightTask {
         Executor exec;
         private final Label assignedLabel;
+
         public TestFlyweightTask(AtomicInteger cnt, Label assignedLabel) {
             super(cnt);
             this.assignedLabel = assignedLabel;
         }
+
         @Override protected void doRun() {
             exec = Executor.currentExecutor();
         }
+
         @Override public Label getAssignedLabel() {
             return assignedLabel;
         }
+
         public Computer getOwner() {
             return exec == null ? null : exec.getOwner();
         }
     }
 
-    @Test public void taskEquality() throws Exception {
+    @Test
+    void taskEquality() throws Exception {
         AtomicInteger cnt = new AtomicInteger();
         TestTask originalTask = new TestTask(cnt, true);
         ScheduleResult result = r.jenkins.getQueue().schedule2(originalTask, 0);
@@ -579,6 +833,7 @@ public class QueueTest {
         r.waitUntilNoActivity();
         assertEquals(1, cnt.get());
     }
+
     static class TestTask implements Queue.Task {
         private final AtomicInteger cnt;
         boolean isBlocked;
@@ -595,22 +850,53 @@ public class QueueTest {
         @Override public boolean equals(Object o) {
             return o instanceof TestTask && cnt == ((TestTask) o).cnt;
         }
+
         @Override public int hashCode() {
             return cnt.hashCode();
         }
-        @Override public CauseOfBlockage getCauseOfBlockage() {return isBlocked ? CauseOfBlockage.fromMessage(Messages._Queue_Unknown()) : null;}
-        @Override public String getName() {return "test";}
-        @Override public String getFullDisplayName() {return "Test";}
+
+        @Override public CauseOfBlockage getCauseOfBlockage() {
+            return isBlocked ? CauseOfBlockage.fromMessage(Messages._Queue_Unknown()) : null;
+        }
+
+        @Override public String getName() {
+            return "test";
+        }
+
+        @Override public String getFullDisplayName() {
+            return "Test";
+        }
+
         @Override public void checkAbortPermission() {}
-        @Override public boolean hasAbortPermission() {return true;}
-        @Override public String getUrl() {return "test/";}
-        @Override public String getDisplayName() {return "Test";}
-        @Override public ResourceList getResourceList() {return new ResourceList();}
+
+        @Override public boolean hasAbortPermission() {
+            return true;
+        }
+
+        @Override public String getUrl() {
+            return "test/";
+        }
+
+        @Override public String getDisplayName() {
+            return "Test";
+        }
+
+        @Override public ResourceList getResourceList() {
+            return new ResourceList();
+        }
+
         protected void doRun() {}
-        @Override public Executable createExecutable() throws IOException {
+
+        @Override public Executable createExecutable() {
             return new Executable() {
-                @Override public SubTask getParent() {return TestTask.this;}
-                @Override public long getEstimatedDuration() {return -1;}
+                @Override public SubTask getParent() {
+                    return TestTask.this;
+                }
+
+                @Override public long getEstimatedDuration() {
+                    return -1;
+                }
+
                 @Override public void run() {
                     doRun();
                     cnt.incrementAndGet();
@@ -619,12 +905,13 @@ public class QueueTest {
         }
     }
 
-    @Test public void waitForStart() throws Exception {
+    @Test
+    void waitForStart() throws Exception {
         final OneShotEvent ev = new OneShotEvent();
         FreeStyleProject p = r.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException {
                 ev.block();
                 return true;
             }
@@ -632,7 +919,7 @@ public class QueueTest {
 
         QueueTaskFuture<FreeStyleBuild> v = p.scheduleBuild2(0);
         FreeStyleBuild b = v.waitForStart();
-        assertEquals(1,b.getNumber());
+        assertEquals(1, b.getNumber());
         assertTrue(b.isBuilding());
         assertSame(p, b.getProject());
 
@@ -644,20 +931,21 @@ public class QueueTest {
     /**
      * Make sure that the running build actually carries an credential.
      */
-    @Test public void accessControl() throws Exception {
+    @Test
+    void accessControl() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
-                assertEquals(alice,Jenkins.getAuthentication());
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
-        r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        r.buildAndAssertSuccess(p);
     }
 
-    private static Authentication alice = new UsernamePasswordAuthenticationToken("alice","alice",new GrantedAuthority[0]);
+    private static Authentication alice = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
 
 
     /**
@@ -666,23 +954,24 @@ public class QueueTest {
      * We do this test by letting a build run twice to determine its natural home,
      * and then introduce a security restriction to prohibit that.
      */
-    @Test public void permissionSensitiveSlaveAllocations() throws Exception {
+    @Test
+    void permissionSensitiveSlaveAllocations() throws Exception {
         r.jenkins.setNumExecutors(0); // restrict builds to those agents
         DumbSlave s1 = r.createSlave();
         DumbSlave s2 = r.createSlave();
 
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
-            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
-                assertEquals(alice,Jenkins.getAuthentication());
+            public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
 
-        final FreeStyleBuild b1 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
-        final FreeStyleBuild b2 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        final FreeStyleBuild b1 = r.buildAndAssertSuccess(p);
+        final FreeStyleBuild b2 = r.buildAndAssertSuccess(p);
 
         // scheduling algorithm would prefer running the same job on the same node
         // kutzi: 'prefer' != 'enforce', therefore disabled this assertion: assertSame(b1.getBuiltOn(),b2.getBuiltOn());
@@ -690,17 +979,20 @@ public class QueueTest {
         r.jenkins.setAuthorizationStrategy(new AliceCannotBuild(b1.getBuiltOnStr()));
 
         // now that we prohibit alice to do a build on the same node, the build should run elsewhere
-        for (int i=0; i<3; i++) {
-            FreeStyleBuild b3 = r.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        for (int i = 0; i < 3; i++) {
+            FreeStyleBuild b3 = r.buildAndAssertSuccess(p);
             assertNotSame(b3.getBuiltOnStr(), b1.getBuiltOnStr());
         }
     }
+
     private static class AliceCannotBuild extends GlobalMatrixAuthorizationStrategy {
         private final String blocked;
+
         AliceCannotBuild(String blocked) {
             add(Jenkins.ADMINISTER, "anonymous");
             this.blocked = blocked;
         }
+
         @Override
         public ACL getACL(Node node) {
             if (node.getNodeName().equals(blocked)) {
@@ -714,15 +1006,16 @@ public class QueueTest {
         }
     }
 
-    @Test public void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, ExecutionException, InterruptedException{
-        FreeStyleProject project1 = r.createFreeStyleProject();
-        FreeStyleProject project2 = r.createFreeStyleProject();
-        TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class){
+    @Test
+    void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, InterruptedException {
+        FreeStyleProject project1 = r.createFreeStyleProject("project1");
+        FreeStyleProject project2 = r.createFreeStyleProject("project2");
+        TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class) {
          @Override
             public FreeStyleProject newInstance(ItemGroup parent, String name) {
-                return (FreeStyleProject) new FreeStyleProject(parent,name){
+                return new FreeStyleProject(parent, name) {
                      @Override
-                    public Label getAssignedLabel(){
+                    public Label getAssignedLabel() {
                         throw new IllegalArgumentException("Test exception"); //cause dead of executor
                     }
 
@@ -742,29 +1035,39 @@ public class QueueTest {
         projectError.scheduleBuild2(0);
         Executor e = r.jenkins.toComputer().getExecutors().get(0);
         Thread.sleep(2000);
-        while(project2.getLastBuild()==null){
-             if(!e.isAlive()){
+        while (project2.getLastBuild() == null) {
+             if (!e.isAlive()) {
                     break; // executor is dead due to exception
              }
-             if(e.isIdle()){
-                 assertTrue("Node went to idle before project had" + project2.getDisplayName() + " been started", v.isDone());
+             if (e.isIdle()) {
+                 assertTrue(v.isDone(), "Node went to idle before project had" + project2.getDisplayName() + " been started");
              }
+             Thread.sleep(1000);
+        }
+        if (project2.getLastBuild() == null) {
+            Queue.getInstance().cancel(projectError); // cancel job which cause dead of executor
+            while (!e.isIdle()) { //executor should take project2 from queue
                 Thread.sleep(1000);
+            }
+            //project2 should not be in pendings
+            List<Queue.BuildableItem> items = Queue.getInstance().getPendingItems();
+            for (Queue.BuildableItem item : items) {
+                assertNotEquals(item.task.getName(), project2.getName(), "Project " + project2.getDisplayName() + " stuck in pendings");
+            }
         }
-        if(project2.getLastBuild()!=null)
-            return;
-        Queue.getInstance().cancel(projectError); // cancel job which cause dead of executor
-        while(!e.isIdle()){ //executor should take project2 from queue
-            Thread.sleep(1000);
-        }
-        //project2 should not be in pendings
-        List<Queue.BuildableItem> items = Queue.getInstance().getPendingItems();
-        for(Queue.BuildableItem item : items){
-            assertFalse("Project " + project2.getDisplayName() + " stuck in pendings",item.task.getName().equals(project2.getName()));
+        for (var p : r.jenkins.allItems(FreeStyleProject.class)) {
+            for (var b : p.getBuilds()) {
+                r.waitForCompletion(b);
+                b.delete();
+                Logger.getLogger(QueueTest.class.getName()).info(() -> "Waited for " + b);
+            }
+            p.delete();
+            Logger.getLogger(QueueTest.class.getName()).info(() -> "Cleaned up " + p);
         }
     }
 
-    @Test public void cancelInQueue() throws Exception {
+    @Test
+    void cancelInQueue() throws Exception {
         // parepare an offline slave.
         DumbSlave slave = r.createOnlineSlave();
         assertFalse(slave.toComputer().isOffline());
@@ -775,203 +1078,76 @@ public class QueueTest {
         p.setAssignedNode(slave);
 
         QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(0);
-        try {
-            f.get(3, TimeUnit.SECONDS);
-            fail("Should time out (as the slave is offline).");
-        } catch (TimeoutException e) {
-        }
+        assertThrows(TimeoutException.class, () -> f.get(3, TimeUnit.SECONDS), "Should time out (as the agent is offline)");
 
         Queue.Item item = Queue.getInstance().getItem(p);
         assertNotNull(item);
         Queue.getInstance().doCancelItem(item.getId());
         assertNull(Queue.getInstance().getItem(p));
 
-        try {
-            f.get(10, TimeUnit.SECONDS);
-            fail("Should not get (as it is cancelled).");
-        } catch (CancellationException e) {
-        }
+        assertThrows(CancellationException.class, () -> f.get(10, TimeUnit.SECONDS), "Should not get (as it is cancelled)");
     }
 
-    @Test public void waitForStartAndCancelBeforeStart() throws Exception {
-        final OneShotEvent ev = new OneShotEvent();
+    @Test
+    void waitForStartAndCancelBeforeStart() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
 
-        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(10);
+        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(30);
         final Queue.Item item = Queue.getInstance().getItem(p);
         assertNotNull(item);
 
         final ScheduledThreadPoolExecutor executor = new ScheduledThreadPoolExecutor(1);
-        executor.schedule(new Runnable() {
-            @Override
-            public void run() {
-                   try {
-                       Queue.getInstance().doCancelItem(item.getId());
-                   } catch (IOException | ServletException e) {
-                       e.printStackTrace();
-                   }
-            }
-            }, 2, TimeUnit.SECONDS);
+        executor.schedule(() -> {
+               try {
+                   Queue.getInstance().doCancelItem(item.getId());
+               } catch (IOException e) {
+                   throw new UncheckedIOException(e);
+               } catch (ServletException e) {
+                   throw new RuntimeException(e);
+               }
+        }, 2, TimeUnit.SECONDS);
 
-        try {
-            f.waitForStart();
-            fail("Expected an CancellationException to be thrown");
-        } catch (CancellationException e) {}
+        assertThrows(CancellationException.class, f::waitForStart);
     }
 
-    @Ignore("TODO flakes in CI")
+    @Disabled("TODO flakes in CI")
     @Issue("JENKINS-27871")
-    @Test public void testBlockBuildWhenUpstreamBuildingLock() throws Exception {
+    @Test
+    void testBlockBuildWhenUpstreamBuildingLock() throws Exception {
         final String prefix = "JENKINS-27871";
         r.getInstance().setNumExecutors(4);
-        
-        final FreeStyleProject projectA = r.createFreeStyleProject(prefix+"A");
+
+        final FreeStyleProject projectA = r.createFreeStyleProject(prefix + "A");
         projectA.getBuildersList().add(new SleepBuilder(5000));
-        
-        final FreeStyleProject projectB = r.createFreeStyleProject(prefix+"B");
-        projectB.getBuildersList().add(new SleepBuilder(10000));     
+
+        final FreeStyleProject projectB = r.createFreeStyleProject(prefix + "B");
+        projectB.getBuildersList().add(new SleepBuilder(10000));
         projectB.setBlockBuildWhenUpstreamBuilding(true);
 
-        final FreeStyleProject projectC = r.createFreeStyleProject(prefix+"C");
+        final FreeStyleProject projectC = r.createFreeStyleProject(prefix + "C");
         projectC.getBuildersList().add(new SleepBuilder(10000));
         projectC.setBlockBuildWhenUpstreamBuilding(true);
-        
-        projectA.getPublishersList().add(new BuildTrigger(Arrays.asList(projectB), Result.SUCCESS));
-        projectB.getPublishersList().add(new BuildTrigger(Arrays.asList(projectC), Result.SUCCESS));
-        
+
+        projectA.getPublishersList().add(new BuildTrigger(List.of(projectB), Result.SUCCESS));
+        projectB.getPublishersList().add(new BuildTrigger(List.of(projectC), Result.SUCCESS));
+
         final QueueTaskFuture<FreeStyleBuild> taskA = projectA.scheduleBuild2(0, new TimerTriggerCause());
         Thread.sleep(1000);
         final QueueTaskFuture<FreeStyleBuild> taskB = projectB.scheduleBuild2(0, new TimerTriggerCause());
         final QueueTaskFuture<FreeStyleBuild> taskC = projectC.scheduleBuild2(0, new TimerTriggerCause());
-        
-        final FreeStyleBuild buildA = taskA.get(60, TimeUnit.SECONDS);       
-        final FreeStyleBuild buildB = taskB.get(60, TimeUnit.SECONDS);     
+
+        final FreeStyleBuild buildA = taskA.get(60, TimeUnit.SECONDS);
+        final FreeStyleBuild buildB = taskB.get(60, TimeUnit.SECONDS);
         final FreeStyleBuild buildC = taskC.get(60, TimeUnit.SECONDS);
         long buildBEndTime = buildB.getStartTimeInMillis() + buildB.getDuration();
-        assertTrue("Project B build should be finished before the build of project C starts. " +
-                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis(), 
-                buildC.getStartTimeInMillis() >= buildBEndTime);
-    }
-
-    @Issue("JENKINS-30084")
-    @Test
-    /*
-     * When a flyweight task is restricted to run on a specific node, the node will be provisioned
-     * and the flyweight task will be executed.
-     */
-    public void shouldRunFlyweightTaskOnProvisionedNodeWhenNodeRestricted() throws Exception {
-        MatrixProject matrixProject = r.jenkins.createProject(MatrixProject.class, "p");
-        matrixProject.setAxes(new AxisList(
-                new Axis("axis", "a", "b")
-        ));
-        Label label = LabelExpression.get("aws-linux-dummy");
-        DummyCloudImpl dummyCloud = new DummyCloudImpl(r, 0);
-        dummyCloud.label = label;
-        r.jenkins.clouds.add(dummyCloud);
-        matrixProject.setAssignedLabel(label);
-        r.assertBuildStatusSuccess(matrixProject.scheduleBuild2(0));
-        assertEquals("aws-linux-dummy", matrixProject.getBuilds().getLastBuild().getBuiltOn().getLabelString());
-    }
-
-    @Ignore("TODO too flaky; upstream can finish before we even examine the queue")
-    @Issue("JENKINS-30084")
-    @Test
-    public void shouldBeAbleToBlockFlyweightTaskAtTheLastMinute() throws Exception {
-        MatrixProject matrixProject = r.jenkins.createProject(MatrixProject.class, "downstream");
-        matrixProject.setDisplayName("downstream");
-        matrixProject.setAxes(new AxisList(
-                new Axis("axis", "a", "b")
-        ));
-
-        Label label = LabelExpression.get("aws-linux-dummy");
-        DummyCloudImpl dummyCloud = new DummyCloudImpl(r, 0);
-        dummyCloud.label = label;
-        BlockDownstreamProjectExecution property = new BlockDownstreamProjectExecution();
-        dummyCloud.getNodeProperties().add(property);
-        r.jenkins.clouds.add(dummyCloud);
-        matrixProject.setAssignedLabel(label);
-
-        FreeStyleProject upstreamProject = r.createFreeStyleProject("upstream");
-        upstreamProject.getBuildersList().add(new SleepBuilder(10000));
-        upstreamProject.setDisplayName("upstream");
-
-        //let's assume the flyweighttask has an upstream project and that must be blocked
-        // when the upstream project is running
-        matrixProject.addTrigger(new ReverseBuildTrigger("upstream", Result.SUCCESS));
-        matrixProject.setBlockBuildWhenUpstreamBuilding(true);
-
-        //we schedule the project but we pretend no executors are available thus
-        //the flyweight task is in the buildable queue without being executed
-        QueueTaskFuture downstream = matrixProject.scheduleBuild2(0);
-        if (downstream == null) {
-            throw new Exception("the flyweight task could not be scheduled, thus the test will be interrupted");
-        }
-        //let s wait for the Queue instance to be updated
-        while (Queue.getInstance().getBuildableItems().size() != 1) {
-            Thread.sleep(10);
-        }
-        //in this state the build is not blocked, it's just waiting for an available executor
-        assertFalse(Queue.getInstance().getItems()[0].isBlocked());
-
-        //we start the upstream project that should block the downstream one
-        QueueTaskFuture upstream = upstreamProject.scheduleBuild2(0);
-        if (upstream == null) {
-            throw new Exception("the upstream task could not be scheduled, thus the test will be interrupted");
-        }
-        //let s wait for the Upstream to enter the buildable Queue
-        Thread.sleep(1000);
-        boolean enteredTheQueue = false;
-        while (!enteredTheQueue) {
-            for (Queue.BuildableItem item : Queue.getInstance().getBuildableItems()) {
-                if (item.task.getDisplayName() != null && item.task.getDisplayName().equals(upstreamProject.getDisplayName())) {
-                    enteredTheQueue = true;
-                }
-            }
-            Thread.sleep(10);
-        }
-        //let's wait for the upstream project to actually start so that we're sure the Queue has been updated
-        //when the upstream starts the downstream has already left the buildable queue and the queue is empty
-        while (!Queue.getInstance().getBuildableItems().isEmpty()) {
-            Thread.sleep(10);
-        }
-        assertTrue(Queue.getInstance().getItems()[0].isBlocked());
-        assertTrue(Queue.getInstance().getBlockedItems().get(0).task.getDisplayName().equals(matrixProject.displayName));
-
-        //once the upstream is completed, the downstream can join the buildable queue again.
-        r.assertBuildStatusSuccess(upstream);
-        while (Queue.getInstance().getBuildableItems().isEmpty()) {
-            Thread.sleep(10);
-        }
-        assertFalse(Queue.getInstance().getItems()[0].isBlocked());
-        assertTrue(Queue.getInstance().getBlockedItems().isEmpty());
-        assertTrue(Queue.getInstance().getBuildableItems().get(0).task.getDisplayName().equals(matrixProject.displayName));
-    }
-
-    //let's make sure that the downstream project is not started before the upstream --> we want to simulate
-    // the case: buildable-->blocked-->buildable
-    public static class BlockDownstreamProjectExecution extends NodeProperty<Slave> {
-        @Override
-        public CauseOfBlockage canTake(Queue.BuildableItem item) {
-            if (item.task.getName().equals("downstream")) {
-                return new CauseOfBlockage() {
-                    @Override
-                    public String getShortDescription() {
-                        return "slave not provisioned";
-                    }
-                };
-            }
-            return null;
-        }
-
-        @TestExtension("shouldBeAbleToBlockFlyWeightTaskOnLastMinute")
-        public static class DescriptorImpl extends NodePropertyDescriptor {}
+        assertTrue(buildC.getStartTimeInMillis() >= buildBEndTime,
+                "Project B build should be finished before the build of project C starts. " +
+                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis());
     }
 
     @Issue({"SECURITY-186", "SECURITY-618"})
     @Test
-    public void queueApiOutputShouldBeFilteredByUserPermission() throws Exception {
-        ApiTokenTestHelper.enableLegacyBehavior();
-
+    void queueApiOutputShouldBeFilteredByUserPermission() throws Exception {
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         ProjectMatrixAuthorizationStrategy str = new ProjectMatrixAuthorizationStrategy();
         str.add(Jenkins.READ, "bob");
@@ -981,9 +1157,9 @@ public class QueueTest {
 
         FreeStyleProject project = r.createFreeStyleProject("project");
 
-        Map<Permission, Set<String>> permissions = new HashMap<Permission, Set<String>>();
-        permissions.put(Item.READ, Collections.singleton("bob"));
-        permissions.put(Item.DISCOVER, Collections.singleton("james"));
+        Map<Permission, Set<String>> permissions = new HashMap<>();
+        permissions.put(Item.READ, Set.of("bob"));
+        permissions.put(Item.DISCOVER, Set.of("james"));
         AuthorizationMatrixProperty prop1 = new AuthorizationMatrixProperty(permissions);
         project.addProperty(prop1);
         project.getBuildersList().add(new SleepBuilder(10));
@@ -998,13 +1174,13 @@ public class QueueTest {
         XmlPage p = webClient.goToXml("queue/api/xml");
 
         //bob has permission on the project and will be able to see it in the queue together with information such as the URL and the name.
-        for (DomNode element: p.getFirstChild().getFirstChild().getChildNodes()){
+        for (DomNode element : p.getFirstChild().getFirstChild().getChildNodes()) {
             if (element.getNodeName().equals("task")) {
-                for (DomNode child: ((DomElement) element).getChildNodes()) {
+                for (DomNode child : element.getChildNodes()) {
                     if (child.getNodeName().equals("name")) {
-                        assertEquals(child.asText(), "project");
+                        assertEquals("project", child.asNormalizedText());
                     } else if (child.getNodeName().equals("url")) {
-                        assertNotNull(child.asText());
+                        assertNotNull(child.asNormalizedText());
                     }
                 }
             }
@@ -1030,6 +1206,9 @@ public class QueueTest {
         r.createWebClient().withBasicApiToken(bob).goToXml(url); // OK, 200
         r.createWebClient().withBasicApiToken(james).assertFails(url, HttpURLConnection.HTTP_FORBIDDEN); // only DISCOVER → AccessDeniedException
         r.createWebClient().withBasicApiToken(alice).assertFails(url, HttpURLConnection.HTTP_NOT_FOUND); // not even DISCOVER
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(project));
     }
 
     //we force the project not to be executed so that it stays in the queue
@@ -1047,13 +1226,13 @@ public class QueueTest {
     }
 
     @Test
-    public void testGetCauseOfBlockageForNonConcurrentFreestyle() throws Exception {
+    void testGetCauseOfBlockageForNonConcurrentFreestyle() throws Exception {
         Queue queue = r.getInstance().getQueue();
         FreeStyleProject t1 = r.createFreeStyleProject("project");
         t1.getBuildersList().add(new SleepBuilder(TimeUnit.SECONDS.toMillis(30)));
         t1.setConcurrentBuild(false);
 
-        t1.scheduleBuild2(0).waitForStart();
+        FreeStyleBuild build = t1.scheduleBuild2(0).waitForStart();
         t1.scheduleBuild2(0);
 
         queue.maintain();
@@ -1063,19 +1242,36 @@ public class QueueTest {
         CauseOfBlockage expected = new BlockedBecauseOfBuildInProgress(t1.getFirstBuild());
 
         assertEquals(expected.getShortDescription(), actual.getShortDescription());
+        Queue.getInstance().doCancelItem(r.jenkins.getQueue().getBlockedItems().get(0).getId());
+        r.assertBuildStatusSuccess(r.waitForCompletion(build));
     }
 
-    @Test @LocalData
-    public void load_queue_xml() {
+    @Test
+    @LocalData
+    void load_queue_xml() {
         Queue q = r.getInstance().getQueue();
         Queue.Item[] items = q.getItems();
-        assertEquals(Arrays.asList(items).toString(), 11, items.length);
-        assertEquals("Loading the queue should not generate saves", 0, QueueSaveSniffer.count);
+        assertEquals(11, items.length, Arrays.asList(items).toString());
+        assertEquals(0, QueueSaveSniffer.count, "Loading the queue should not generate saves");
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("a", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("b", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("c", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("d", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("e", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("f", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("g", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("h", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("i", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("j", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("k", FreeStyleProject.class)));
     }
 
     @TestExtension("load_queue_xml")
     public static final class QueueSaveSniffer extends SaveableListener {
         private static int count = 0;
+
         @Override public void onChange(Saveable o, XmlFile file) {
             if (o instanceof Queue) {
                 count++;
@@ -1085,13 +1281,13 @@ public class QueueTest {
 
     @Test
     @Issue("SECURITY-891")
-    public void doCancelItem_PermissionIsChecked() throws Exception {
+    void doCancelItem_PermissionIsChecked() throws Exception {
         checkCancelOperationUsingUrl(item -> "queue/cancelItem?id=" + item.getId(), false);
     }
 
     @Test
     @Issue("SECURITY-891")
-    public void doCancelQueue_PermissionIsChecked() throws Exception {
+    void doCancelQueue_PermissionIsChecked() throws Exception {
         checkCancelOperationUsingUrl(item -> "queue/item/" + item.getId() + "/cancelQueue", true);
     }
 
@@ -1107,7 +1303,7 @@ public class QueueTest {
         r.jenkins.setCrumbIssuer(null);
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         r.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy()
-                .grant(Jenkins.READ, Item.CANCEL).everywhere().to("admin")
+                .grant(Jenkins.READ, Item.READ, Item.CANCEL).everywhere().to("admin")
                 .grant(Jenkins.READ).everywhere().to("user")
         );
 
@@ -1116,21 +1312,21 @@ public class QueueTest {
         assertThat(q.getItems().length, equalTo(0));
 
         FreeStyleProject testProject = r.createFreeStyleProject("test");
-        testProject.scheduleBuild(new UserIdCause());
+        assertNotNull(testProject.scheduleBuild2(0, new UserIdCause()));
 
         Queue.Item[] items = q.getItems();
         assertThat(items.length, equalTo(1));
         Queue.Item currentOne = items[0];
         assertFalse(currentOne.getFuture().isCancelled());
 
-        WebRequest request = new WebRequest(new URL(r.getURL() + urlProvider.apply(currentOne)), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(r.getURL() + urlProvider.apply(currentOne)).toURL(), HttpMethod.POST);
 
         { // user without right cannot cancel
             JenkinsRule.WebClient wc = r.createWebClient()
                     .withRedirectEnabled(false)
                     .withThrowExceptionOnFailingStatusCode(false);
             wc.login("user");
-            if(legacyRedirect) {
+            if (legacyRedirect) {
                 Page p = wc.getPage(request);
                 // the legacy endpoint returns a redirection to the previously visited page, none in our case
                 // (so force no redirect to avoid false positive error)
@@ -1152,7 +1348,7 @@ public class QueueTest {
     }
 
     @Test
-    public void flyweightsRunOnMasterIfPossible() throws Exception {
+    void flyweightsRunOnMasterIfPossible() throws Exception {
         r.createOnlineSlave();
         r.jenkins.setNumExecutors(0);
         List<TestFlyweightTask> tasks = new ArrayList<>();
@@ -1166,11 +1362,11 @@ public class QueueTest {
 
         q.maintain();
         r.waitUntilNoActivityUpTo(10000);
-        Assert.assertThat(tasks, everyItem(hasProperty("owner", equalTo(Jenkins.get().toComputer()))));
+        assertThat(tasks, everyItem(hasProperty("owner", equalTo(Jenkins.get().toComputer()))));
     }
 
     @Test
-    public void flyweightsRunOnAgentIfNecessary() throws Exception {
+    void flyweightsRunOnAgentIfNecessary() throws Exception {
         r.createOnlineSlave();
         r.jenkins.setNumExecutors(0);
         r.jenkins.toComputer().setTemporarilyOffline(true, new OfflineCause.UserCause(null, null));
@@ -1185,40 +1381,91 @@ public class QueueTest {
 
         q.maintain();
         r.waitUntilNoActivityUpTo(10000);
-        Assert.assertThat(tasks, everyItem(hasProperty("owner", not(equalTo(Jenkins.get().toComputer())))));
+        assertThat(tasks, everyItem(hasProperty("owner", not(equalTo(Jenkins.get().toComputer())))));
     }
 
     @Test
     @Issue("JENKINS-57805")
-    public void brokenAffinityKey() throws Exception {
+    void brokenAffinityKey() throws Exception {
         BrokenAffinityKeyProject brokenProject = r.createProject(BrokenAffinityKeyProject.class, "broken-project");
         // Before the JENKINS-57805 fix, the test times out because the `NullPointerException` repeatedly thrown from
         // `BrokenAffinityKeyProject.getAffinityKey()` prevents `Queue.maintain()` from completing.
         r.buildAndAssertSuccess(brokenProject);
     }
 
+    @Test
+    @Issue("SECURITY-1537")
+    void regularTooltipDisplayedCorrectly() throws Exception {
+        FreeStyleProject p = r.createFreeStyleProject();
+
+        String expectedLabel = "\"expected label\"";
+        p.setAssignedLabel(Label.get(expectedLabel));
+
+        p.scheduleBuild2(0);
+
+        String tooltip = buildAndExtractTooltipAttribute();
+        assertThat(tooltip, containsString(expectedLabel.substring(1, expectedLabel.length() - 1)));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
+    }
+
+    @Test
+    @Issue("SECURITY-1537")
+    void preventXssInCauseOfBlocking() throws Exception {
+        FreeStyleProject p = r.createFreeStyleProject();
+        p.setAssignedLabel(Label.get("\"<img/src='x' onerror=alert(123)>xss\""));
+
+        p.scheduleBuild2(0);
+
+        String tooltip = buildAndExtractTooltipAttribute();
+        assertThat(tooltip, not(containsString("<img")));
+        assertThat(tooltip, containsString("&lt;"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
+    }
+
+    private String buildAndExtractTooltipAttribute() throws Exception {
+        JenkinsRule.WebClient wc = r.createWebClient();
+
+        HtmlPage page = wc.goTo("");
+
+        page.executeJavaScript("document.querySelector('#buildQueue a[tooltip]:not([tooltip=\"\"])')._tippy.show()");
+        wc.waitForBackgroundJavaScript(1000);
+        ScriptResult result = page.executeJavaScript("document.querySelector('.tippy-content').innerHTML;");
+
+        return result.getJavaScriptResult().toString();
+    }
+
     public static class BrokenAffinityKeyProject extends Project<BrokenAffinityKeyProject, BrokenAffinityKeyBuild> implements TopLevelItem {
         public BrokenAffinityKeyProject(ItemGroup parent, String name) {
             super(parent, name);
         }
+
         @Override
         public String getAffinityKey() {
             throw new NullPointerException("oops!");
         }
+
         @Override
         protected Class<BrokenAffinityKeyBuild> getBuildClass() {
             return BrokenAffinityKeyBuild.class;
         }
+
         @Override
         public TopLevelItemDescriptor getDescriptor() {
             return ExtensionList.lookupSingleton(DescriptorImpl.class);
         }
+
         @TestExtension("brokenAffinityKey")
         public static class DescriptorImpl extends AbstractProjectDescriptor {
             @Override
             public TopLevelItem newInstance(ItemGroup parent, String name) {
                 return new BrokenAffinityKeyProject(parent, name);
             }
+
+            @NonNull
             @Override
             public String getDisplayName() {
                 return "Broken Affinity Key Project";
@@ -1230,12 +1477,89 @@ public class QueueTest {
         public BrokenAffinityKeyBuild(BrokenAffinityKeyProject project) throws IOException {
             super(project);
         }
+
         public BrokenAffinityKeyBuild(BrokenAffinityKeyProject project, File buildDir) throws IOException {
             super(project, buildDir);
         }
+
         @Override
         public void run() {
             execute(new BuildExecution());
+        }
+    }
+
+    private static class SlowSlave extends Slave {
+        SlowSlave(String name, File remoteFS, ComputerLauncher launcher) throws Descriptor.FormException, IOException {
+            super(name, remoteFS.getAbsolutePath(), launcher);
+        }
+
+        @Override public Computer createComputer() {
+            return new SlowComputer(this);
+        }
+    }
+
+    private static class SlowComputer extends SlaveComputer {
+        SlowComputer(SlowSlave slave) {
+            super(slave);
+        }
+
+        @Override
+        public boolean isOffline() {
+            try {
+                // This delay is just big enough to allow the test to simulate a computer failure at the time we expect.
+                Thread.sleep(100);
+            } catch (InterruptedException e) {
+                // ignore
+            }
+            return super.isOffline();
+        }
+    }
+
+    @Test
+    void computerFailsJustAfterCreatingExecutor() throws Throwable {
+        r.jenkins.setNumExecutors(0);
+        var p = r.createFreeStyleProject();
+        p.setAssignedLabel(r.jenkins.getLabel("agent"));
+        Slave onlineSlave = new SlowSlave("special", new File(r.jenkins.getRootDir(), "agent-work-dirs/special"), r.createComputerLauncher(null));
+        onlineSlave.setLabelString("agent");
+        onlineSlave.setRetentionStrategy(RetentionStrategy.NOOP);
+        r.jenkins.addNode(onlineSlave);
+        r.waitOnline(onlineSlave);
+
+        var computer = onlineSlave.toComputer();
+        Timer.get().execute(() -> {
+            // Simulate a computer failure just after the executor is created
+            while (computer.getExecutors().get(0).getStartTime() == 0) {
+                try {
+                    Thread.sleep(10);
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            }
+            computer.disconnect(new OfflineCause.ChannelTermination(new IllegalStateException()));
+        });
+        var f = p.scheduleBuild2(0);
+        await().until(computer::isOffline);
+        Thread.sleep(1000);
+        assertFalse(r.jenkins.getQueue().isEmpty(), "Queue item should be back as the executor got killed before it could be picked up");
+        // Put the computer back online
+        r.waitOnline(onlineSlave);
+        r.assertBuildStatusSuccess(f);
+        assertTrue(r.jenkins.getQueue().isEmpty());
+        // clean up
+        computer.disconnect(null).get();
+        r.jenkins.removeNode(onlineSlave);
+    }
+
+    private static class Cancelled extends CauseOfBlockage {
+        @Override
+        public String getShortDescription() {
+            return "Killed by QueueItemKiller";
+        }
+
+        @Override
+        public boolean isFatal() {
+            return true;
         }
     }
 }
