@@ -24,34 +24,39 @@
 
 package hudson.model;
 
-import hudson.EnvVars;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import hudson.EnvVars;
 import hudson.Launcher;
 import hudson.model.RunParameterDefinition.RunParameterFilter;
 import hudson.tasks.BuildStepMonitor;
 import hudson.tasks.Publisher;
 import hudson.util.LogTaskListener;
-
-import java.util.Collections;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockFolder;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
-public class RunParameterDefinitionTest {
+@WithJenkins
+class RunParameterDefinitionTest {
 
     private static final Logger LOGGER = Logger.getLogger(Run.class.getName());
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
 
     @Issue("JENKINS-31954")
-    @Test public void configRoundtrip() throws Exception {
+    @Test
+    void configRoundtrip() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
         p.addProperty(new ParametersDefinitionProperty(new RunParameterDefinition("build", "p", "", RunParameterFilter.COMPLETED)));
         j.configRoundtrip(p);
@@ -61,13 +66,14 @@ public class RunParameterDefinitionTest {
     }
 
     @Issue("JENKINS-16462")
-    @Test public void inFolders() throws Exception {
+    @Test
+    void inFolders() throws Exception {
         MockFolder dir = j.createFolder("dir");
         MockFolder subdir = dir.createProject(MockFolder.class, "sub dir");
         FreeStyleProject p = subdir.createProject(FreeStyleProject.class, "some project");
-        p.scheduleBuild2(0).get();
-        FreeStyleBuild build2 = p.scheduleBuild2(0).get();
-        p.scheduleBuild2(0).get();
+        j.buildAndAssertSuccess(p);
+        FreeStyleBuild build2 = j.buildAndAssertSuccess(p);
+        j.buildAndAssertSuccess(p);
         String id = build2.getExternalizableId();
         assertEquals("dir/sub dir/some project#2", id);
         assertEquals(build2, Run.fromExternalizableId(id));
@@ -90,168 +96,54 @@ public class RunParameterDefinitionTest {
     }
 
     @Test
-    public void testNULLFilter() throws Exception {
+    void testNULLFilter() throws Exception {
 
         FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
 
         FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
                                                                              project.getName(),
                                                                              "run description",
                                                                              null));
         paramProject.addProperty(pdp);
 
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
         assertEquals(Integer.toString(project.getLastBuild().getNumber()),
                      build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
     }
 
-    
-    @Test
-    public void testALLFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.ALL));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(project.getLastBuild().getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
 
     @Test
-    public void testCOMPLETEDFilter() throws Exception {
+    void testALLFilter() throws Exception {
 
         FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
 
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
 
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.COMPLETED));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(abortedBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    @Test
-    public void testSUCCESSFULFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.SUCCESSFUL));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(unstableBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    
-    @Test
-    public void testSTABLEFilter() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.UNSTABLE)));
-        FreeStyleBuild unstableBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.FAILURE)));
-        FreeStyleBuild failedBuild = project.scheduleBuild2(0).get();
-
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.NOT_BUILT)));
-        FreeStyleBuild notBuiltBuild = project.scheduleBuild2(0).get();
-        
-        project.getPublishersList().replaceBy(Collections.singleton(new ResultPublisher(Result.ABORTED)));
-        FreeStyleBuild abortedBuild = project.scheduleBuild2(0).get();
-
-        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
-        ParametersDefinitionProperty pdp = 
-                new ParametersDefinitionProperty(new RunParameterDefinition("RUN", 
-                                                                             project.getName(),
-                                                                             "run description",
-                                                                             RunParameterFilter.STABLE));
-        paramProject.addProperty(pdp);
-
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
-        assertEquals(Integer.toString(successfulBuild.getNumber()),
-                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
-    }
-    
-    
-    @Test
-    public void testLoadEnvironmentVariablesWhenRunParameterJobHasBeenDeleted() throws Exception {
-
-        FreeStyleProject project = j.createFreeStyleProject("project");
-        FreeStyleBuild successfulBuild = project.scheduleBuild2(0).get();
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
 
         FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
         ParametersDefinitionProperty pdp =
@@ -261,7 +153,121 @@ public class RunParameterDefinitionTest {
                                                                              RunParameterFilter.ALL));
         paramProject.addProperty(pdp);
 
-        FreeStyleBuild build = paramProject.scheduleBuild2(0).get();
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(project.getLastBuild().getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+    @Test
+    void testCOMPLETEDFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.COMPLETED));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(abortedBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+    @Test
+    void testSUCCESSFULFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.SUCCESSFUL));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(unstableBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+
+    @Test
+    void testSTABLEFilter() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.UNSTABLE)));
+        FreeStyleBuild unstableBuild = j.buildAndAssertStatus(Result.UNSTABLE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.FAILURE)));
+        FreeStyleBuild failedBuild = j.buildAndAssertStatus(Result.FAILURE, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.NOT_BUILT)));
+        FreeStyleBuild notBuiltBuild = j.buildAndAssertStatus(Result.NOT_BUILT, project);
+
+        project.getPublishersList().replaceBy(Set.of(new ResultPublisher(Result.ABORTED)));
+        FreeStyleBuild abortedBuild = j.buildAndAssertStatus(Result.ABORTED, project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.STABLE));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
+        assertEquals(Integer.toString(successfulBuild.getNumber()),
+                     build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
+    }
+
+
+    @Test
+    void testLoadEnvironmentVariablesWhenRunParameterJobHasBeenDeleted() throws Exception {
+
+        FreeStyleProject project = j.createFreeStyleProject("project");
+        FreeStyleBuild successfulBuild = j.buildAndAssertSuccess(project);
+
+        FreeStyleProject paramProject = j.createFreeStyleProject("paramProject");
+        ParametersDefinitionProperty pdp =
+                new ParametersDefinitionProperty(new RunParameterDefinition("RUN",
+                                                                             project.getName(),
+                                                                             "run description",
+                                                                             RunParameterFilter.ALL));
+        paramProject.addProperty(pdp);
+
+        FreeStyleBuild build = j.buildAndAssertSuccess(paramProject);
         assertEquals(Integer.toString(project.getLastBuild().getNumber()),
                      build.getEnvironment(new LogTaskListener(LOGGER, Level.INFO)).get("RUN_NUMBER"));
 
@@ -275,22 +281,24 @@ public class RunParameterDefinitionTest {
 
         private final Result result;
 
-        public ResultPublisher(Result result) {
+        ResultPublisher(Result result) {
             this.result = result;
         }
 
-        public @Override
-        boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
+        @Override
+        public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
             build.setResult(result);
             return true;
         }
 
+        @Override
         public BuildStepMonitor getRequiredMonitorService() {
             return BuildStepMonitor.NONE;
         }
 
+        @Override
         public Descriptor<Publisher> getDescriptor() {
-            return new Descriptor<Publisher>(ResultPublisher.class) {};
+            return new Descriptor<>(ResultPublisher.class) {};
         }
     }
 }
