@@ -24,38 +24,38 @@
 
 package hudson.model;
 
-import com.gargoylesoftware.htmlunit.WebRequest;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.not;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import hudson.FilePath;
 import hudson.tasks.Mailer;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runners.model.Statement;
-
-import org.jvnet.hudson.test.Issue;
-import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.RestartableJenkinsRule;
-
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+import org.htmlunit.WebRequest;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.jvnet.hudson.test.Issue;
+import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.JenkinsSessionExtension;
 
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.not;
-import static org.hamcrest.core.IsEqual.equalTo;
-import static org.junit.Assert.*;
+class UserRestartTest {
 
-public class UserRestartTest {
+    @RegisterExtension
+    private final JenkinsSessionExtension sessions = new JenkinsSessionExtension();
 
-    @Rule
-    public RestartableJenkinsRule rr = new RestartableJenkinsRule();
-
-    @Test public void persistedUsers() throws Exception {
-        rr.then(r -> {
+    @Test
+    void persistedUsers() throws Throwable {
+        sessions.then(r -> {
             User bob = User.getById("bob", true);
             bob.setFullName("Bob");
             bob.addProperty(new Mailer.UserProperty("bob@nowhere.net"));
         });
-        rr.then(r -> {
+        sessions.then(r -> {
             User bob = User.getById("bob", false);
             assertNotNull(bob);
             assertEquals("Bob", bob.getFullName());
@@ -67,8 +67,8 @@ public class UserRestartTest {
 
     @Issue("JENKINS-45892")
     @Test
-    public void badSerialization() {
-        rr.then(r -> {
+    void badSerialization() throws Throwable {
+        sessions.then(r -> {
             r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
             FreeStyleProject p = r.createFreeStyleProject("p");
             User u = User.get("pqhacker");
@@ -79,14 +79,24 @@ public class UserRestartTest {
             assertThat(text, not(containsString("<fullName>Pat Q. Hacker</fullName>")));
             assertThat(text, containsString("<id>pqhacker</id>"));
         });
-        rr.then(r -> {
+        sessions.then(r -> {
             FreeStyleProject p = r.jenkins.getItemByFullName("p", FreeStyleProject.class);
+            /*
+             * User.Replacer.readResolve() is racy, as its comments acknowledge. The loading of jobs
+             * and the initialization of UserIdMapper run concurrently, and UserIdMapper may not
+             * have been initialized yet when we are loading the job. The only way for this test to
+             * work reliably is to reload the job after UserIdMapper has been initialized, thus
+             * assuring that the job's reference to the user can be properly deserialized.
+             */
+            p.doReload();
             User u = p.getProperty(BadProperty.class).user; // do not inline: call User.get second
             assertEquals(User.get("pqhacker"), u);
         });
     }
+
     static class BadProperty extends JobProperty<FreeStyleProject> {
         final User user;
+
         BadProperty(User user) {
             this.user = user;
         }
@@ -94,47 +104,41 @@ public class UserRestartTest {
 
     @Test
     @Issue("SECURITY-897")
-    public void legacyConfigMoveCannotEscapeUserFolder() {
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
-                rr.j.jenkins.setSecurityRealm(rr.j.createDummySecurityRealm());
-                assertThat(rr.j.jenkins.isUseSecurity(), equalTo(true));
+    void legacyConfigMoveCannotEscapeUserFolder() throws Throwable {
+        sessions.then(r -> {
+                r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
+                assertThat(r.jenkins.isUseSecurity(), equalTo(true));
 
                 // in order to create the folder "users"
                 User.getById("admin", true).save();
 
                 { // attempt with ".."
-                    JenkinsRule.WebClient wc = rr.j.createWebClient()
+                    JenkinsRule.WebClient wc = r.createWebClient()
                             .withThrowExceptionOnFailingStatusCode(false);
 
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(r.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("..", "any-password"));
                     wc.getPage(request);
                 }
                 { // attempt with "../users/.."
-                    JenkinsRule.WebClient wc = rr.j.createWebClient()
+                    JenkinsRule.WebClient wc = r.createWebClient()
                             .withThrowExceptionOnFailingStatusCode(false);
 
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(r.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("../users/..", "any-password"));
                     wc.getPage(request);
                 }
 
                 // security is still active
-                assertThat(rr.j.jenkins.isUseSecurity(), equalTo(true));
+                assertThat(r.jenkins.isUseSecurity(), equalTo(true));
                 // but, the config file was moved
-                FilePath rootPath = rr.j.jenkins.getRootPath();
+                FilePath rootPath = r.jenkins.getRootPath();
                 assertThat(rootPath.child("config.xml").exists(), equalTo(true));
-            }
         });
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
-                assertThat(rr.j.jenkins.isUseSecurity(), equalTo(true));
-                FilePath rootPath = rr.j.jenkins.getRootPath();
+        sessions.then(r -> {
+                assertThat(r.jenkins.isUseSecurity(), equalTo(true));
+                FilePath rootPath = r.jenkins.getRootPath();
                 assertThat(rootPath.child("config.xml").exists(), equalTo(true));
-            }
         });
     }
 
