@@ -1,18 +1,18 @@
 /*
  *  The MIT License
- * 
+ *
  *  Copyright 2011 Yahoo!, Inc.
- * 
+ *
  *  Permission is hereby granted, free of charge, to any person obtaining a copy
  *  of this software and associated documentation files (the "Software"), to deal
  *  in the Software without restriction, including without limitation the rights
  *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  *  copies of the Software, and to permit persons to whom the Software is
  *  furnished to do so, subject to the following conditions:
- * 
+ *
  *  The above copyright notice and this permission notice shall be included in
  *  all copies or substantial portions of the Software.
- * 
+ *
  *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -24,8 +24,15 @@
 
 package hudson.tasks;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.hasSize;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 import hudson.Functions;
 import hudson.Launcher;
 import hudson.Util;
@@ -33,27 +40,28 @@ import hudson.XmlFile;
 import hudson.matrix.Axis;
 import hudson.matrix.AxisList;
 import hudson.matrix.MatrixProject;
-import hudson.model.*;
+import hudson.model.AbstractBuild;
+import hudson.model.AbstractProject;
+import hudson.model.BuildListener;
+import hudson.model.Fingerprint;
+import hudson.model.FingerprintCleanupThread;
+import hudson.model.FreeStyleBuild;
+import hudson.model.FreeStyleProject;
+import hudson.model.Result;
 import hudson.util.RunList;
+import hudson.util.StreamTaskListener;
 import java.io.File;
-
-import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-
-import static org.hamcrest.Matchers.hasSize;
-import static org.junit.Assert.*;
-
-import hudson.util.StreamTaskListener;
+import java.util.Map;
 import jenkins.model.Jenkins;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
-
 import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 
 /**
@@ -61,44 +69,47 @@ import org.jvnet.hudson.test.recipes.LocalData;
  * @author dty
  */
 @SuppressWarnings("rawtypes")
-public class FingerprinterTest {
+@WithJenkins
+class FingerprinterTest {
     private static final String[] singleContents = {
-        "abcdef"
+        "abcdef",
     };
     private static final String[] singleFiles = {
-        "test.txt"
+        "test.txt",
     };
     private static final String[] singleContents2 = {
-        "ghijkl"
+        "ghijkl",
     };
     private static final String[] singleFiles2 = {
-        "test2.txt"
+        "test2.txt",
     };
     private static final String[] doubleContents = {
         "abcdef",
-        "ghijkl"
+        "ghijkl",
     };
     private static final String[] doubleFiles = {
         "test.txt",
-        "test2.txt"
+        "test2.txt",
     };
-    
+
     private static final String renamedProject1 = "renamed project 1";
     private static final String renamedProject2 = "renamed project 2";
 
-    @Rule public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
 
-    @BeforeClass
-    public static void setUp() throws Exception {
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
         Fingerprinter.enableFingerprintsInDependencyGraph = true;
     }
-    
-    @Test public void fingerprintDependencies() throws Exception {
+
+    @Test
+    void fingerprintDependencies() throws Exception {
         FreeStyleProject upstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject downstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
 
-        j.assertBuildStatusSuccess(upstream.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(downstream.scheduleBuild2(0).get());
+        j.buildAndAssertSuccess(upstream);
+        j.buildAndAssertSuccess(downstream);
 
         j.jenkins.rebuildDependencyGraph();
 
@@ -113,13 +124,14 @@ public class FingerprinterTest {
 
     private static class FingerprintAddingBuilder extends Builder {
         @Override
-        public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws InterruptedException, IOException {
-            build.addAction(new Fingerprinter.FingerprintAction(build, ImmutableMap.of(singleFiles2[0], "fakefingerprint")));
+        public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
+            build.addAction(new Fingerprinter.FingerprintAction(build, Map.of(singleFiles2[0], "fakefingerprint")));
             return true;
         }
     }
 
-    @Test public void presentFingerprintActionIsReused() throws Exception {
+    @Test
+    void presentFingerprintActionIsReused() throws Exception {
         FreeStyleProject project = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         project.getBuildersList().add(new FingerprintAddingBuilder());
 
@@ -128,17 +140,18 @@ public class FingerprinterTest {
         assertThat(build.getActions(Fingerprinter.FingerprintAction.class), hasSize(1));
 
         Fingerprinter.FingerprintAction action = build.getAction(Fingerprinter.FingerprintAction.class);
-        assertEquals(action.getRecords().keySet(), ImmutableSet.of(singleFiles2[0], singleFiles[0]));
+        assertThat(action.getRecords().keySet(), containsInAnyOrder(singleFiles2[0], singleFiles[0]));
     }
 
-    @Test public void multipleUpstreamDependencies() throws Exception {
+    @Test
+    void multipleUpstreamDependencies() throws Exception {
         FreeStyleProject upstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject upstream2 = createFreeStyleProjectWithFingerprints(singleContents2, singleFiles2);
         FreeStyleProject downstream = createFreeStyleProjectWithFingerprints(doubleContents, doubleFiles);
 
-        j.assertBuildStatusSuccess(upstream.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(upstream2.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(downstream.scheduleBuild2(0).get());
+        j.buildAndAssertSuccess(upstream);
+        j.buildAndAssertSuccess(upstream2);
+        j.buildAndAssertSuccess(downstream);
 
         j.jenkins.rebuildDependencyGraph();
 
@@ -154,14 +167,15 @@ public class FingerprinterTest {
         assertTrue(downstreamProjects.contains(downstream));
     }
 
-    @Test public void multipleDownstreamDependencies() throws Exception {
+    @Test
+    void multipleDownstreamDependencies() throws Exception {
         FreeStyleProject upstream = createFreeStyleProjectWithFingerprints(doubleContents, doubleFiles);
         FreeStyleProject downstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject downstream2 = createFreeStyleProjectWithFingerprints(singleContents2, singleFiles2);
 
-        j.assertBuildStatusSuccess(upstream.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(downstream.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(downstream2.scheduleBuild2(0).get());
+        j.buildAndAssertSuccess(upstream);
+        j.buildAndAssertSuccess(downstream);
+        j.buildAndAssertSuccess(downstream2);
 
         j.jenkins.rebuildDependencyGraph();
 
@@ -178,12 +192,13 @@ public class FingerprinterTest {
         assertTrue(downstreamProjects.contains(downstream2));
     }
 
-    @Test public void dependencyExclusion() throws Exception {
+    @Test
+    void dependencyExclusion() throws Exception {
         FreeStyleProject upstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject downstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
 
-        FreeStyleBuild upstreamBuild = j.assertBuildStatusSuccess(upstream.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(downstream.scheduleBuild2(0).get());
+        FreeStyleBuild upstreamBuild = j.buildAndAssertSuccess(upstream);
+        j.buildAndAssertSuccess(downstream);
 
         upstreamBuild.delete();
 
@@ -196,22 +211,24 @@ public class FingerprinterTest {
         assertEquals(0, downstreamProjects.size());
     }
 
-    @Test public void circularDependency() throws Exception {
+    @Test
+    void circularDependency() throws Exception {
         FreeStyleProject p = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
-        
-        j.assertBuildStatusSuccess(p.scheduleBuild2(0).get());
-        j.assertBuildStatusSuccess(p.scheduleBuild2(0).get());
-        
+
+        j.buildAndAssertSuccess(p);
+        j.buildAndAssertSuccess(p);
+
         Jenkins.get().rebuildDependencyGraph();
 
         List<AbstractProject> upstreamProjects = p.getUpstreamProjects();
         List<AbstractProject> downstreamProjects = p.getDownstreamProjects();
-        
+
         assertEquals(0, upstreamProjects.size());
         assertEquals(0, downstreamProjects.size());
     }
-    
-    @Test public void matrixDependency() throws Exception {
+
+    @Test
+    void matrixDependency() throws Exception {
         MatrixProject matrixProject = j.jenkins.createProject(MatrixProject.class, "p");
         matrixProject.setAxes(new AxisList(new Axis("foo", "a", "b")));
         FreeStyleProject freestyleProject = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
@@ -226,46 +243,48 @@ public class FingerprinterTest {
         j.jenkins.rebuildDependencyGraph();
 
         RunList<FreeStyleBuild> builds = freestyleProject.getBuilds();
-        assertEquals("There should only be one FreestyleBuild", 1, builds.size());
+        assertEquals(1, builds.size(), "There should only be one FreestyleBuild");
         FreeStyleBuild build = builds.iterator().next();
         assertEquals(Result.SUCCESS, build.getResult());
         List<AbstractProject> downstream = j.jenkins.getDependencyGraph().getDownstream(matrixProject);
-        assertTrue(downstream.contains(freestyleProject));        
+        assertTrue(downstream.contains(freestyleProject));
         List<AbstractProject> upstream = j.jenkins.getDependencyGraph().getUpstream(freestyleProject);
         assertTrue(upstream.contains(matrixProject));
     }
 
-    @Test public void projectRename() throws Exception {
+    @Test
+    void projectRename() throws Exception {
         FreeStyleProject upstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject downstream = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
 
-        FreeStyleBuild upstreamBuild = j.assertBuildStatusSuccess(upstream.scheduleBuild2(0).get());
-        FreeStyleBuild downstreamBuild = j.assertBuildStatusSuccess(downstream.scheduleBuild2(0).get());
+        FreeStyleBuild upstreamBuild = j.buildAndAssertSuccess(upstream);
+        FreeStyleBuild downstreamBuild = j.buildAndAssertSuccess(downstream);
 
         String oldUpstreamName = upstream.getName();
-        String oldDownstreamName = downstream.getName();
-        
+
         // Verify that owner entry in fingerprint record is changed
         // after source project is renamed
         upstream.renameTo(renamedProject1);
         Fingerprinter.FingerprintAction action = upstreamBuild.getAction(Fingerprinter.FingerprintAction.class);
         assertNotNull(action);
         Collection<Fingerprint> fingerprints = action.getFingerprints().values();
-        for (Fingerprint f: fingerprints) {
+        for (Fingerprint f : fingerprints) {
             assertTrue(f.getOriginal().is(upstream));
-            assertTrue(f.getOriginal().getName().equals(renamedProject1));
-            assertFalse(f.getOriginal().getName().equals(oldUpstreamName));
+            assertEquals(renamedProject1, f.getOriginal().getName());
+            assertNotEquals(f.getOriginal().getName(), oldUpstreamName);
         }
-        
+
         action = downstreamBuild.getAction(Fingerprinter.FingerprintAction.class);
         assertNotNull(action);
         fingerprints = action.getFingerprints().values();
-        for (Fingerprint f: fingerprints) {
+        for (Fingerprint f : fingerprints) {
             assertTrue(f.getOriginal().is(upstream));
-            assertEquals(f.getOriginal().getName(), renamedProject1);
+            assertEquals(renamedProject1, f.getOriginal().getName());
             assertNotEquals(f.getOriginal().getName(), oldUpstreamName);
         }
-         
+
+        String oldDownstreamName = downstream.getName();
+
         // Verify that usage entry in fingerprint record is changed after
         // sink project is renamed
         downstream.renameTo(renamedProject2);
@@ -273,9 +292,9 @@ public class FingerprinterTest {
         action = upstreamBuild.getAction(Fingerprinter.FingerprintAction.class);
         assertNotNull(action);
         fingerprints = action.getFingerprints().values();
-        for (Fingerprint f: fingerprints) {
+        for (Fingerprint f : fingerprints) {
             List<String> jobs = f.getJobs();
-            
+
             assertTrue(jobs.contains(renamedProject2));
             assertFalse(jobs.contains(oldDownstreamName));
         }
@@ -283,9 +302,9 @@ public class FingerprinterTest {
         action = downstreamBuild.getAction(Fingerprinter.FingerprintAction.class);
         assertNotNull(action);
         fingerprints = action.getFingerprints().values();
-        for (Fingerprint f: fingerprints) {
+        for (Fingerprint f : fingerprints) {
             List<String> jobs = f.getJobs();
-            
+
             assertTrue(jobs.contains(renamedProject2));
             assertFalse(jobs.contains(oldDownstreamName));
         }
@@ -293,7 +312,8 @@ public class FingerprinterTest {
 
     @Issue("JENKINS-17125")
     @LocalData
-    @Test public void actionSerialization() throws Exception {
+    @Test
+    void actionSerialization() throws Exception {
         FreeStyleProject job = j.jenkins.getItemByFullName(Functions.isWindows() ? "j-windows" : "j", FreeStyleProject.class);
         assertNotNull(job);
         FreeStyleBuild build = job.getBuildByNumber(2);
@@ -306,7 +326,7 @@ public class FingerprinterTest {
         } else {
             assertEquals("{a=2d5fac981a2e865baf0e15db655c7d63}", action.getRecords().toString());
         }
-        j.assertBuildStatusSuccess(job.scheduleBuild2(0));
+        j.buildAndAssertSuccess(job);
         job._getRuns().purgeCache(); // force build records to be reloaded
         build = job.getBuildByNumber(3);
         assertNotNull(build);
@@ -325,25 +345,25 @@ public class FingerprinterTest {
     // TODO randomly fails: for p3.upstreamProjects expected:<[hudson.model.FreeStyleProject@590e5b8[test0]]> but was:<[]>
     @Issue("JENKINS-18417")
     @Test
-    public void fingerprintCleanup() throws Exception {
+    void fingerprintCleanup() throws Exception {
         // file names shouldn't matter
         FreeStyleProject p1 = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
         FreeStyleProject p2 = createFreeStyleProjectWithFingerprints(singleContents, singleFiles2);
         FreeStyleProject p3 = createFreeStyleProjectWithFingerprints(singleContents, singleFiles);
 
-        j.assertBuildStatusSuccess(p1.scheduleBuild2(0));
-        j.assertBuildStatusSuccess(p2.scheduleBuild2(0));
-        j.assertBuildStatusSuccess(p3.scheduleBuild2(0));
+        j.buildAndAssertSuccess(p1);
+        j.buildAndAssertSuccess(p2);
+        j.buildAndAssertSuccess(p3);
 
-        Fingerprint f = j.jenkins._getFingerprint(Util.getDigestOf(singleContents[0]+System.lineSeparator()));
+        Fingerprint f = j.jenkins._getFingerprint(Util.getDigestOf(singleContents[0] + System.lineSeparator()));
         assertNotNull(f);
-        assertEquals(3,f.getUsages().size());
+        assertEquals(3, f.getUsages().size());
 
         j.jenkins.rebuildDependencyGraph();
 
-        assertEquals(Arrays.asList(p1), p2.getUpstreamProjects());
-        assertEquals(Arrays.asList(p1), p3.getUpstreamProjects());
-        assertEquals(new HashSet(Arrays.asList(p2,p3)), new HashSet(p1.getDownstreamProjects()));
+        assertEquals(List.of(p1), p2.getUpstreamProjects());
+        assertEquals(List.of(p1), p3.getUpstreamProjects());
+        assertEquals(new HashSet(Arrays.asList(p2, p3)), new HashSet(p1.getDownstreamProjects()));
 
         // discard the p3 records
         p3.delete();
@@ -352,48 +372,48 @@ public class FingerprinterTest {
         j.jenkins.rebuildDependencyGraph();
 
         // records for p3 should have been deleted now
-        assertEquals(2,f.getUsages().size());
-        assertEquals(Arrays.asList(p1), p2.getUpstreamProjects());
-        assertEquals(Arrays.asList(p2), p1.getDownstreamProjects());
+        assertEquals(2, f.getUsages().size());
+        assertEquals(List.of(p1), p2.getUpstreamProjects());
+        assertEquals(List.of(p2), p1.getDownstreamProjects());
 
 
         // do a new build in p2 #2 that points to a separate fingerprints
         p2.getBuildersList().clear();
         p2.getPublishersList().clear();
-        addFingerprinterToProject(p2,singleContents2,singleFiles2);
-        j.assertBuildStatusSuccess(p2.scheduleBuild2(0));
+        addFingerprinterToProject(p2, singleContents2, singleFiles2);
+        j.buildAndAssertSuccess(p2);
 
         // another garbage collection that gets rid of p2 records from the fingerprint
         p2.getBuildByNumber(1).delete();
         new FingerprintCleanupThread().execute(StreamTaskListener.fromStdout());
 
-        assertEquals(1,f.getUsages().size());
+        assertEquals(1, f.getUsages().size());
     }
 
-    
-    private FreeStyleProject createFreeStyleProjectWithFingerprints(String[] contents, String[] files) throws IOException, Exception {
+
+    private FreeStyleProject createFreeStyleProjectWithFingerprints(String[] contents, String[] files) throws Exception {
         FreeStyleProject project = j.createFreeStyleProject();
 
         addFingerprinterToProject(project, contents, files);
-        
+
         return project;
     }
-    
-    private void addFingerprinterToProject(AbstractProject<?, ?> project, String[] contents, String[] files) throws Exception {
+
+    private void addFingerprinterToProject(AbstractProject<?, ?> project, String[] contents, String[] files) {
         StringBuilder targets = new StringBuilder();
         for (int i = 0; i < contents.length; i++) {
             if (project instanceof MatrixProject) {
-                ((MatrixProject)project).getBuildersList().add(
+                ((MatrixProject) project).getBuildersList().add(
                         Functions.isWindows()
                                 ? new BatchFile("echo " + contents[i] + "> " + files[i])
                                 : new Shell("echo " + contents[i] + " > " + files[i]));
             } else {
-                ((FreeStyleProject)project).getBuildersList().add(
+                ((FreeStyleProject) project).getBuildersList().add(
                         Functions.isWindows()
                                 ? new BatchFile("echo " + contents[i] + "> " + files[i])
                                 : new Shell("echo " + contents[i] + " > " + files[i]));
             }
-            
+
             targets.append(files[i]).append(',');
         }
 
