@@ -21,158 +21,143 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.security;
 
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlTextInput;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.xml.HasXPath.hasXPath;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+
 import hudson.ExtensionComponent;
 import hudson.model.User;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+import java.util.concurrent.atomic.AtomicReference;
 import jenkins.ExtensionFilter;
 import jenkins.model.GlobalConfiguration;
 import jenkins.model.Jenkins;
 import jenkins.security.apitoken.ApiTokenPropertyConfiguration;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runners.model.Statement;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlTextInput;
+import org.htmlunit.xml.XmlPage;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
-import org.jvnet.hudson.test.RestartableJenkinsRule;
 import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.JenkinsSessionExtension;
 
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
-import java.util.Base64;
-import java.util.concurrent.atomic.AtomicReference;
+class BasicHeaderApiTokenAuthenticatorTest {
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.xml.HasXPath.hasXPath;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
+    @RegisterExtension
+    private final JenkinsSessionExtension sessions = new JenkinsSessionExtension();
 
-public class BasicHeaderApiTokenAuthenticatorTest {
-    @Rule
-    public RestartableJenkinsRule rr = new RestartableJenkinsRule();
-    
     @Test
     @Issue("SECURITY-896")
-    public void legacyToken_regularCase() {
+    void legacyToken_regularCase() throws Throwable {
         AtomicReference<String> token = new AtomicReference<>();
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
+        sessions.then(j -> {
                 enableLegacyTokenGenerationOnUserCreation();
-                configureSecurity();
-                
+                configureSecurity(j);
+
                 {
-                    JenkinsRule.WebClient wc = rr.j.createWebClient();
+                    JenkinsRule.WebClient wc = j.createWebClient();
                     // default SecurityListener will save the user when adding the LastGrantedAuthoritiesProperty
                     // and so the user is persisted
                     wc.login("user1");
-                    HtmlPage page = wc.goTo("user/user1/configure");
+                    HtmlPage page = wc.goTo("user/user1/security/");
                     String tokenValue = ((HtmlTextInput) page.getDocumentElement().querySelector("#apiToken")).getText();
                     token.set(tokenValue);
                 }
-            }
         });
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
+        sessions.then(j -> {
                 User user = User.getById("user1", false);
                 assertNotNull(user);
-                
-                JenkinsRule.WebClient wc = rr.j.createWebClient();
+
+                JenkinsRule.WebClient wc = j.createWebClient();
                 wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
-                
+
                 { // for invalid token, no effect
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", "invalid-token"));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
                 { // for invalid user, no effect
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user-not-valid", token.get()));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
-    
+
                 assertNull(User.getById("user-not-valid", false));
-                
+
                 { // valid user with valid token, ok
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", token.get()));
                     XmlPage xmlPage = wc.getPage(request);
                     assertThat(xmlPage, hasXPath("//name", is("user1")));
                 }
-            }
         });
     }
-    
+
     /*
      * The user is not saved after login without the default SecurityListener#fireAuthenticated
      */
     @Test
     @Issue("SECURITY-896")
-    public void legacyToken_withoutLastGrantedAuthorities() {
+    void legacyToken_withoutLastGrantedAuthorities() throws Throwable {
         AtomicReference<String> token = new AtomicReference<>();
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
+        sessions.then(j -> {
                 enableLegacyTokenGenerationOnUserCreation();
-                configureSecurity();
-                
+                configureSecurity(j);
+
                 {
-                    JenkinsRule.WebClient wc = rr.j.createWebClient();
+                    JenkinsRule.WebClient wc = j.createWebClient();
                     wc.login("user1");
-                    HtmlPage page = wc.goTo("user/user1/configure");
+                    HtmlPage page = wc.goTo("user/user1/security/");
                     String tokenValue = ((HtmlTextInput) page.getDocumentElement().querySelector("#apiToken")).getText();
                     token.set(tokenValue);
                 }
-            }
         });
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
+        sessions.then(j -> {
                 User user = User.getById("user1", false);
                 assertNull(user);
-                
-                JenkinsRule.WebClient wc = rr.j.createWebClient();
+
+                JenkinsRule.WebClient wc = j.createWebClient();
                 wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
-                
+
                 { // for invalid token, no effect
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", "invalid-token"));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
                 { // for invalid user, no effect
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user-not-valid", token.get()));
                     assertThat(wc.getPage(request).getWebResponse().getStatusCode(), equalTo(401));
                 }
-    
+
                 assertNull(User.getById("user1", false));
                 assertNull(User.getById("user-not-valid", false));
-                
+
                 { // valid user with valid token, ok
-                    WebRequest request = new WebRequest(new URL(rr.j.jenkins.getRootUrl() + "whoAmI/api/xml"));
+                    WebRequest request = new WebRequest(new URI(j.jenkins.getRootUrl() + "whoAmI/api/xml").toURL());
                     request.setAdditionalHeader("Authorization", base64("user1", token.get()));
                     XmlPage xmlPage = wc.getPage(request);
                     assertThat(xmlPage, hasXPath("//name", is("user1")));
                 }
-            }
         });
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
+        sessions.then(j -> {
                 User user = User.getById("user1", false);
                 assertNull(user);
-            }
         });
     }
-    
+
     @TestExtension("legacyToken_withoutLastGrantedAuthorities")
     public static class RemoveDefaultSecurityListener extends ExtensionFilter {
         @Override
@@ -180,22 +165,22 @@ public class BasicHeaderApiTokenAuthenticatorTest {
             return !SecurityListener.class.isAssignableFrom(type);
         }
     }
-    
-    private void enableLegacyTokenGenerationOnUserCreation() throws Exception {
+
+    private static void enableLegacyTokenGenerationOnUserCreation() {
         ApiTokenPropertyConfiguration apiTokenConfiguration = GlobalConfiguration.all().getInstance(ApiTokenPropertyConfiguration.class);
         // by default it's false
         apiTokenConfiguration.setTokenGenerationOnCreationEnabled(true);
     }
-    
-    private void configureSecurity() throws Exception {
-        rr.j.jenkins.setSecurityRealm(rr.j.createDummySecurityRealm());
-        rr.j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy()
+
+    private static void configureSecurity(JenkinsRule j) throws Exception {
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy()
                 .grant(Jenkins.ADMINISTER).everywhere().toEveryone());
-        
-        rr.j.jenkins.save();
+
+        j.jenkins.save();
     }
-    
-    private String base64(String login, String password) {
+
+    private static String base64(String login, String password) {
         return "Basic " + Base64.getEncoder().encodeToString((login + ":" + password).getBytes(StandardCharsets.UTF_8));
     }
 }
