@@ -21,64 +21,61 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.security.apitoken;
 
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
-import com.gargoylesoftware.htmlunit.html.HtmlSpan;
-import com.gargoylesoftware.htmlunit.util.NameValuePair;
-import com.gargoylesoftware.htmlunit.xml.XmlPage;
-import hudson.model.User;
-import jenkins.security.ApiTokenProperty;
-import net.sf.json.JSONObject;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runners.model.Statement;
-import org.jvnet.hudson.test.For;
-import org.jvnet.hudson.test.Issue;
-import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.JenkinsRule.WebClient;
-import org.jvnet.hudson.test.RestartableJenkinsRule;
-
-import java.io.File;
-import java.net.URL;
-import java.util.Arrays;
-import java.util.concurrent.atomic.AtomicReference;
-
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.xml.HasXPath.hasXPath;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import hudson.model.User;
+import java.io.File;
+import java.net.URI;
+import java.net.URL;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicReference;
+import jenkins.security.ApiTokenProperty;
+import net.sf.json.JSONObject;
+import org.htmlunit.FailingHttpStatusCodeException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.html.HtmlPage;
+import org.htmlunit.html.HtmlSpan;
+import org.htmlunit.util.NameValuePair;
+import org.htmlunit.xml.XmlPage;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.jvnet.hudson.test.For;
+import org.jvnet.hudson.test.Issue;
+import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.JenkinsRule.WebClient;
+import org.jvnet.hudson.test.junit.jupiter.JenkinsSessionExtension;
 
 @For(ApiTokenStats.class)
-public class ApiTokenStatsRestartTest {
-    
-    @Rule
-    public RestartableJenkinsRule rr = new RestartableJenkinsRule();
-    
+class ApiTokenStatsRestartTest {
+
+    @RegisterExtension
+    private final JenkinsSessionExtension sessions = new JenkinsSessionExtension();
+
     @Test
     @Issue("SECURITY-1072")
-    public void roundtripWithRestart() throws Exception {
+    void roundtripWithRestart() throws Throwable {
         AtomicReference<String> tokenValue = new AtomicReference<>();
         AtomicReference<String> tokenUuid = new AtomicReference<>();
         String TOKEN_NAME = "New Token Name";
         int NUM_CALL_WITH_TOKEN = 5;
-        
-        rr.addStep(new Statement() {
-               @Override
-               public void evaluate() throws Throwable {
-                   JenkinsRule j = rr.j;
+
+        sessions.then(j -> {
                    j.jenkins.setCrumbIssuer(null);
                    j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
-                   
+
                    User u = User.getById("foo", true);
 
                    ApiTokenProperty t = u.getProperty(ApiTokenProperty.class);
@@ -89,8 +86,8 @@ public class ApiTokenStatsRestartTest {
                    WebClient wc = j.createWebClient().withBasicCredentials(u.getId());
                    wc.getOptions().setThrowExceptionOnFailingStatusCode(false);
 
-                   WebRequest request = new WebRequest(new URL(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken"), HttpMethod.POST);
-                   request.setRequestParameters(Arrays.asList(new NameValuePair("newTokenName", TOKEN_NAME)));
+                   WebRequest request = new WebRequest(new URI(j.getURL() + "user/" + u.getId() + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/generateNewToken").toURL(), HttpMethod.POST);
+                   request.setRequestParameters(List.of(new NameValuePair("newTokenName", TOKEN_NAME)));
 
                    Page page = wc.getPage(request);
                    assertEquals(200, page.getWebResponse().getStatusCode());
@@ -106,7 +103,7 @@ public class ApiTokenStatsRestartTest {
                    WebClient restWc = j.createWebClient().withBasicCredentials(u.getId(), tokenValue.get());
                    checkUserIsConnected(restWc, u.getId());
 
-                   HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+                   HtmlPage config = wc.goTo(u.getUrl() + "/security/");
                    assertEquals(200, config.getWebResponse().getStatusCode());
                    assertThat(config.getWebResponse().getContentAsString(), containsString(tokenUuid.get()));
                    assertThat(config.getWebResponse().getContentAsString(), containsString(tokenName));
@@ -116,69 +113,60 @@ public class ApiTokenStatsRestartTest {
                        restWc.goToXml("whoAmI/api/xml");
                    }
 
-                   HtmlPage configWithStats = wc.goTo(u.getUrl() + "/configure");
+                   HtmlPage configWithStats = wc.goTo(u.getUrl() + "/security/");
                    assertEquals(200, configWithStats.getWebResponse().getStatusCode());
                    HtmlSpan useCounterSpan = configWithStats.getDocumentElement().getOneHtmlElementByAttribute("span", "class", "token-use-counter");
                    assertThat(useCounterSpan.getTextContent(), containsString("" + NUM_CALL_WITH_TOKEN));
 
                    File apiTokenStatsFile = new File(u.getUserFolder(), "apiTokenStats.xml");
-                   assertTrue("apiTokenStats.xml file should exist", apiTokenStatsFile.exists());
-               }
+                   assertTrue(apiTokenStatsFile.exists(), "apiTokenStats.xml file should exist");
            });
-    
-        rr.addStep(new Statement() {
-            @Override
-            public void evaluate() throws Throwable {
-                JenkinsRule j = rr.j;
+
+        sessions.then(j -> {
                 j.jenkins.setCrumbIssuer(null);
-                
+
                 User u = User.getById("foo", false);
                 assertNotNull(u);
-    
+
                 WebClient wc = j.createWebClient().login(u.getId());
                 checkUserIsConnected(wc, u.getId());
-    
-                HtmlPage config = wc.goTo(u.getUrl() + "/configure");
+
+                HtmlPage config = wc.goTo(u.getUrl() + "/security/");
                 assertEquals(200, config.getWebResponse().getStatusCode());
                 assertThat(config.getWebResponse().getContentAsString(), containsString(tokenUuid.get()));
                 assertThat(config.getWebResponse().getContentAsString(), containsString(TOKEN_NAME));
                 HtmlSpan useCounterSpan = config.getDocumentElement().getOneHtmlElementByAttribute("span", "class", "token-use-counter");
                 assertThat(useCounterSpan.getTextContent(), containsString("" + NUM_CALL_WITH_TOKEN));
-                
-                revokeToken(wc, u.getId(), tokenUuid.get());
-                
+
+                revokeToken(j, wc, u.getId(), tokenUuid.get());
+
                 // token is no more valid
                 WebClient restWc = j.createWebClient().withBasicCredentials(u.getId(), tokenValue.get());
                 checkUserIsNotConnected(restWc);
-                
-                HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/configure");
+
+                HtmlPage configWithoutToken = wc.goTo(u.getUrl() + "/security/");
                 assertEquals(200, configWithoutToken.getWebResponse().getStatusCode());
                 assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(tokenUuid.get())));
                 assertThat(configWithoutToken.getWebResponse().getContentAsString(), not(containsString(TOKEN_NAME)));
-            }
         });
     }
-    
-    private void checkUserIsConnected(WebClient wc, String username) throws Exception {
+
+    private static void checkUserIsConnected(WebClient wc, String username) throws Exception {
         XmlPage xmlPage = wc.goToXml("whoAmI/api/xml");
         assertThat(xmlPage, hasXPath("//name", is(username)));
         assertThat(xmlPage, hasXPath("//anonymous", is("false")));
         assertThat(xmlPage, hasXPath("//authenticated", is("true")));
         assertThat(xmlPage, hasXPath("//authority", is("authenticated")));
     }
-    
-    private void checkUserIsNotConnected(WebClient wc) throws Exception {
-        try {
-            wc.goToXml("whoAmI/api/xml");
-            fail();
-        } catch (FailingHttpStatusCodeException e) {
-            assertEquals(401, e.getStatusCode());
-        }
+
+    private static void checkUserIsNotConnected(WebClient wc) {
+        FailingHttpStatusCodeException e = assertThrows(FailingHttpStatusCodeException.class, () -> wc.goToXml("whoAmI/api/xml"));
+        assertEquals(401, e.getStatusCode());
     }
-    
-    private void revokeToken(WebClient wc, String login, String tokenUuid) throws Exception {
+
+    private static void revokeToken(JenkinsRule j, WebClient wc, String login, String tokenUuid) throws Exception {
         WebRequest request = new WebRequest(
-                new URL(rr.j.getURL(), "user/" + login + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/revoke/?tokenUuid=" + tokenUuid),
+                new URL(j.getURL(), "user/" + login + "/descriptorByName/" + ApiTokenProperty.class.getName() + "/revoke/?tokenUuid=" + tokenUuid),
                 HttpMethod.POST
         );
         Page p = wc.getPage(request);
