@@ -21,69 +21,71 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.security.stapler;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebRequest;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
+
 import hudson.Functions;
-import org.junit.Assume;
-import org.junit.Rule;
-import org.junit.Test;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.TestPluginManager;
-
-import java.net.HttpURLConnection;
-import java.net.URL;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 @Issue("SECURITY-914")
-public class Security914Test {
-    
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
-    
+@WithJenkins
+class Security914Test {
+
+    private JenkinsRule j;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
+    }
+
     @Test
-    public void cannotUseInvalidLocale_toTraverseFolder() throws Exception {
-        Assume.assumeTrue(Functions.isWindows());
-        
-        if (j.jenkins.pluginManager.getPlugin("credentials") == null) {
-            ((TestPluginManager) j.jenkins.pluginManager).installDetachedPlugin("credentials");
-        }
-        j.createWebClient().goTo("plugin/credentials/images/24x24/credentials.png", "image/png");
-        
+    void cannotUseInvalidLocale_toTraverseFolder() throws Exception {
+        assumeTrue(Functions.isWindows());
+
+        assertNotNull(j.getPluginManager().getPlugin("credentials"));
+        j.createWebClient().goTo("plugin/credentials/images/credentials.svg", "image/svg+xml");
+
         JenkinsRule.WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
-        WebRequest request = new WebRequest(new URL(j.getURL() + "plugin/credentials/.xml"));
+        WebRequest request = new WebRequest(new URI(j.getURL() + "plugin/credentials/.xml").toURL());
         // plugin deployed in: test\target\jenkins7375296945862059919tmp
         // rootDir is in     : test\target\jenkinsTests.tmp\jenkins1274934531848159942test
         // j.jenkins.getRootDir().getName() = jenkins1274934531848159942test
         request.setAdditionalHeader("Accept-Language", "../../../../jenkinsTests.tmp/" + j.jenkins.getRootDir().getName() + "/config");
-        
+
         Page p = wc.getPage(request);
         assertEquals(HttpURLConnection.HTTP_NOT_FOUND, p.getWebResponse().getStatusCode());
-        assertNotEquals(p.getWebResponse().getContentType(), "application/xml");
+        assertNotEquals("application/xml", p.getWebResponse().getContentType());
     }
-    
+
     @Test
-    public void cannotUseInvalidLocale_toAnyFileInSystem() throws Exception {
-        Assume.assumeTrue(Functions.isWindows());
-        
-        if (j.jenkins.pluginManager.getPlugin("credentials") == null) {
-            ((TestPluginManager) j.jenkins.pluginManager).installDetachedPlugin("credentials");
-        }
-        j.createWebClient().goTo("plugin/credentials/images/24x24/credentials.png", "image/png");
-        
+    void cannotUseInvalidLocale_toAnyFileInSystem() throws Exception {
+        assumeTrue(Functions.isWindows());
+
+        assertNotNull(j.getPluginManager().getPlugin("credentials"));
+        j.createWebClient().goTo("plugin/credentials/images/credentials.svg", "image/svg+xml");
+
         JenkinsRule.WebClient wc = j.createWebClient()
                 .withThrowExceptionOnFailingStatusCode(false);
-        WebRequest request = new WebRequest(new URL(j.getURL() + "plugin/credentials/.ini"));
+        WebRequest request = new WebRequest(new URI(j.getURL() + "plugin/credentials/.ini").toURL());
         // ../ can be multiply to infinity, no impact, we just need to have enough to reach the root
         request.setAdditionalHeader("Accept-Language", "../../../../../../../../../../../../windows/win");
-        
+
         Page p = wc.getPage(request);
         assertEquals(HttpURLConnection.HTTP_NOT_FOUND, p.getWebResponse().getStatusCode());
-        assertEquals(p.getWebResponse().getContentType(), "text/html");
+        assertEquals("text/html", p.getWebResponse().getContentType());
     }
 }
