@@ -24,7 +24,12 @@
 
 package jenkins.triggers;
 
-import com.google.common.collect.ImmutableMap;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.not;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import hudson.model.Cause;
 import hudson.model.Computer;
 import hudson.model.FreeStyleBuild;
@@ -35,48 +40,37 @@ import hudson.model.Result;
 import hudson.model.Run;
 import hudson.model.User;
 import hudson.tasks.BuildTrigger;
-import hudson.tasks.BuildTriggerTest;
 import hudson.triggers.Trigger;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
+import java.util.Set;
 import jenkins.model.Jenkins;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
-import org.acegisecurity.Authentication;
-
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.core.IsNot.not;
-import static org.junit.Assert.*;
-import org.junit.Before;
-import org.junit.ClassRule;
-
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.BuildWatcher;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.MockQueueItemAuthenticator;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
+@WithJenkins
 public class ReverseBuildTriggerTest {
 
-    @ClassRule
-    public static BuildWatcher buildWatcher = new BuildWatcher();
+    private JenkinsRule r;
 
-    @Rule public JenkinsRule r = new JenkinsRule();
-
-    @Before
-    public void runMoreQuickly() throws Exception {
+    @BeforeEach
+    void setUp(JenkinsRule rule) throws Exception {
+        r = rule;
         r.jenkins.setQuietPeriod(0);
     }
 
-    @Test public void configRoundtrip() throws Exception {
+    @Test
+    void configRoundtrip() throws Exception {
         r.createFreeStyleProject("upstream");
         FreeStyleProject downstream = r.createFreeStyleProject("downstream");
         FreeStyleProject wayDownstream = r.createFreeStyleProject("wayDownstream");
         downstream.addTrigger(new ReverseBuildTrigger("upstream", Result.SUCCESS));
-        downstream.getPublishersList().add(new BuildTrigger(Collections.singleton(wayDownstream), Result.SUCCESS));
+        downstream.getPublishersList().add(new BuildTrigger(Set.of(wayDownstream), Result.SUCCESS));
         downstream.save();
         r.configRoundtrip(downstream);
         ReverseBuildTrigger rbt = downstream.getTrigger(ReverseBuildTrigger.class);
@@ -85,19 +79,19 @@ public class ReverseBuildTriggerTest {
         assertEquals(Result.SUCCESS, rbt.getThreshold());
         BuildTrigger bt = downstream.getPublishersList().get(BuildTrigger.class);
         assertNotNull(bt);
-        assertEquals(Collections.singletonList(wayDownstream), bt.getChildProjects(downstream));
+        assertEquals(List.of(wayDownstream), bt.getChildProjects(downstream));
         assertEquals(Result.SUCCESS, bt.getThreshold());
     }
 
-    /** @see BuildTriggerTest#downstreamProjectSecurity */
-    @Test public void upstreamProjectSecurity() throws Exception {
+    @Test
+    void upstreamProjectSecurity() throws Exception {
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         MockAuthorizationStrategy auth = new MockAuthorizationStrategy()
                 .grant(Jenkins.READ).everywhere().to("alice", "bob")
                 .grant(Computer.BUILD).everywhere().to("alice", "bob")
                 .grant(Jenkins.ADMINISTER).everywhere().to("admin");
         r.jenkins.setAuthorizationStrategy(auth);
-        String upstreamName = "upstr3@m"; // do not clash with English messages!
+        String upstreamName = "upstr3am"; // do not clash with English messages!
         final FreeStyleProject upstream = r.createFreeStyleProject(upstreamName);
         String downstreamName = "d0wnstr3am";
         FreeStyleProject downstream = r.createFreeStyleProject(downstreamName);
@@ -107,43 +101,53 @@ public class ReverseBuildTriggerTest {
         downstream.addTrigger(t);
         t.start(downstream, true); // as in AbstractProject.submit
         r.jenkins.rebuildDependencyGraph(); // as in AbstractProject.doConfigSubmit
-        assertEquals(Collections.singletonList(downstream), upstream.getDownstreamProjects());
+        assertEquals(List.of(downstream), upstream.getDownstreamProjects());
         // TODO could check doCheckUpstreamProjects, though it is not terribly interesting
         // Legacy mode: alice has no read permission on upstream but it works anyway
         FreeStyleBuild b = r.buildAndAssertSuccess(upstream);
         r.assertLogContains(downstreamName, b);
         r.waitUntilNoActivity();
-        assertNotNull(JenkinsRule.getLog(b), downstream.getLastBuild());
+        assertNotNull(downstream.getLastBuild(), JenkinsRule.getLog(b));
         assertEquals(1, downstream.getLastBuild().number);
         // A QIA is configured but does not specify any authentication for downstream, so upstream should not trigger it:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(ImmutableMap.of(upstreamName, User.get("admin").impersonate(), downstreamName, Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .add(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("admin").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogContains(downstreamName, b);
         r.assertLogContains(Messages.ReverseBuildTrigger_running_as_cannot_even_see_for_trigger_f("anonymous", upstreamName, downstreamName), b);
         r.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Auth for upstream is defined but cannot see downstream, so no message is printed about it:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(ImmutableMap.of(upstreamName, User.get("bob").impersonate(), downstreamName, Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Alice can see upstream, so downstream gets built, but the upstream build cannot see downstream:
         auth.grant(Item.READ).onItems(upstream).to("alice", "bob");
-        Map<String,Authentication> qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
         assertEquals(2, downstream.getLastBuild().number);
         assertEquals(new Cause.UpstreamCause((Run) b), downstream.getLastBuild().getCause(Cause.UpstreamCause.class));
         // Now if upstream build is permitted to report on downstream:
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("admin").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("admin").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogContains(downstreamName, b);
         r.waitUntilNoActivity();
@@ -159,10 +163,11 @@ public class ReverseBuildTriggerTest {
                 .grant(Item.DISCOVER).onItems(upstream).to("alice");
         r.jenkins.setAuthorizationStrategy(auth);
         auth.grant(Item.READ).onItems(downstream).to("alice");
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
@@ -172,10 +177,11 @@ public class ReverseBuildTriggerTest {
         // so no message is printed about it, and no Exception neither (JENKINS-42707)
         auth.grant(Item.READ).onItems(upstream).to("bob");
         auth.grant(Item.DISCOVER).onItems(upstream).to("anonymous");
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, Jenkins.ANONYMOUS);
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.assertLogNotContains("Please login to access job " + upstreamName, b);
@@ -183,26 +189,31 @@ public class ReverseBuildTriggerTest {
         assertEquals(3, downstream.getLastBuild().number);
     }
 
-    @Issue("JENKINS-29876")
+    @Issue({"JENKINS-29876", "JENKINS-39044", "https://github.com/jenkinsci/jenkins/issues/17611"})
     @Test
-    public void nullJobInTriggerNotCausesNPE() throws Exception {
+    void nullJobInTriggerNotCausesNPE() throws Exception {
         final FreeStyleProject upstreamJob = r.createFreeStyleProject("upstream");
 
         //job with trigger.job == null
         final FreeStyleProject downstreamJob1 = r.createFreeStyleProject("downstream1");
-        final ReverseBuildTrigger reverseBuildTrigger = new ReverseBuildTrigger("upstream", Result.SUCCESS);
+        final ReverseBuildTrigger reverseBuildTrigger = new ReverseBuildTrigger("upstream");
         downstreamJob1.addTrigger(reverseBuildTrigger);
         downstreamJob1.save();
 
         //job with trigger.job != null
         final FreeStyleProject downstreamJob2 = r.createFreeStyleProject("downstream2");
-        final ReverseBuildTrigger reverseBuildTrigger2 = new ReverseBuildTrigger("upstream", Result.SUCCESS);
+        final ReverseBuildTrigger reverseBuildTrigger2 = new ReverseBuildTrigger("upstream");
         downstreamJob2.addTrigger(reverseBuildTrigger2);
         downstreamJob2.save();
         r.configRoundtrip(downstreamJob2);
 
         r.jenkins.rebuildDependencyGraph();
-        final FreeStyleBuild build = upstreamJob.scheduleBuild2(0).get();
+
+        // JENKINS-39044 - NPE if trigger threshold is null
+        ReverseBuildTrigger trigger = downstreamJob2.getTrigger(ReverseBuildTrigger.class);
+        trigger.setThreshold(null);
+
+        final FreeStyleBuild build = r.buildAndAssertSuccess(upstreamJob);
         r.waitUntilNoActivity();
 
         r.assertLogNotContains("java.lang.NullPointerException", build);
@@ -212,7 +223,7 @@ public class ReverseBuildTriggerTest {
 
     @Issue("JENKINS-45909")
     @Test
-    public void nullUpstreamProjectsNoNPE() throws Exception {
+    void nullUpstreamProjectsNoNPE() throws Exception {
         //job with trigger.upstreamProjects == null
         final FreeStyleProject downstreamJob1 = r.createFreeStyleProject("downstream1");
         ReverseBuildTrigger trigger = new ReverseBuildTrigger(null);
@@ -227,7 +238,7 @@ public class ReverseBuildTriggerTest {
 
     @Issue("JENKINS-46161")
     @Test
-    public void testGetUpstreamProjectsShouldNullSafe() throws Exception {
+    void testGetUpstreamProjectsShouldNullSafe() {
         ReverseBuildTrigger trigger1 = new ReverseBuildTrigger(null);
         String upstream1 = trigger1.getUpstreamProjects();
         assertEquals("", upstream1);
